--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/01.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/01.md
@@ -3,100 +3,86 @@ title = "०१"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/01/01_AshvalAyana_gRhya_sUtram.md">
-<details open><summary><h3>01 उक्तानि वैतानिकानि ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उक्तानि वैतानिकानि गृह्याणि वक्ष्यामः १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/01/01_AshvalAyana_gRhya_sUtram.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . The (rites) based on the spreading (of the three sacred fires) have been declared; we shall declare the Gṛhya (rites).
 
 [^1]:  1, 1. The spreading (vitāna or, as it is also called, vihāra or vistāra) of the sacred fires is the taking of two of the three sacrificial fires, the Āhavanīya fire and the Dakṣiṇāgni, out of the Gārhapatya fire (see, for instance, Weber's Indische Studien, IX, 216 seq.). The rites based on, or connected with the vitāna; are the rites forming the subject of the Śrauta ritual, which are to be performed with the three fires.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/01/01_AshvalAyana_gRhya_sUtram.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उक्तानि वैतानिकानि गृह्याणि वक्ष्यामः १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/01/02_trayaH_pAkayajnAH.md">
-<details open><summary><h3>02 त्रयः पाकयज्ञाः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रयः पाकयज्ञाः २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/01/02_trayaH_pAkayajnAH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 . There are three (kinds of) Pākayajñas, 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/01/02_trayaH_pAkayajnAH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 त्रयः पाकयज्ञाः २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/01/03_hutA_agnau_hUyamAnA.md">
-<details open><summary><h3>03 हुता अग्नौ हूयमाना ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हुता अग्नौ हूयमाना  
 अनग्नौ प्रहुता  
 ब्राह्मणभोजने ब्रह्मणिहुताः ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/01/03_hutA_agnau_hUyamAnA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 the hutas, (i.e. the sacrifices) offered over the fire; over something that is not the fire, the prahutas; and at the feeding of Brāhmaṇas, those offered in the Brahman. [^2]
 
 [^2]:  Comp. Śāṅkhāyana-Gṛhya I, 5, 1; I, 10, 7. The division here is somewhat different from that given by Śāṅkhāyana; what Śāṅkhāyana calls ahuta, is here prahuta ('sacrificed up'); the prahutas of Śāṅkhāyana form here no special category; the prāśitas of Śāṅkhāyana are the brahmaṇi hutās of Āśvalāyana. Thus Āśvalāyana has three categories, while Śāṅkhāyana (and quite in the same way Pāraskara I, 4, 1) gives four. Nārāyaṇa mentions as an example of prahuta sacrifices the baliharaṇa prescribed below, I, 2, 3.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/01/03_hutA_agnau_hUyamAnA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 हुता अग्नौ हूयमाना  
 अनग्नौ प्रहुता  
 ब्राह्मणभोजने ब्रह्मणिहुताः ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/01/04_athApyRcha_udAharanti_yaH.md">
-<details open><summary><h3>04 अथाप्यृच उदाहरन्ति यः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथाप्यृच उदाहरन्ति यः समिधा य आहुती यो वेदेनेति ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/01/04_athApyRcha_udAharanti_yaH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3 [^3] . And they quote also Ṛcas, 'He who with a piece of wood or with an oblation, or with knowledge ("veda").'
 
 [^3]:  Rig-veda VIII, 19, 5, The mortal who with a piece of wood, or with an oblation, or with knowledge worships Agni, who with adoration (worships him) offering rich sacrifices,' &c.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/01/04_athApyRcha_udAharanti_yaH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथाप्यृच उदाहरन्ति यः समिधा य आहुती यो वेदेनेति ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/01/05_samidhamevApi_shraddadhAna_.md">
-<details open><summary><h3>05 समिधमेवापि श्रद्दधान आदधन्मन्येत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समिधमेवापि श्रद्दधान आदधन्मन्येत यज इदमिति नमस्तस्मै य आहुत्या यो वेदेनेति विद्ययैवाप्यस्ति प्रीतिस्तदेतत्पश्यन्नृषिरुवाच अगोरुधाय गविषेद्युक्षाय दस्म्यं वचः । घृतात्स्वादीयो मधुनश्च वोचतेति वच एव म इदं घृताच्च मधुनश्च स्वादीयोऽस्ति प्रीतिः स्वादीयोऽस्त्वित्येव तदाह आ ते अग्न ऋचा हविर्हृदा तष्टं भरामसि । ते ते भवन्तूक्षण ऋषभासो वशा उतेति एत एव म उक्षाणश्च ऋषभाश्च वशाश्च भवन्ति य इमं स्वाध्यायमधीयत इति यो नमसा स्वध्वर इति नमस्कारेण वै खल्वपि न वै देवा नमस्कारमति यज्ञो वै नम इति हि ब्राह्मणं भवति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/01/05_samidhamevApi_shraddadhAna_.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4 [^4] . Even he who only puts a piece of wood (on the fire) full of belief, should think, 'Here I offer a sacrifice; adoration to that (deity)!'
 
@@ -111,10 +97,9 @@ Seeing this the Ṛṣi has said, 'To him who does not keep away from himself th
 (And further on the Ṛc quoted above says), 'He who (worships Agni) with adoration, offering rich sacrifices.' 'Verily also by the performing of adoration (the gods may be worshipped); for the gods are not beyond the performing of adoration; adoration verily is sacrifice' - thus runs a Brāhmaṇa.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/01/05_samidhamevApi_shraddadhAna_.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 समिधमेवापि श्रद्दधान आदधन्मन्येत यज इदमिति नमस्तस्मै य आहुत्या यो वेदेनेति विद्ययैवाप्यस्ति प्रीतिस्तदेतत्पश्यन्नृषिरुवाच अगोरुधाय गविषेद्युक्षाय दस्म्यं वचः । घृतात्स्वादीयो मधुनश्च वोचतेति वच एव म इदं घृताच्च मधुनश्च स्वादीयोऽस्ति प्रीतिः स्वादीयोऽस्त्वित्येव तदाह आ ते अग्न ऋचा हविर्हृदा तष्टं भरामसि । ते ते भवन्तूक्षण ऋषभासो वशा उतेति एत एव म उक्षाणश्च ऋषभाश्च वशाश्च भवन्ति य इमं स्वाध्यायमधीयत इति यो नमसा स्वध्वर इति नमस्कारेण वै खल्वपि न वै देवा नमस्कारमति यज्ञो वै नम इति हि ब्राह्मणं भवति ५
 </details>
-</div>
+
