--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/04.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/04.md
@@ -3,115 +3,98 @@ title = "०४"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/04/01_udagayana_ApUryamANapaxe_ka.md">
-<details open><summary><h3>01 उदगयन आपूर्यमाणपक्षे कल्याणे ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उदगयन आपूर्यमाणपक्षे कल्याणे नक्षत्रे चौलकर्मोपनयनगोदानविवाहाः १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/04/01_udagayana_ApUryamANapaxe_ka.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . During the northern course of the sun, in the time of the increasing moon, under an auspicious Nakṣatra the tonsure (of the child's head), the initiation (of a Brahmacārin), the cutting of the beard, and marriage (should be celebrated).
 
 [^1]:  4, 1. Sāṅkh.-Gṛhya I, 5, 2-5.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/04/01_udagayana_ApUryamANapaxe_ka.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उदगयन आपूर्यमाणपक्षे कल्याणे नक्षत्रे चौलकर्मोपनयनगोदानविवाहाः १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/04/02_sArvakAlameke_vivAham.md">
-<details open><summary><h3>02 सार्वकालमेके विवाहम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सार्वकालमेके विवाहम् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/04/02_sArvakAlameke_vivAham.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. According to some (teachers), marriage (may be celebrated) at any time.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/04/02_sArvakAlameke_vivAham.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सार्वकालमेके विवाहम् २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/04/03_teShAm_purastAchchatasra_Aj.md">
-<details open><summary><h3>03 तेषाम् पुरस्ताच्चतस्र आज्याहुतीर्जुहुयात् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तेषां पुरस्ताच्चतस्र आज्याहुतीर्जुहुयात् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/04/03_teShAm_purastAchchatasra_Aj.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. Before those (ceremonies) let him sacrifice four Ājya oblations - 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/04/03_teShAm_purastAchchatasra_Aj.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तेषां पुरस्ताच्चतस्र आज्याहुतीर्जुहुयात् ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/04/04_agna_AyUMShi_pavasa.md">
-<details open><summary><h3>04 अग्न आयूंषि पवस ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 "अग्न आयूंषि पवस" इति तिसृभिः  
 "प्रजापते न त्वदेतान्यन्य" इति च व्याहृतिभिर्वा ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/04/04_agna_AyUMShi_pavasa.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. With the three (verses), 'Agni, thou purifiest life' (Rig-veda I X, 66, 10 seq.), and with (the one verse), 'Prajāpati, no other one than thou' (Rig-Veda X, 121, 10).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/04/04_agna_AyUMShi_pavasa.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 "अग्न आयूंषि पवस" इति तिसृभिः  
 "प्रजापते न त्वदेतान्यन्य" इति च व्याहृतिभिर्वा ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/04/05_samuchchayameke.md">
-<details open><summary><h3>05 समुच्चयमेके ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समुच्चयमेके ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/04/05_samuchchayameke.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5 [^2] . Or with the Vyāhṛtis.
 
 [^2]:  With the words, bhūḥ, bhuvaḥ, svaḥ, and with the three words together.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/04/05_samuchchayameke.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 समुच्चयमेके ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/04/06_naike_kAnchana.md">
-<details open><summary><h3>06 नैके काञ्चन ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नैके काञ्चन ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/04/06_naike_kAnchana.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6 [^3] . According to some (teachers), the one and the other.
 
@@ -122,29 +105,25 @@ title = "०४"
 [^4]:  Neither the oblations with the Ṛcas nor those with the Vyāhṛtis.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/04/06_naike_kAnchana.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 नैके काञ्चन ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/04/07_tvamaryamA_bhavasi_yatkanIn.md">
-<details open><summary><h3>07 त्वमर्यमा भवसि यत्कनीनामिति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वमर्यमा भवसि यत् कनीनाम् इति विवाहे चतुर्थीम् ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/04/07_tvamaryamA_bhavasi_yatkanIn.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. At the marriage the fourth oblation with the verse, 'Thou (O Agni) art Aryaman towards the girls' (Rig-veda V, 3, 2).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/04/07_tvamaryamA_bhavasi_yatkanIn.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 त्वमर्यमा भवसि यत् कनीनाम् इति विवाहे चतुर्थीम् ७
 </details>
-</div>
+
