--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/11.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/11.md
@@ -3,306 +3,298 @@ title = "११"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/01_atha_pashukalpaH.md">
-<details open><summary><h3>01 अथ पशुकल्पः ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ पशुकल्पः १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/01_atha_pashukalpaH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. Now (follows) the ritual of the animal sacrifice.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/01_atha_pashukalpaH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथ पशुकल्पः १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/02_uttarato-gneH_shAmitrasyAya.md">
-<details open><summary><h3>02 उत्तरतोऽग्नेः शामित्रस्यायतनङ् कृत्वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तरतोऽग्नेः शामित्रस्यायतनं कृत्वा पाययित्वा पशुमाप्लाव्य पुरस्तात् प्रत्यङ्मुखमवस्थाप्याग्निं दूतमिति द्वाभ्यां हुत्वा सपलाशयार्द्रशाखया पश्चादुपस्पृशेदमुष्मै त्वा जुष्टमुपाकरोमीति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/02_uttarato-gneH_shAmitrasyAya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . Having prepared to the north of the fire the place for the Śāmitra fire, having given drink (to the animal which he is going to sacrifice), having washed the animal, having placed it to the east (of the fire) with its face to the west, having made oblations with the two Ṛcas, 'Agni as our messenger' (Rig-veda I, 12, 1 seq.), let him touch (the animal) from behind with a fresh branch on which there are leaves, with (the formula), 'Agreeable to such and such (a deity) I touch thee.'
 
 [^1]:  11, 2. The Sāmitra fire (literally, the fire of the Samitṛ, who prepares the flesh of the immolated animal) is the one mentioned below in Sūtras 7 and 10. Comp. Indische Studien, X, 345. 'I touch thee' is upākaromi; comp. Kātyāyana-Śrauta-sūtra VI, 3, 19. 26.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/02_uttarato-gneH_shAmitrasyAya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उत्तरतोऽग्नेः शामित्रस्यायतनं कृत्वा पाययित्वा पशुमाप्लाव्य पुरस्तात् प्रत्यङ्मुखमवस्थाप्याग्निं दूतमिति द्वाभ्यां हुत्वा सपलाशयार्द्रशाखया पश्चादुपस्पृशेदमुष्मै त्वा जुष्टमुपाकरोमीति २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/03_vrIhiyavamatIbhiradbhiH_pur.md">
-<details open><summary><h3>03 व्रीहियवमतीभिरद्भिः पुरस्तात्प्रोक्षत्यमुष्मै त्वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 व्रीहियवमतीभिरद्भिः पुरस्तात्प्रोक्षत्यमुष्मै त्वा जुष्टं प्रोक्षामीति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/03_vrIhiyavamatIbhiradbhiH_pur.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. He sprinkles it from before with water in which rice and barley are, with (the formula), 'Agreeable to such and such (a deity) I sprinkle thee.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/03_vrIhiyavamatIbhiradbhiH_pur.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 व्रीहियवमतीभिरद्भिः पुरस्तात्प्रोक्षत्यमुष्मै त्वा जुष्टं प्रोक्षामीति ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/04_tAsAm_pAyayitvA_daxiNamanu.md">
-<details open><summary><h3>04 तासाम् पाययित्वा दक्षिणमनु ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तासां पाययित्वा दक्षिणमनु बाहुं शेषं निनयेत् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/04_tAsAm_pAyayitvA_daxiNamanu.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 4. Having given (to the animal) to drink of that (water), he should pour out the rest (of it) along its right fore-foot.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/04_tAsAm_pAyayitvA_daxiNamanu.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 तासां पाययित्वा दक्षिणमनु बाहुं शेषं निनयेत् ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/05_AvRtaiva_paryagni_kRtvodanc.md">
-<details open><summary><h3>05 आवृतैव पर्यग्नि कृत्वोदञ्चन् ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आवृतैव पर्यग्नि कृत्वोदञ्चं नयन्ति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/05_AvRtaiva_paryagni_kRtvodanc.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 5. Having carried fire round (it), performing that act only (without repeating a corresponding Mantra), they lead it to the north.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/05_AvRtaiva_paryagni_kRtvodanc.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 आवृतैव पर्यग्नि कृत्वोदञ्चं नयन्ति ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/06_tasya_purastAdulmukaM_haran.md">
-<details open><summary><h3>06 तस्य पुरस्तादुल्मुकं हरन्ति ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्य पुरस्तादुल्मुकं हरन्ति ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/06_tasya_purastAdulmukaM_haran.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 6 [^2] . In front of it they carry a fire-brand.
 
 [^2]:  It seems that this fire-brand is the same which had been carried round the animal, according to Sūtra 5. Comp. Kātyāyana-Śrauta-sūtra VI, 5, 2-5.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/06_tasya_purastAdulmukaM_haran.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 तस्य पुरस्तादुल्मुकं हरन्ति ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/07_shAmitra_eSha_bhavati.md">
-<details open><summary><h3>07 शामित्र एष भवति ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शामित्र एष भवति ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/07_shAmitra_eSha_bhavati.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 7 [^3]  This is the Śāmitra (fire).
 
 [^3]:  Comp. Sūtra 2.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/07_shAmitra_eSha_bhavati.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 शामित्र एष भवति ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/08_vapAshrapaNIbhyA~N_kartA_pa.md">
-<details open><summary><h3>08 वपाश्रपणीभ्याङ् कर्ता पशुमन्वारभते ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वपाश्रपणीभ्यां कर्ता पशुमन्वारभते ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/08_vapAshrapaNIbhyA~N_kartA_pa.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 8 [^4] . With the two Vapāśrapaṇī ladles the 'performer' touches the animal.
 
 [^4]:  On the two Vapāśrapaṇīs, comp. Kātyāyana-Śrauta-sūtra VI, 5, 7; Indische Studien, X, 345. The act which is here attributed to the kartṛ ('performer'), belongs in the Śrauta ritual to the incumbencies of the Pratiprasthātṛ.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/08_vapAshrapaNIbhyA~N_kartA_pa.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 वपाश्रपणीभ्यां कर्ता पशुमन्वारभते ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/09_kartAraM_yajamAnaH.md">
-<details open><summary><h3>09 कर्तारं यजमानः ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कर्तारं यजमानः ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/09_kartAraM_yajamAnaH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 9. The sacrificer (touches) the performer.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/09_kartAraM_yajamAnaH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 कर्तारं यजमानः ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/10_pashchAchChamitrasya_prAksh.md">
-<details open><summary><h3>10 पश्चाच्छमित्रस्य प्राक्शिरसम् प्रत्यक्शिरसं ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पश्चाच्छमित्रस्य प्राक्शिरसं प्रत्यक्शिरसं वोदक्पादं सञ्ज्ञप्य पुरा नाभेस्तृणमन्तर्द्धाय वपामुत्खिद्य वपामवदाय वपाश्रपणीभ्यां परिगृह्याद्भिरभिषिच्य शामित्रे प्रताप्याग्रेणैनमग्निं हुत्वा दक्षिणत आसीनः श्रपयित्वा परीत्य जुहुयात् १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/10_pashchAchChamitrasya_prAksh.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 10 [^5] . To the west of the Śāmitra (fire) he (the Śamitṛ) kills (the animal), the head of which is turned to the east or to the west, the feet to the north; and having placed a grass-blade on his side of the (animal's) navel, (the 'performer') draws out the omentum, cuts off the omentum, seizes it with the two Agniśrapaṇīs, sprinkles it with water, warms it at the Śāmitra (fire), takes it before that fire, roasts it, being seated to the south, goes round (the two fires), and sacrifices it.
 
 [^5]:  On the way in which animals had to b. killed at sacrifices, see Weber's Indische Studien, IX, 222 seq.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/10_pashchAchChamitrasya_prAksh.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 पश्चाच्छमित्रस्य प्राक्शिरसं प्रत्यक्शिरसं वोदक्पादं सञ्ज्ञप्य पुरा नाभेस्तृणमन्तर्द्धाय वपामुत्खिद्य वपामवदाय वपाश्रपणीभ्यां परिगृह्याद्भिरभिषिच्य शामित्रे प्रताप्याग्रेणैनमग्निं हुत्वा दक्षिणत आसीनः श्रपयित्वा परीत्य जुहुयात् १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/11_etasminnevAgnau_sthAlIpAkaM.md">
-<details open><summary><h3>11 एतस्मिन्नेवाग्नौ स्थालीपाकं श्रपयन्ति ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एतस्मिन्नेवाग्नौ स्थालीपाकं श्रपयन्ति ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/11_etasminnevAgnau_sthAlIpAkaM.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 11 [^6] . At the same fire they cook a mess of food.
 
 [^6]:  The Aupāsana fire is referred to.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/11_etasminnevAgnau_sthAlIpAkaM.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 एतस्मिन्नेवाग्नौ स्थालीपाकं श्रपयन्ति ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/12_ekAdasha_pashoravadAnAni_sa.md">
-<details open><summary><h3>12 एकादश पशोरवदानानि सर्वाङ्गेभ्योऽवदाय ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एकादश पशोरवदानानि सर्वाङ्गेभ्योऽवदाय शामित्रे श्रपयित्वा हृदयं शूले प्रताप्य स्थालीपाकस्याग्रतो जुहुयात् १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/12_ekAdasha_pashoravadAnAni_sa.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 12 [^7] . Having cut off the eleven Avadānas (or portions which have to be cut off) from the animal, from all its limbs, having boiled them at the Śāmitra (fire), and having warmed the heart on a spit, let him sacrifice first from the mess of cooked food (mentioned in Sūtra 11);
 
 [^7]:  The eleven portions are indicated by Kātyāyana, Śrauta-sūtra VI, 7, 6.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/12_ekAdasha_pashoravadAnAni_sa.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 एकादश पशोरवदानानि सर्वाङ्गेभ्योऽवदाय शामित्रे श्रपयित्वा हृदयं शूले प्रताप्य स्थालीपाकस्याग्रतो जुहुयात् १२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/13_avadAnairvA_saha.md">
-<details open><summary><h3>13 अवदानैर्वा सह ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अवदानैर्वा सह १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/13_avadAnairvA_saha.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 13. Or together with the Avadāna portions.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/13_avadAnairvA_saha.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 अवदानैर्वा सह १३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/14_ekaikasyAvadAnasya_dvirdvir.md">
-<details open><summary><h3>14 एकैकस्यावदानस्य द्विर्द्विरवद्यति ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एकैकस्यावदानस्य द्विर्द्विरवद्यति १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/14_ekaikasyAvadAnasya_dvirdvir.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 14 [^8] . From each of the (eleven) Avadānas he cuts off two portions.
 
 [^8]:  'A Pañcāvattin cuts off three portions. Having performed the Upastaraṇa and the Pratyabhighāraṇa (the first and second pouring out of Ājya) he sacrifices (the cut-off portions).' Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/14_ekaikasyAvadAnasya_dvirdvir.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 एकैकस्यावदानस्य द्विर्द्विरवद्यति १४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/11/15_AvRtaiva_hRdayashUlena_char.md">
-<details open><summary><h3>15 आवृतैव हृदयशूलेन चरन्ति ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आवृतैव हृदयशूलेन चरन्ति १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/11/15_AvRtaiva_hRdayashUlena_char.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 15 [^9] . They perform the rites only (without corresponding Mantras) with the heart's spit (i.e. the spit on which the heart had been; see Sūtra 12).
 
 [^9]:  On the rites regarding the spit, see Kātyāyana VI, 10, 1 seq.; Indische Studien, X, 346.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/11/15_AvRtaiva_hRdayashUlena_char.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 आवृतैव हृदयशूलेन चरन्ति १५
 </details>
-</div>
+
