--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/12.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/12.md
@@ -3,37 +3,32 @@ title = "१२"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/12/01_chaityayajne_prAk_sviShTakR.md">
-<details open><summary><h3>01 चैत्ययज्ञे प्राक् स्विष्टकृतश्चैत्याय ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चैत्ययज्ञे प्राक् स्विष्टकृतश्चैत्याय बलिं हरेत् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/12/01_chaityayajne_prAk_sviShTakR.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . At a Caitya sacrifice he should before the Sviṣṭakṛt (offering) offer a Bali to the Caitya.
 
 [^1]:  12, 1. There seems to be no doubt that Professor Stenzler is right in giving to caitya in this chapter its ordinary meaning of religious shrine ('Denkmal'). The text shows that the Kaitya sacrifice was not offered like other sacrifices at the sacrificer's home, but that in some cases the offering would have to be sent, at least symbolically, to distant places. This confirms Professor Stenzler's translation of caitya. Nārāyaṇa explains caitya by citte bhava, and says, 'If he makes a vow to a certain deity, saying, "If I obtain such and such a desire, I shall offer to thee an Ājya sacrifice, or a Sthālīpāka, or an animal" - and if he then obtains what he had wished for and 'performs that sacrifice to that deity: this is a caitya sacrifice.' I do not know anything that supports this statement as to the meaning of caitya.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/12/01_chaityayajne_prAk_sviShTakR.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 चैत्ययज्ञे प्राक् स्विष्टकृतश्चैत्याय बलिं हरेत् १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/12/02_yadyu_vai_videshastham.md">
-<details open><summary><h3>02 यद्यु वै विदेशस्थम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यद्यु वै विदेशस्थं पलाशदूतेन  
 यत्र वेत्थ वनस्पत इत्येतयर्चा द्वौ पिण्डौ कृत्वा  
 वीवधेऽभ्याधाय दूताय प्रयच्छेदिमन्तस्मै बलिं हरेति चैनं ब्रूयादयं तुभ्यमिति यो दूताय २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/12/02_yadyu_vai_videshastham.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . If, however, (the Caitya) is distant, (he should send his Bali) through a leaf-messenger.
 
@@ -46,73 +41,71 @@ title = "१२"
 4. (He gives him the lump) which is destined for the messenger, with (the words), 'This to thee.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/12/02_yadyu_vai_videshastham.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यद्यु वै विदेशस्थं पलाशदूतेन  
 यत्र वेत्थ वनस्पत इत्येतयर्चा द्वौ पिण्डौ कृत्वा  
 वीवधेऽभ्याधाय दूताय प्रयच्छेदिमन्तस्मै बलिं हरेति चैनं ब्रूयादयं तुभ्यमिति यो दूताय २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/12/03_pratibhaya~n_chedantarA_sha.md">
-<details open><summary><h3>03 प्रतिभयञ् चेदन्तरा शस्त्रमपि ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रतिभयं चेदन्तरा शस्त्रमपि किञ्चित् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/12/03_pratibhaya~n_chedantarA_sha.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 5. If there is anything dangerous between (them and the Caitya), (he gives him) some weapon also.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/12/03_pratibhaya~n_chedantarA_sha.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 प्रतिभयं चेदन्तरा शस्त्रमपि किञ्चित् ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/12/04_nAvyA_chennadyantarA_plavar.md">
-<details open><summary><h3>04 नाव्या चेन्नद्यन्तरा प्लवरूपमपि ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नाव्या चेन्नद्यन्तरा प्लवरूपमपि किञ्चिदनेन तरितव्यमिति ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/12/04_nAvyA_chennadyantarA_plavar.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 6 [^4] . If a navigable river is between (them and the Caitya, he gives him) also something like a raft with (the words), 'Hereby thou shalt cross.'
 
 [^4]:  Pāraskara III, 11, 11,
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/12/04_nAvyA_chennadyantarA_plavar.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 नाव्या चेन्नद्यन्तरा प्लवरूपमपि किञ्चिदनेन तरितव्यमिति ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/12/05_dhanvantariyajne_brahmANama.md">
-<details open><summary><h3>05 धन्वन्तरियज्ञे ब्रह्माणमग्निञ् चान्तरा ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धन्वन्तरियज्ञे ब्रह्माणमग्निं चान्तरा पुरोहितायाग्रे बलिं हरेत् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/12/05_dhanvantariyajne_brahmANama.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 7 [^5] . At the Dhanvantari sacrifice let him offer first a Bali to the Purohita, between the Brahman and the fire.
 
 [^5]:  Comp. above, chap. 3, 6.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/12/05_dhanvantariyajne_brahmANama.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 धन्वन्तरियज्ञे ब्रह्माणमग्निं चान्तरा पुरोहितायाग्रे बलिं हरेत् ५
 </details>
-</div>
+
