--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/15.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/15.md
@@ -3,36 +3,32 @@ title = "१५"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/15/01_kumAra~n_jAtam_purAnyairAla.md">
-<details open><summary><h3>01 कुमारञ् जातम् पुरान्यैरालम्भात्सर्पिर्मधुनी ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुमारं जातं पुरान्यैरालम्भात्सर्पिर्मधुनी हिरण्यनिकाषं हिरण्येन प्राशयेत्प्र ते ददामि मधुनो घृतस्य वेदं सवित्रा प्रसूतं मघोनाम् । आयुष्मान्गुप्तो देवताभिः शतं जीव शरदो लोके अस्मिन्निति १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/15/01_kumAra~n_jAtam_purAnyairAla.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . When a son has been born, (the father) should, before other people touch him, give him to eat from gold (i.e. from a golden vessel or with a golden spoon) butter and honey with which he has ground gold(-dust), with (the verse), 'I administer to thee the wisdom ('veda') of honey, of ghee, raised by Savitṛ the bountiful. Long-living, protected by the gods, live a hundred autumns in this world!'
 
 [^1]:  15, 1. Comp. Āśv.-Gṛhya-Pariśiṣṭa I, 26. I follow Professor Stenzler, who corrects maghonām into maghonā; comp. Śāṅkh.-Gṛhya I, 24, 4.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/15/01_kumAra~n_jAtam_purAnyairAla.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 कुमारं जातं पुरान्यैरालम्भात्सर्पिर्मधुनी हिरण्यनिकाषं हिरण्येन प्राशयेत्प्र ते ददामि मधुनो घृतस्य वेदं सवित्रा प्रसूतं मघोनाम् । आयुष्मान्गुप्तो देवताभिः शतं जीव शरदो लोके अस्मिन्निति १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/15/02_karNayorupanidhAya_medhAjan.md">
-<details open><summary><h3>02 कर्णयोरुपनिधाय मेधाजननञ् जपति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कर्णयोरुपनिधाय मेधाजननं जपति । मेधान्ते देवः सविता मेधां देवी सरस्वती । मेधान्ते अश्विनौ देवावाधत्तां पुष्करस्रजौ ।
 इति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/15/02_karNayorupanidhAya_medhAjan.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 2. Approaching (his mouth) to (the child's) two ears he murmurs the 'production of intelligence:' 
    
@@ -41,201 +37,201 @@ title = "१५"
 > intelligence may give to thee the two divine Aśvins, wreathed with lotus.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/15/02_karNayorupanidhAya_medhAjan.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 कर्णयोरुपनिधाय मेधाजननं जपति । मेधान्ते देवः सविता मेधां देवी सरस्वती । मेधान्ते अश्विनौ देवावाधत्तां पुष्करस्रजौ ।
 इति २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/15/03_aMsAvabhimRshati_ashmA_bhav.md">
-<details open><summary><h3>03 अंसावभिमृशति अश्मा भव ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अंसावभिमृशति अश्मा भव परशुर्भव हिरण्यमस्तृतं भव । वेदो वै पुत्रनामासि स जीव शरदः शतमिति । इन्द्र श्रेष्ठानि द्रविणानि धेह्यस्मे प्रयन्धि मघवन्नृजीषिन्निति च ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/15/03_aMsAvabhimRshati_ashmA_bhav.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 3 [^2] . He touches (the child's) two shoulders with (the verse), 'Be a stone, be an axe, be insuperable gold. Thou indeed art the Veda, called son; so live a hundred autumns' - and with (the verses), 'Indra, give the best treasures' (Rig-veda II, 21, 6), Bestow on us, O bountiful one, O speedy one' (Rig-veda III, 36, 10).
 
 [^2]:  Vedo may as well be the nominative of veda as that of vedas ('property').
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/15/03_aMsAvabhimRshati_ashmA_bhav.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 अंसावभिमृशति अश्मा भव परशुर्भव हिरण्यमस्तृतं भव । वेदो वै पुत्रनामासि स जीव शरदः शतमिति । इन्द्र श्रेष्ठानि द्रविणानि धेह्यस्मे प्रयन्धि मघवन्नृजीषिन्निति च ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/15/04_nAma_chAsmai_dadyuH.md">
-<details open><summary><h3>04 नाम चास्मै दद्युः ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नाम चास्मै दद्युः ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/15/04_nAma_chAsmai_dadyuH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 4. And let them give him a name beginning with a sonant, 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/15/04_nAma_chAsmai_dadyuH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 नाम चास्मै दद्युः ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/15/05_ghoShavadAdyantarantasthama.md">
-<details open><summary><h3>05 घोषवदाद्यन्तरन्तस्थमभिनिष्ठानान्तन् द्व्यक्षरम् ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 घोषवदाद्यन्तरन्तस्थमभिनिष्ठानान्तं द्व्यक्षरम् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/15/05_ghoShavadAdyantarantasthama.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 with a semivowel in it, with the Visarga at its end, consisting of two syllables,
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/15/05_ghoShavadAdyantarantasthama.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 घोषवदाद्यन्तरन्तस्थमभिनिष्ठानान्तं द्व्यक्षरम् ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/15/06_chaturaxaraM_vA.md">
-<details open><summary><h3>06 चतुरक्षरं वा ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चतुरक्षरं वा ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/15/06_chaturaxaraM_vA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 5. Or of four syllables;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/15/06_chaturaxaraM_vA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 चतुरक्षरं वा ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/15/07_dvyaxaram_pratiShThAkAmashc.md">
-<details open><summary><h3>07 द्व्यक्षरम् प्रतिष्ठाकामश्चतुरक्षरम् ब्रह्मवर्चसकामः ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 द्व्यक्षरं प्रतिष्ठाकामश्चतुरक्षरं ब्रह्मवर्चसकामः ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/15/07_dvyaxaram_pratiShThAkAmashc.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 6. Of two syllables, if he is desirous of firm position; of four syllables, if he is desirous of holy lustre;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/15/07_dvyaxaram_pratiShThAkAmashc.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 द्व्यक्षरं प्रतिष्ठाकामश्चतुरक्षरं ब्रह्मवर्चसकामः ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/15/08_yugmAni_tveva_puMsAm.md">
-<details open><summary><h3>08 युग्मानि त्वेव पुंसाम् ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 युग्मानि त्वेव पुंसाम् ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/15/08_yugmAni_tveva_puMsAm.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 7. But in every case with an even number (of syllables) for men, 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/15/08_yugmAni_tveva_puMsAm.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 युग्मानि त्वेव पुंसाम् ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/15/09_ayujAni_strINAm.md">
-<details open><summary><h3>09 अयुजानि स्त्रीणाम् ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयुजानि स्त्रीणाम् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/15/09_ayujAni_strINAm.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 an uneven for women.
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/15/09_ayujAni_strINAm.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 अयुजानि स्त्रीणाम् ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/15/10_abhivAdanIya~n_cha_samIxeta.md">
-<details open><summary><h3>10 अभिवादनीयञ् च समीक्षेत ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभिवादनीयं च समीक्षेत तन्मातापितरौ विद्यातामोपनयनात् १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/15/10_abhivAdanIya~n_cha_samIxeta.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 8. And let him also find out (for the child) a name to be used at respectful salutations (such as that due to the Ācārya at the ceremony of the initiation); that his mother and his father (alone) should know till his initiation.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/15/10_abhivAdanIya~n_cha_samIxeta.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 अभिवादनीयं च समीक्षेत तन्मातापितरौ विद्यातामोपनयनात् १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/15/11_pravAsAdetya_putrasya_shira.md">
-<details open><summary><h3>11 प्रवासादेत्य पुत्रस्य शिरः ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रवासादेत्य पुत्रस्य शिरः परिगृह्य जपति अङ्गादङ्गात्सम्भवसि हृदयादधिजायसे । आत्मा वै पुत्रनामासि स जीव शरदः शतमिति मूर्द्धनि त्रिरवघ्राय ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/15/11_pravAsAdetya_putrasya_shira.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 9. When he returns from a journey, he embraces his son's head and murmurs, 'From limb by limb thou art produced; out of the heart thou art born. Thou indeed art the self called son; so live a hundred autumns!' - (thus) he kisses him three times on his head.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/15/11_pravAsAdetya_putrasya_shira.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 प्रवासादेत्य पुत्रस्य शिरः परिगृह्य जपति अङ्गादङ्गात्सम्भवसि हृदयादधिजायसे । आत्मा वै पुत्रनामासि स जीव शरदः शतमिति मूर्द्धनि त्रिरवघ्राय ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/15/12_AvRtaiva_kumAryai.md">
-<details open><summary><h3>12 आवृतैव कुमार्यै ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आवृतैव कुमार्यै १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/15/12_AvRtaiva_kumAryai.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 10. The rite only (without the Mantra is performed) for a girl.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/15/12_AvRtaiva_kumAryai.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 आवृतैव कुमार्यै १२
 </details>
-</div>
+
