--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/16.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/16.md
@@ -3,119 +3,113 @@ title = "१६"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/16/01_ShaShThe_mAsyannaprAshanam.md">
-<details open><summary><h3>01 षष्ठे मास्यन्नप्राशनम् ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 षष्ठे मास्यन्नप्राशनम् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/16/01_ShaShThe_mAsyannaprAshanam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . In the sixth month the Annaprāśana (i.e. the first feeding with solid food).
 
 [^1]:  16, 1 seq. Comp. Sāṅkh.-Gṛhya I, 27, 1 seq. The two texts are nearly word for word identical.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/16/01_ShaShThe_mAsyannaprAshanam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 षष्ठे मास्यन्नप्राशनम् १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/16/02_AjamannAdyakAmaH.md">
-<details open><summary><h3>02 आजमन्नाद्यकामः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आजमन्नाद्यकामः २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/16/02_AjamannAdyakAmaH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. Goat's flesh, if he is desirous of nouṛṣment,
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/16/02_AjamannAdyakAmaH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आजमन्नाद्यकामः २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/16/03_taittiram_brahmavarchasakAm.md">
-<details open><summary><h3>03 तैत्तिरम् ब्रह्मवर्चसकामः ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तैत्तिरं ब्रह्मवर्चसकामः ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/16/03_taittiram_brahmavarchasakAm.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 3. Flesh of partridge, if desirous of holy lustre,
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/16/03_taittiram_brahmavarchasakAm.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 तैत्तिरं ब्रह्मवर्चसकामः ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/16/04_ghRtaudanan_tejaskAmaH.md">
-<details open><summary><h3>04 घृतौदनन् तेजस्कामः ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 घृतौदनं तेजस्कामः ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/16/04_ghRtaudanan_tejaskAmaH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 4. Boiled rice with ghee, if desirous of splendour:
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/16/04_ghRtaudanan_tejaskAmaH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 घृतौदनं तेजस्कामः ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/16/05_dadhimadhughRtamishramannam.md">
-<details open><summary><h3>05 दधिमधुघृतमिश्रमन्नम् प्राशयेदन्नपतेऽत्रस्य नो ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दधिमधुघृतमिश्रमन्नं प्राशयेदन्नपतेऽत्रस्य नो देह्यनमीवस्य शुष्मिणः । प्र प्रदातारन्तारिष ऊर्जन्नो धेहि द्विपदे चतुष्पद इति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/16/05_dadhimadhughRtamishramannam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 5. (Such) food, mixed with curds, honey and ghee he should give (to the child) to eat with (the verse), 'Lord of food, give us food painless and strong; bring forward the giver; bestow power on us, on men and animals.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/16/05_dadhimadhughRtamishramannam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 दधिमधुघृतमिश्रमन्नं प्राशयेदन्नपतेऽत्रस्य नो देह्यनमीवस्य शुष्मिणः । प्र प्रदातारन्तारिष ऊर्जन्नो धेहि द्विपदे चतुष्पद इति ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/16/06_AvRtaiva_kumAryai.md">
-<details open><summary><h3>06 आवृतैव कुमार्यै ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आवृतैव कुमार्यै ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/16/06_AvRtaiva_kumAryai.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 6. The rite only (without the Mantra) for a girl.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/16/06_AvRtaiva_kumAryai.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 आवृतैव कुमार्यै ६
 </details>
-</div>
+
