--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/19.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/19.md
@@ -3,252 +3,213 @@ title = "१९"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/19/01_aShTame_varShe_brAhmaNamupa.md">
-<details open><summary><h3>01 अष्टमे वर्षे ब्राह्मणमुपनयेत् ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अष्टमे वर्षे ब्राह्मणमुपनयेत् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/19/01_aShTame_varShe_brAhmaNamupa.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. In the eighth year let him initiate a Brāhmaṇa,
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/19/01_aShTame_varShe_brAhmaNamupa.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अष्टमे वर्षे ब्राह्मणमुपनयेत् १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/19/02_garbhAShTame_vA.md">
-<details open><summary><h3>02 गर्भाष्टमे वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गर्भाष्टमे वा २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/19/02_garbhAShTame_vA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. Or in the eighth year after the conception;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/19/02_garbhAShTame_vA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 गर्भाष्टमे वा २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/19/03_ekAdashe_xatriyam.md">
-<details open><summary><h3>03 एकादशे क्षत्रियम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एकादशे क्षत्रियम् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/19/03_ekAdashe_xatriyam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. In the eleventh a Kṣatriya;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/19/03_ekAdashe_xatriyam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 एकादशे क्षत्रियम् ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/19/04_dvAdashe_vaishyam.md">
-<details open><summary><h3>04 द्वादशे वैश्यम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 द्वादशे वैश्यम् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/19/04_dvAdashe_vaishyam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. In the twelfth a Vaiśya.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/19/04_dvAdashe_vaishyam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 द्वादशे वैश्यम् ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/19/05_A_ShoDashAdbrAhmaNasyAnatIt.md">
-<details open><summary><h3>05 आ षोडशाद्ब्राह्मणस्यानतीतः कालः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आ षोडशाद्ब्राह्मणस्यानतीतः कालः ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/19/05_A_ShoDashAdbrAhmaNasyAnatIt.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. Until the sixteenth (year) the time has not passed for a Brāhmaṇa;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/19/05_A_ShoDashAdbrAhmaNasyAnatIt.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आ षोडशाद्ब्राह्मणस्यानतीतः कालः ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/19/06_A_dvAviMshAt_xatriyasyA.md">
-<details open><summary><h3>06 आ द्वाविंशात् क्षत्रियस्या ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आ द्वाविंशात् क्षत्रियस्या चतुर्विंशाद्वैश्यस्यात ऊर्ध्वं पतितसावित्रीका भवन्ति ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/19/06_A_dvAviMshAt_xatriyasyA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. Until the twenty-second for a Kṣatriya;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/19/06_A_dvAviMshAt_xatriyasyA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आ द्वाविंशात् क्षत्रियस्या चतुर्विंशाद्वैश्यस्यात ऊर्ध्वं पतितसावित्रीका भवन्ति ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/19/07_nainAnupanayennAdhyApayenna.md">
-<details open><summary><h3>07 नैनानुपनयेन्नाध्यापयेन्न याजयेन्नैभिर्व्यवहरेयुः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नैनानुपनयेन्नाध्यापयेन्न याजयेन्नैभिर्व्यवहरेयुः ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/19/07_nainAnupanayennAdhyApayenna.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. Until the twenty-fourth for a Vaiśya.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/19/07_nainAnupanayennAdhyApayenna.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 नैनानुपनयेन्नाध्यापयेन्न याजयेन्नैभिर्व्यवहरेयुः ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/19/08_alankRta~N_kumAra~N_kushalI.md">
-<details open><summary><h3>08 अलङ्कृतङ् कुमारङ् कुशलीकृतशिरसमहतेन ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अलङ्कृतं कुमारं कुशलीकृतशिरसमहतेन वाससा संवीतमैणेयेन वाजिनेन ब्राह्मणं रौरवेण क्षत्रियमाजेन वैश्यम् ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/19/08_alankRta~N_kumAra~N_kushalI.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. After that (time has passed), they become patitasāvitrīka (i.e. they have lost their right of learning the Sāvitrī).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/19/08_alankRta~N_kumAra~N_kushalI.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अलङ्कृतं कुमारं कुशलीकृतशिरसमहतेन वाससा संवीतमैणेयेन वाजिनेन ब्राह्मणं रौरवेण क्षत्रियमाजेन वैश्यम् ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/19/09_yadi_vAsAMsi_vasIranraktAni.md">
-<details open><summary><h3>09 यदि वासांसि वसीरन्रक्तानि ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यदि वासांसि वसीरन्रक्तानि वसीरन्काषायं ब्राह्मणो माञ्जिष्टं क्षत्रियो हारिद्रं वैश्यः ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/19/09_yadi_vAsAMsi_vasIranraktAni.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. No one should initiate such men, nor teach them, nor perform sacrifices for them, nor have intercourse with them.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/19/09_yadi_vAsAMsi_vasIranraktAni.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यदि वासांसि वसीरन्रक्तानि वसीरन्काषायं ब्राह्मणो माञ्जिष्टं क्षत्रियो हारिद्रं वैश्यः ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/19/10_teShAm_mekhalAH.md">
-<details open><summary><h3>10 तेषाम् मेखलाः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तेषां मेखलाः १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/19/10_teShAm_mekhalAH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10 [^1] . (Let him initiate) the youth who is adorned and whose (hair on the) head is arranged, who wears a (new) garment that has not yet been washed, or an antelope-skin, if he is a Brāhmaṇa, the skin of a spotted deer, if a Kṣatriya, a goat's skin, if a Vaiśya.
 
 [^1]:  19, 10. By the 'arranging of the hair' the cutting of the hair is implied, as is seen from chap. 22, 22.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/19/10_teShAm_mekhalAH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तेषां मेखलाः १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/19/11_maunjI_brAhmaNasya_dhanurjy.md">
-<details open><summary><h3>11 मौञ्जी ब्राह्मणस्य धनुर्ज्या ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मौञ्जी ब्राह्मणस्य धनुर्ज्या क्षत्रियस्यावी वैश्यस्य ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/19/11_maunjI_brAhmaNasya_dhanurjy.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 11. If they put on garments, they should put on dyed (garments): the Brāhmaṇa a reddish yellow one, the Kṣatriya a light red one, the Vaiśya a yellow one.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/19/11_maunjI_brAhmaNasya_dhanurjy.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 मौञ्जी ब्राह्मणस्य धनुर्ज्या क्षत्रियस्यावी वैश्यस्य ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/19/12_teShAn_daNDAH.md">
-<details open><summary><h3>12 तेषान् दण्डाः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तेषां दण्डाः १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/19/12_teShAn_daNDAH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 12. Their girdles are: that of a Brāhmaṇa made of Muñja grass, that of a Kṣatriya a bow-string, that of a Vaiśya woollen.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/19/12_teShAn_daNDAH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तेषां दण्डाः १२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/19/13_pAlAsho_brAhmaNasyauDumbara.md">
-<details open><summary><h3>13 पालाशो ब्राह्मणस्यौडुम्बरः क्षत्रियस्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पालाशो ब्राह्मणस्यौडुम्बरः क्षत्रियस्य बैल्वो वैश्यस्य । केशसम्मितो ब्राह्मणस्य ललाटसम्मितः क्षत्रियस्य प्राणसम्मितो वैश्यस्य १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/19/13_pAlAsho_brAhmaNasyauDumbara.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 13. Their staffs are: that of a Brāhmaṇa of Palāśa wood, that of a Kṣatriya of Udumbara wood, that of a Vaiśya of Bilva wood.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/19/13_pAlAsho_brAhmaNasyauDumbara.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 पालाशो ब्राह्मणस्यौडुम्बरः क्षत्रियस्य बैल्वो वैश्यस्य । केशसम्मितो ब्राह्मणस्य ललाटसम्मितः क्षत्रियस्य प्राणसम्मितो वैश्यस्य १३
 </details>
-</div>
+
