--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/21.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/21.md
@@ -3,65 +3,55 @@ title = "२१"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/21/01_mantreNa_haike_agnaye.md">
-<details open><summary><h3>01 मन्त्रेण हैके अग्नये ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मन्त्रेण हैके अग्नये समिधमाहार्षं बृहते जातवेदसे तया त्वमग्ने वर्द्धस्व समिधा ब्रह्मणा वयं स्वाहेति १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/21/01_mantreNa_haike_agnaye.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. Some (do this) with a Mantra: 'To Agni I have brought a piece of wood, to the great Jātavedas. Through that piece of wood increase thou, O Agni; through the Brahman (may) we (increase). Svāhā!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/21/01_mantreNa_haike_agnaye.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 मन्त्रेण हैके अग्नये समिधमाहार्षं बृहते जातवेदसे तया त्वमग्ने वर्द्धस्व समिधा ब्रह्मणा वयं स्वाहेति १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/21/02_sa_samidhamAdhAyAgnimupaspR.md">
-<details open><summary><h3>02 स समिधमाधायाग्निमुपस्पृश्य मुखन् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स समिधमाधायाग्निमुपस्पृश्य मुखं निमार्ष्टि त्रिस्तेजसा मा समनज्मीति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/21/02_sa_samidhamAdhAyAgnimupaspR.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. Having put the fuel (on the fire) and having touched the fire, he three times wipes off his face with (the words), 'With splendour I anoint myself.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/21/02_sa_samidhamAdhAyAgnimupaspR.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 स समिधमाधायाग्निमुपस्पृश्य मुखं निमार्ष्टि त्रिस्तेजसा मा समनज्मीति २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/21/03_tejasA_hyevAtmAnaM_samanakt.md">
-<details open><summary><h3>03 तेजसा ह्येवात्मानं समनक्तीति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तेजसा ह्येवात्मानं समनक्तीति विज्ञायते ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/21/03_tejasA_hyevAtmAnaM_samanakt.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. 'For with splendour does he anoint himself' - this is understood (in the Śruti).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/21/03_tejasA_hyevAtmAnaM_samanakt.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तेजसा ह्येवात्मानं समनक्तीति विज्ञायते ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/21/04_mayi_medhAm.md">
-<details open><summary><h3>04 हीति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मयि मेधां मयि प्रजां मय्यग्निस्तेजो दधातु  
 मयि मेधां मयि प्रजां मयीन्द्र इन्द्रियं दधातु  
@@ -72,9 +62,8 @@ title = "२१"
 इत्युपस्थाय जान्वाच्योपसङ्गृह्य
 ब्रूयादधीहि भोः सावित्रीं भो३ अनुब्रू३हीति४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/21/04_mayi_medhAm.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. 'On me may Agni bestow insight, on me offspring, on me splendour.
 
@@ -89,9 +78,8 @@ title = "२१"
 'What thy consuming power is, Agni, may I thereby obtain consuming power' - with (these formulas) he should approach the fire, bend his knee, embrace (the teacher's feet), and say to him, 'Recite, sir! The Sāvitrī, sir, recite!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/21/04_mayi_medhAm.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 मयि मेधां मयि प्रजां मय्यग्निस्तेजो दधातु  
 मयि मेधां मयि प्रजां मयीन्द्र इन्द्रियं दधातु  
@@ -102,61 +90,52 @@ title = "२१"
 इत्युपस्थाय जान्वाच्योपसङ्गृह्य
 ब्रूयादधीहि भोः सावित्रीं भो३ अनुब्रू३हीति४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/21/05_tasya_vAsasA_pANibhyA~n.md">
-<details open><summary><h3>05 तस्य वाससा पाणिभ्याञ् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्य वाससा पाणिभ्यां च पाणी सङ्गृह्य सावित्रीमन्वाह पच्छोऽर्द्धर्चशः सर्वाम् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/21/05_tasya_vAsasA_pANibhyA~n.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. Seizing with his (i.e. the student's) garment and with (his own) hands (the student's) hands (the teacher) recites the Sāvitrī, (firstly) Pāda by Pāda, (then) hemistich by hemistich, (and finally) the whole (verse).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/21/05_tasya_vAsasA_pANibhyA~n.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तस्य वाससा पाणिभ्यां च पाणी सङ्गृह्य सावित्रीमन्वाह पच्छोऽर्द्धर्चशः सर्वाम् ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/21/06_yathAshakti_vAchayIta.md">
-<details open><summary><h3>06 यथाशक्ति वाचयीत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यथाशक्ति वाचयीत ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/21/06_yathAshakti_vAchayIta.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. He should make him recite (the Sāvitrī) as far as he is able.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/21/06_yathAshakti_vAchayIta.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यथाशक्ति वाचयीत ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/21/07_hRdayadeshe-syorddhvAngulim.md">
-<details open><summary><h3>07 हृदयदेशेऽस्योर्द्ध्वाङ्गुलिम् पाणिमुपदधाति मम ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हृदयदेशेऽस्योर्द्ध्वाङ्गुलिं पाणिमुपदधाति मम व्रते हृदयन्ते दधामि मम चित्तमनु चित्तं ते अस्तु । मम वाचमेकव्रतो जुषस्व बृहस्पतिष्ट्वा नियुनक्तु मह्यमिति ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/21/07_hRdayadeshe-syorddhvAngulim.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. On the place of his (i.e. the student's) heart (the teacher) lays his hand with the fingers upwards, with (the formula), 'Into my will I take thy heart; after my mind shall thy mind follow; in my word thou shalt rejoice with all thy will; may Bṛhaspati join thee to me.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/21/07_hRdayadeshe-syorddhvAngulim.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 हृदयदेशेऽस्योर्द्ध्वाङ्गुलिं पाणिमुपदधाति मम व्रते हृदयन्ते दधामि मम चित्तमनु चित्तं ते अस्तु । मम वाचमेकव्रतो जुषस्व बृहस्पतिष्ट्वा नियुनक्तु मह्यमिति ७
 </details>
-</div>
+
