--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/23.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/23.md
@@ -3,96 +3,82 @@ title = "२३"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/01_Rtvijo_vRNIte-nyUnAnatirikt.md">
-<details open><summary><h3>01 ऋत्विजो वृणीतेऽन्यूनानतिरिक्ताङ्गान्ये मातृतः ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ऋत्विजो वृणीतेऽन्यूनानतिरिक्ताङ्गान्ये मातृतः पितृतश्चेति यथोक्तं पुरस्तात् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/01_Rtvijo_vRNIte-nyUnAnatirikt.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . He chooses priests (for officiating at a sacrifice) with neither deficient nor superfluous limbs, 'who on the mother's and on the father's side (&c.),' as it has been said above.
 
 [^1]:  23, 1. Comp. Śrauta-sūtra IX, 3, 20; Gṛhya-sūtra I, 5, 1.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/01_Rtvijo_vRNIte-nyUnAnatirikt.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ऋत्विजो वृणीतेऽन्यूनानतिरिक्ताङ्गान्ये मातृतः पितृतश्चेति यथोक्तं पुरस्तात् १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/02_yUna_Rtvijo_vRNIta.md">
-<details open><summary><h3>02 यून ऋत्विजो वृणीत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यून ऋत्विजो वृणीत इत्येके २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/02_yUna_Rtvijo_vRNIta.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. Let him choose young men as officiating priests: thus (declare) some (teachers).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/02_yUna_Rtvijo_vRNIta.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यून ऋत्विजो वृणीत इत्येके २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/03_brahmANameva_prathamaM_vRNI.md">
-<details open><summary><h3>03 ब्रह्माणमेव प्रथमं वृणीतेऽथ ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्रह्माणमेव प्रथमं वृणीतेऽथ होतारमथाध्वर्युमथोद्गातारम् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/03_brahmANameva_prathamaM_vRNI.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. He chooses first the Brahman, then the Hotṛ, then the Adhvaryu, then the Udgātṛ.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/03_brahmANameva_prathamaM_vRNI.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ब्रह्माणमेव प्रथमं वृणीतेऽथ होतारमथाध्वर्युमथोद्गातारम् ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/04_sarvAnvA_ye-hInaikAhairyAja.md">
-<details open><summary><h3>04 सर्वान्वा येऽहीनैकाहैर्याजयन्ति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्वान्वा येऽहीनैकाहैर्याजयन्ति ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/04_sarvAnvA_ye-hInaikAhairyAja.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4 [^2] . Or all who officiate at the Ahīna sacrifices and at those lasting one day.
 
 [^2]:  The Ahīna sacrifices are those which last more than one day, but not more than twelve days. (Indische Studien, IX, 373; X, 355.) The priests officiating at such sacrifices are the sixteen stated in the Śrauta-sūtra IV, 1, 6. 7. Those besides the sixteen, though they are chosen (saty api varaṇe) for taking part in the sacred performances, have not the rank of ṛtvijas (officiating priests); such are the Sadasya, the Samitṛ, and the Camasādhvaryavaḥ (schol. Śrautas. loc. cit.). See Max Müller's History of A. S. L., pp. 450, 469 seq. As to the Sadasya, however, there was some difference of opinion (see the next Sūtra).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/04_sarvAnvA_ye-hInaikAhairyAja.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सर्वान्वा येऽहीनैकाहैर्याजयन्ति ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/05_sadasyaM_saptadasha~N_kauSh.md">
-<details open><summary><h3>05 सदस्यं सप्तदशङ् कौषीतकिनः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सदस्यं सप्तदशं कौषीतकिनः समामनन्ति  
 स कर्मणामुपद्रष्टा भवतीति  
 तदुक्तमृग्भ्यां यमृत्विजो बहुधा कल्पयन्त इति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/05_sadasyaM_saptadasha~N_kauSh.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5 [^3] . The Kauṣītakinas prescribe the Sadasya as the seventeenth, saying, 'He is the looker-on at the performances.'
 
@@ -102,76 +88,65 @@ title = "२३"
 
 [^4]:  The two Ṛcas quoted here belong to the tenth among the Vālakhilya hymns, a hymn omitted in many of the Rig-veda MSS. They give no special confirmation to the rules stated in our text, but contain only a general allusion to the unity of the sacrifice, which the various priests perform in many various ways.
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/05_sadasyaM_saptadasha~N_kauSh.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सदस्यं सप्तदशं कौषीतकिनः समामनन्ति  
 स कर्मणामुपद्रष्टा भवतीति  
 तदुक्तमृग्भ्यां यमृत्विजो बहुधा कल्पयन्त इति ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/06_hotArameva_prathamaM_vRNIte.md">
-<details open><summary><h3>06 होतारमेव प्रथमं वृणीते ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 होतारमेव प्रथमं वृणीते ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/06_hotArameva_prathamaM_vRNIte.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7 [^5] . He chooses the Hotṛ first.
 
 [^5]:  'If the four (chief) priests have to be chosen, the choosing of the Brāhmaṇa stands first in order (see above, Sūtra 3); if all (the sixteen), then the choosing of the Hotṛ stands first in order.' Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/06_hotArameva_prathamaM_vRNIte.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 होतारमेव प्रथमं वृणीते ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/07_agnirme_hotA_sa.md">
-<details open><summary><h3>07 अग्निर्मे होता स ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्निर्मे होता स मे होता होतारं त्वामुं वृण इति होतारं ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/07_agnirme_hotA_sa.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. With (the formula), 'Agni is my Hotṛ; he is my Hotṛ; I choose thee N.N. as my Hotṛ' (he chooses) the Hotṛ.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/07_agnirme_hotA_sa.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अग्निर्मे होता स मे होता होतारं त्वामुं वृण इति होतारं ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/08_chandramA_me_brahmA.md">
-<details open><summary><h3>08 चन्द्रमा मे ब्रह्मा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चन्द्रमा मे ब्रह्मा स मे ब्रह्मा ब्रह्माणं त्वामुं वृण इति ब्रह्माणं ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/08_chandramA_me_brahmA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. With (the formula), 'Candramas (the moon) is my Brahman; he is my Brahman; I choose thee N.N. as my Brahman' (he chooses) the Brahman.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/08_chandramA_me_brahmA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 चन्द्रमा मे ब्रह्मा स मे ब्रह्मा ब्रह्माणं त्वामुं वृण इति ब्रह्माणं ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/09_Adityo_me-dhvaryurityadhvar.md">
-<details open><summary><h3>09 आदित्यो मेऽध्वर्युरित्यध्वर्युम् पर्जन्यो ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आदित्यो मेऽध्वर्युरित्यध्वर्युम् ।
 पर्जन्यो म उद्गातेत्युद्गातारम् । आपो मे होत्राशंसिन इति होत्रकान् ।
@@ -179,9 +154,8 @@ title = "२३"
 आकाशो मे सदस्य इति सदस्यम् ।  
 स वृतो जपेन्महन्मेऽवोचो भर्गो मेऽवोचो भगो मेऽवोचो यशो मेऽवोचः स्तोमं मेऽवोचः कॢप्तिं मेऽवोचस्तृप्तिं मेऽवोचो भुक्तिं मेऽवोचः सर्वं मेऽवोच इति ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/09_Adityo_me-dhvaryurityadhvar.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. With (the formula), 'Āditya (the sun) is my Adhvaryu; (he is my Adhvaryu, &c.)' - the Adhvaryu.
 
@@ -200,9 +174,8 @@ title = "२३"
 15. He whom he has chosen should murmur, 'A great thing thou hast told me; splendour thou hast told me; fortune thou hast told me; glory thou hast told me; praise thou hast told me; success thou hast told me; enjoyment thou hast told me; satiating thou hast told me; everything thou hast told me.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/09_Adityo_me-dhvaryurityadhvar.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आदित्यो मेऽध्वर्युरित्यध्वर्युम् ।
 पर्जन्यो म उद्गातेत्युद्गातारम् । आपो मे होत्राशंसिन इति होत्रकान् ।
@@ -210,53 +183,45 @@ title = "२३"
 आकाशो मे सदस्य इति सदस्यम् ।  
 स वृतो जपेन्महन्मेऽवोचो भर्गो मेऽवोचो भगो मेऽवोचो यशो मेऽवोचः स्तोमं मेऽवोचः कॢप्तिं मेऽवोचस्तृप्तिं मेऽवोचो भुक्तिं मेऽवोचः सर्वं मेऽवोच इति ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/10_japitvAgniShTe_hotA_sa.md">
-<details open><summary><h3>10 जपित्वाग्निष्टे होता स ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जपित्वाग्निष्टे होता स ते होता होताहं ते मानुष इति होता प्रतिजानीते १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/10_japitvAgniShTe_hotA_sa.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 16. Having murmured (this formula), the Hotṛ declares his assent (in the words), 'Agni is thy Hotṛ; he is thy Hotṛ; thy human Hotṛ am I.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/10_japitvAgniShTe_hotA_sa.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 जपित्वाग्निष्टे होता स ते होता होताहं ते मानुष इति होता प्रतिजानीते १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/11_chandramAste_brahmA_sa.md">
-<details open><summary><h3>11 चन्द्रमास्ते ब्रह्मा स ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चन्द्रमास्ते ब्रह्मा स ते ब्रह्मा ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/11_chandramAste_brahmA_sa.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 17. 'Candramas (the moon) is thy Brahman; he is thy Brahman (&c.)' - thus the Brahman.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/11_chandramAste_brahmA_sa.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 चन्द्रमास्ते ब्रह्मा स ते ब्रह्मा ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/12_evamitare_yathAdeshan_tanmA.md">
-<details open><summary><h3>12 एवमितरे यथादेशन् तन्मामवतु ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवमितरे यथादेशं तन्मामवतु तन्मा विशतु तेन भुक्षिषीयेति च याजयिष्यन् १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/12_evamitare_yathAdeshan_tanmA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 18. In the same way the others according to the prescriptions (given above).
 
@@ -265,220 +230,186 @@ title = "२३"
 [^8]:  Priests who only perform the Agnyādheya for a person, are, according to Nārāyaṇa's note on this Sūtra, not considered as p. 196 performing a sacrifice for him; consequently the formula given here is only to be used by priests who are elected for a Soma sacrifice. Stenzler translates, 'So spricht er, wenn er das Opfer durch sie vollziehen lassen will.' But this would be yakṣyamāṇaḥ, not yājayiṣyan.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/12_evamitare_yathAdeshan_tanmA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 एवमितरे यथादेशं तन्मामवतु तन्मा विशतु तेन भुक्षिषीयेति च याजयिष्यन् १२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/13_nyastamArtvijyamakAryam.md">
-<details open><summary><h3>13 न्यस्तमार्त्विज्यमकार्यम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न्यस्तमार्त्विज्यमकार्यम् १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/13_nyastamArtvijyamakAryam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 20 . The functions of an officiating priest are not to be exercised, if abandoned (by another priest),
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/13_nyastamArtvijyamakAryam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 न्यस्तमार्त्विज्यमकार्यम् १३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/14_ahInasya_nIchadaxiNasya.md">
-<details open><summary><h3>14 अहीनस्य नीचदक्षिणस्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहीनस्य नीचदक्षिणस्य १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/14_ahInasya_nIchadaxiNasya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 [^9] or at an Ahīna sacrifice with small sacrificial fee, 
 
 [^9]:  The tradition takes nīcadakṣiṇasya as in apposition to ahīnasya, and I have translated accordingly. But I cannot help thinking that the two words should be separated, so that we should have to translate, 'or at an Ahīna, or for a person that gives small sacrificial fee.' Thus the Brāhmaṇa quoted by Āpastamba (see the commentary on the Pañcaviṃśa Brāhmaṇa, vol. i, p. 6, ed. Bibl. Indica) gives the following questions which the Ritvij to be chosen should ask, 'Is it no Ahīna sacrifice? Is the Ritvij office not abandoned by others? Is the sacrificial fee plentiful?' It is a very singular fact, that on the one hand the assistance of a number of Ṛtvijas was unanimously declared necessary for the performance of an Ahīna sacrifice, while on the other hand it was considered objectionable, at least among some of the Vedic schools, to officiate at such a sacrifice. See Weber's Indische Studien, X, 150, 151.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/14_ahInasya_nIchadaxiNasya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अहीनस्य नीचदक्षिणस्य १४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/15_vyAdhitasyAturasya.md">
-<details open><summary><h3>15 व्याधितस्यातुरस्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 व्याधितस्यातुरस्य १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/15_vyAdhitasyAturasya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 or for a person that is sick, or suffering, 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/15_vyAdhitasyAturasya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 व्याधितस्यातुरस्य १५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/16_yaxmagRhItasya.md">
-<details open><summary><h3>16 यक्ष्मगृहीतस्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यक्ष्मगृहीतस्य १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/16_yaxmagRhItasya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 or affected with consumption,
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/16_yaxmagRhItasya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यक्ष्मगृहीतस्य १६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/17_anudeshyabhishastasya.md">
-<details open><summary><h3>17 अनुदेश्यभिशस्तस्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनुदेश्यभिशस्तस्य १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/17_anudeshyabhishastasya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 or decried among the people in his village,
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/17_anudeshyabhishastasya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अनुदेश्यभिशस्तस्य १७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/18_xiptayoneriti_chaiteShAm.md">
-<details open><summary><h3>18 क्षिप्तयोनेरिति चैतेषाम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्षिप्तयोनेरिति चैतेषाम् १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/18_xiptayoneriti_chaiteShAm.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 or of despised extraction: for such persons (the functions of a Ritvij should not be exercised).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/18_xiptayoneriti_chaiteShAm.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 क्षिप्तयोनेरिति चैतेषाम् १८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/19_somapravAkam_paripRchChetko.md">
-<details open><summary><h3>19 सोमप्रवाकम् परिपृच्छेत्को यज्ञः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोमप्रवाकं परिपृच्छेत्को यज्ञः क ऋत्विजः का दक्षिणा इति १९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/19_somapravAkam_paripRchChetko.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 21 [^10] . He (who is chosen as a Ṛtvij) should ask the Somapravāka, 'What sacrifice is it? Who are the priests officiating? What is the fee for the sacrifice?'
 
 [^10]:  The Somapravāka is the messenger who invites the priests on behalf of the sacrificer to officiate at his intended Soma sacrifice. Comp. Indische Studien, IX, 308.
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/19_somapravAkam_paripRchChetko.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सोमप्रवाकं परिपृच्छेत्को यज्ञः क ऋत्विजः का दक्षिणा इति १९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/20_kalyANaiH_saha_samprayogaH.md">
-<details open><summary><h3>20 कल्याणैः सह सम्प्रयोगः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कल्याणैः सह सम्प्रयोगः २०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/20_kalyANaiH_saha_samprayogaH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 22. If (all the conditions) are favourable, he should accept.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/20_kalyANaiH_saha_samprayogaH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 कल्याणैः सह सम्प्रयोगः २०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/21_na_mAMsamashnIyurna_striyam.md">
-<details open><summary><h3>21 न मांसमश्नीयुर्न स्त्रियमुपेयुरा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न मांसमश्नीयुर्न स्त्रियमुपेयुरा क्रतोरपवर्गात् २१
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/21_na_mAMsamashnIyurna_striyam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 23. Let (the officiating priests) eat no flesh nor have intercourse with a wife until the completion of the sacrifice.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/21_na_mAMsamashnIyurna_striyam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 न मांसमश्नीयुर्न स्त्रियमुपेयुरा क्रतोरपवर्गात् २१
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/22_etenAgne_brahmaNA_vAvRdhasv.md">
-<details open><summary><h3>22 एतेनाग्ने ब्रह्मणा वावृधस्वेति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एतेनाग्ने ब्रह्मणा वावृधस्वेति दक्षिणाग्नावाज्याहुतिं हुत्वा यथार्थं प्रव्रजेत् २२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/22_etenAgne_brahmaNA_vAvRdhasv.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 or of despised extraction: for such persons (the functions of a Ritvij should not be exercised).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/22_etenAgne_brahmaNA_vAvRdhasv.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 एतेनाग्ने ब्रह्मणा वावृधस्वेति दक्षिणाग्नावाज्याहुतिं हुत्वा यथार्थं प्रव्रजेत् २२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/23/23_evamanAhitAgnirgRhya_imAmag.md">
-<details open><summary><h3>23 एवमनाहिताग्निर्गृह्य इमामग्ने शरणिम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवमनाहिताग्निर्गृह्य इमामग्ने शरणिं मीमृषो न इत्येतयर्चा २३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/23/23_evamanAhitAgnirgRhya_imAmag.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 25. In the same way one who has not set up the (Śrauta) fires, in his (sacred) domestic fire with this Ṛc, 'Forgive us, O Agni, this sin' (Rig-veda I, 31, 16).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/23/23_evamanAhitAgnirgRhya_imAmag.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 एवमनाहिताग्निर्गृह्य इमामग्ने शरणिं मीमृषो न इत्येतयर्चा २३
 </details>
-</div>
+
