--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/24.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/24.md
@@ -3,289 +3,245 @@ title = "२४"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/01_Rtvijo_vRtvA_madhuparkamAha.md">
-<details open><summary><h3>01 ऋत्विजो वृत्वा मधुपर्कमाहरेत् ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ऋत्विजो वृत्वा मधुपर्कमाहरेत् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/01_Rtvijo_vRtvA_madhuparkamAha.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . When he has chosen the Ṛtvijas, he should offer the Madhuparka (i.e. honey-mixture) to them (in the way described in Sūtras 5 and following);
 
 [^1]:  24, 1 seqq. Comp. Śāṅkhāyana-Gṛhya II, 15. The second Sūtra is paraphrased by Nārāyaṇa thus, 'To a person that has performed the Samāvartana (see below, III, 8), when he comes on that day to his house with the intention of forming a matrimonial alliance.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/01_Rtvijo_vRtvA_madhuparkamAha.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ऋत्विजो वृत्वा मधुपर्कमाहरेत् १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/02_snAtakAyopasthitAya.md">
-<details open><summary><h3>02 स्नातकायोपस्थिताय ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्नातकायोपस्थिताय २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/02_snAtakAyopasthitAya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. To a Snātaka, when he comes to his house;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/02_snAtakAyopasthitAya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 स्नातकायोपस्थिताय २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/03_rAjne_cha.md">
-<details open><summary><h3>03 राज्ञे च ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 राज्ञे च ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/03_rAjne_cha.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. And to a king;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/03_rAjne_cha.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 राज्ञे च ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/04_AchAryashvashurapitRvyamAtu.md">
-<details open><summary><h3>04 आचार्यश्वशुरपितृव्यमातुलानाञ्च ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आचार्यश्वशुरपितृव्यमातुलानाञ्च ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/04_AchAryashvashurapitRvyamAtu.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. And for a teacher, the father-in-law, a paternal uncle, and a maternal uncle.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/04_AchAryashvashurapitRvyamAtu.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आचार्यश्वशुरपितृव्यमातुलानाञ्च ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/05_dadhani_madhvAnIya.md">
-<details open><summary><h3>05 दधनि मध्वानीय ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दधनि मध्वानीय ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/05_dadhani_madhvAnIya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. He pours honey into curds,
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/05_dadhani_madhvAnIya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 दधनि मध्वानीय ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/06_sarpirvA_madhvalAbhe.md">
-<details open><summary><h3>06 सर्पिर्वा मध्वलाभे ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्पिर्वा मध्वलाभे ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/06_sarpirvA_madhvalAbhe.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. Or butter, if he can get no honey.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/06_sarpirvA_madhvalAbhe.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सर्पिर्वा मध्वलाभे ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/07_viShTaraH_pAdyamarghyamAcha.md">
-<details open><summary><h3>07 विष्टरः पाद्यमर्घ्यमाचमनीयम् मधुपर्क्को ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विष्टरः पाद्यमर्घ्यमाचमनीयं मधुपर्क्को गौरित्येतेषां त्रिस्त्रिरेकैकं वेदयन्ते ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/07_viShTaraH_pAdyamarghyamAcha.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. A seat, the water for washing the feet, the Arghya water (i.e. perfumed water into which flowers have been thrown), the water for sipping, the honey-mixture, a cow: every one of these things they announce three times (to the guest).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/07_viShTaraH_pAdyamarghyamAcha.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 विष्टरः पाद्यमर्घ्यमाचमनीयं मधुपर्क्को गौरित्येतेषां त्रिस्त्रिरेकैकं वेदयन्ते ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/08_ahaM_varShma_sajAtAnAM.md">
-<details open><summary><h3>08 अहं वर्ष्म सजातानां ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहं वर्ष्म सजातानां विद्युतामिव सूर्यः । इदन्तमधितिष्ठामि यो मा कश्चाभिदासतीत्युदगग्रे विष्टर उपविशेदाक्रम्य वा ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/08_ahaM_varShma_sajAtAnAM.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. With (the verse), 'I am the highest one among my people, as the sun among the thunderbolts. Here I tread on him whosoever infests me' - he should sit down on the seat (made of) northward-pointed (grass).
 
 9. Or (he should do so) after he has trodden on it.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/08_ahaM_varShma_sajAtAnAM.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अहं वर्ष्म सजातानां विद्युतामिव सूर्यः । इदन्तमधितिष्ठामि यो मा कश्चाभिदासतीत्युदगग्रे विष्टर उपविशेदाक्रम्य वा ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/09_pAdau_praxAlApayIta_daxiNam.md">
-<details open><summary><h3>09 पादौ प्रक्षालापयीत दक्षिणमग्रे ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पादौ प्रक्षालापयीत दक्षिणमग्रे ब्राह्मणाय प्रयच्छेत् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/09_pAdau_praxAlApayIta_daxiNam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. He should make (his host) wash his feet.
 
 11. The right foot he should stretch out first to a Brāhmaṇa,
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/09_pAdau_praxAlApayIta_daxiNam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 पादौ प्रक्षालापयीत दक्षिणमग्रे ब्राह्मणाय प्रयच्छेत् ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/10_savyaM_shUdrAya.md">
-<details open><summary><h3>10 सव्यं शूद्राय ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सव्यं शूद्राय १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/10_savyaM_shUdrAya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 12. The left to a Śūdra.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/10_savyaM_shUdrAya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सव्यं शूद्राय १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/11_praxAlitapAdo-rghyamanjalin.md">
-<details open><summary><h3>11 प्रक्षालितपादोऽर्घ्यमञ्जलिना प्रतिगृह्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रक्षालितपादोऽर्घ्यमञ्जलिना प्रतिगृह्य ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/11_praxAlitapAdo-rghyamanjalin.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 13. When his feet have been washed, he receives the Arghya water in the hollow of his joined hands 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/11_praxAlitapAdo-rghyamanjalin.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 प्रक्षालितपादोऽर्घ्यमञ्जलिना प्रतिगृह्य ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/12_athAchamanIyenAnvAchAmati_a.md">
-<details open><summary><h3>12 अथाचमनीयेनान्वाचामति अमृतोपस्तरणमसीति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथाचमनीयेनान्वाचामति अमृतोपस्तरणमसीति १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/12_athAchamanIyenAnvAchAmati_a.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 and then sips the water destined thereto, with (the formula), 'Thou art the first layer for Ambrosia.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/12_athAchamanIyenAnvAchAmati_a.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथाचमनीयेनान्वाचामति अमृतोपस्तरणमसीति १२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/13_madhuparkamAhriyamANamIxeta.md">
-<details open><summary><h3>13 मधुपर्कमाह्रियमाणमीक्षेत मित्रस्य त्वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मधुपर्कमाह्रियमाणमीक्षेत मित्रस्य त्वा चक्षुषा प्रतीक्ष इति १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/13_madhuparkamAhriyamANamIxeta.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 14. He looks at the Madhuparka when it is brought to him, with (the formula), 'I look at thee with Mitra's eye.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/13_madhuparkamAhriyamANamIxeta.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 मधुपर्कमाह्रियमाणमीक्षेत मित्रस्य त्वा चक्षुषा प्रतीक्ष इति १३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/14_devasya_tvA_savituH.md">
-<details open><summary><h3>14 देवस्य त्वा सवितुः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 देवस्य त्वा सवितुः प्रसवेऽश्विनोर्बाहुभ्यां पूष्णो हस्ताभ्यां प्रतिगृह्णामीति तदञ्जलिना प्रतिगृह्य सव्ये पाणौ कृत्वा मधुवाता ऋतायत इति तृचेनावेक्ष्यानामिकया चाङ्गुष्ठेन च त्रिः प्रदक्षिणमालोड्य वसवस्त्वा गायत्रेण च्छन्दसा भक्षयन्त्विति पुरस्तान्निमार्ष्टि १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/14_devasya_tvA_savituH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 15. He accepts it with his joined hands with (the formula), 'By the impulse of the god Sāvitrī, with the arms of the two Aśvins, with the hands of Pūṣan I accept thee.' He then takes it into his left hand, looks at it with the three verses, 'Honey the winds to the righteous one' (Rig-veda I, 90, 6 seqq.), stirs it about three times from left to right with the fourth finger and the thumb, and wipes (his fingers) with (the formula), 'May the Vasus eat thee with the Gāyatrī metre' - to the east;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/14_devasya_tvA_savituH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 देवस्य त्वा सवितुः प्रसवेऽश्विनोर्बाहुभ्यां पूष्णो हस्ताभ्यां प्रतिगृह्णामीति तदञ्जलिना प्रतिगृह्य सव्ये पाणौ कृत्वा मधुवाता ऋतायत इति तृचेनावेक्ष्यानामिकया चाङ्गुष्ठेन च त्रिः प्रदक्षिणमालोड्य वसवस्त्वा गायत्रेण च्छन्दसा भक्षयन्त्विति पुरस्तान्निमार्ष्टि १४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/15_rudrAstvA_traiShTubhena_chC.md">
-<details open><summary><h3>15 रुद्रास्त्वा त्रैष्टुभेन च्छन्दसा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रुद्रास्त्वा त्रैष्टुभेन च्छन्दसा भक्षयन्त्विति दक्षिणत  
 आदित्यास्त्वा जागतेन च्छन्दसा भक्षयन्त्विति पश्चाद्  
 विश्वे त्वा देवा आनुष्टुभेन च्छन्दसा भक्षयन्त्वित्युत्तरतो  
 भूतेभ्यस्त्वेति मध्यात्त्रिरुद्गृह्य १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/15_rudrAstvA_traiShTubhena_chC.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 16. With (the formula), 'May the Rudras eat thee with the Tṛṣṭubh metre' - to the south;
 
@@ -296,24 +252,21 @@ and then sips the water destined thereto, with (the formula), 'Thou art the firs
 19. With (the formula), 'To the beings thee' - he three times takes (some of the Madhuparka substance) out of the middle of it.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/15_rudrAstvA_traiShTubhena_chC.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 रुद्रास्त्वा त्रैष्टुभेन च्छन्दसा भक्षयन्त्विति दक्षिणत  
 आदित्यास्त्वा जागतेन च्छन्दसा भक्षयन्त्विति पश्चाद्  
 विश्वे त्वा देवा आनुष्टुभेन च्छन्दसा भक्षयन्त्वित्युत्तरतो  
 भूतेभ्यस्त्वेति मध्यात्त्रिरुद्गृह्य १५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/16_virAjo_doho-sIti_prathamam.md">
-<details open><summary><h3>16 विराजो दोहोऽसीति प्रथमम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विराजो दोहोऽसीति प्रथमं प्राश्नीयाद्विराजो दोहमशीयेति द्वितीयं मयि दोहः पद्यायै विराज इति तृतीयम् १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/16_virAjo_doho-sIti_prathamam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 20. With (the formula), 'The milk of Virāj art thou' - he should partake thereof the first time,
 
@@ -324,196 +277,166 @@ and then sips the water destined thereto, with (the formula), 'Thou art the firs
 [^2]:  On Padyā Virāj, see the note on Śāṅkhāyana-Gṛhya III, 7, 5.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/16_virAjo_doho-sIti_prathamam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 विराजो दोहोऽसीति प्रथमं प्राश्नीयाद्विराजो दोहमशीयेति द्वितीयं मयि दोहः पद्यायै विराज इति तृतीयम् १६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/17_na_sarvam.md">
-<details open><summary><h3>17 न सर्वम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न सर्वम् १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/17_na_sarvam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 23. (He should) not (eat) the whole (Madhuparka).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/17_na_sarvam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 न सर्वम् १७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/18_na_tRptingachChet.md">
-<details open><summary><h3>18 न तृप्तिङ्गच्छेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न तृप्तिङ्गच्छेत् १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/18_na_tRptingachChet.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 24. He should not satiate himself.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/18_na_tRptingachChet.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 न तृप्तिङ्गच्छेत् १८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/19_brAhmaNAyoda~N~NuchChiShTam.md">
-<details open><summary><h3>19 ब्राह्मणायोदङ्ङुच्छिष्टम् प्रयच्छेदलाभेऽप्सु ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्राह्मणायोदङ्ङुच्छिष्टं प्रयच्छेदलाभेऽप्सु १९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/19_brAhmaNAyoda~N~NuchChiShTam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 25. To a Brāhmaṇa, to the north, he should give the remainder.
 
 26. If that cannot be done, (he should throw it) into water.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/19_brAhmaNAyoda~N~NuchChiShTam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ब्राह्मणायोदङ्ङुच्छिष्टं प्रयच्छेदलाभेऽप्सु १९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/20_sarvaM_vA.md">
-<details open><summary><h3>20 सर्वं वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्वं वा २०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/20_sarvaM_vA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 27. Or (he may eat) the whole (Madhuparka).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/20_sarvaM_vA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सर्वं वा २०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/21_athAchamanIyenAnvAchAmatyam.md">
-<details open><summary><h3>21 अथाचमनीयेनान्वाचामत्यमृतापिधानमसीति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथाचमनीयेनान्वाचामत्यमृतापिधानमसीति २१
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/21_athAchamanIyenAnvAchAmatyam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 28 [^3] . He then makes a rinsing of his mouth follow (on the eating of the Madhuparka) with the water destined thereto, with (the formula), 'Thou art the covering of Ambrosia.'
 
 [^3]:  Comp. above, Sūtra 13.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/21_athAchamanIyenAnvAchAmatyam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथाचमनीयेनान्वाचामत्यमृतापिधानमसीति २१
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/22_satyaM_yashaH_shrIrmayi.md">
-<details open><summary><h3>22 सत्यं यशः श्रीर्मयि ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सत्यं यशः श्रीर्मयि श्रीः श्रयतामिति द्वितीयम् २२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/22_satyaM_yashaH_shrIrmayi.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 29. With (the formula), 'Truth! Glory! Fortune! May fortune rest on me!' - a second time.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/22_satyaM_yashaH_shrIrmayi.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सत्यं यशः श्रीर्मयि श्रीः श्रयतामिति द्वितीयम् २२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/23_AchAntodakAya_gAM_vedayante.md">
-<details open><summary><h3>23 आचान्तोदकाय गां वेदयन्ते ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आचान्तोदकाय गां वेदयन्ते २३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/23_AchAntodakAya_gAM_vedayante.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 30. When he has sipped water, they announce to him the cow.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/23_AchAntodakAya_gAM_vedayante.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आचान्तोदकाय गां वेदयन्ते २३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/24_hato_me_pApmA.md">
-<details open><summary><h3>24 हतो मे पाप्मा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हतो मे पाप्मा पाप्मा मे हत इति जपित्वॐकुरुतेति कारयिष्यन् २४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/24_hato_me_pApmA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 31. Having murmured, 'Destroyed is my sin; my sin is destroyed,' (he says,) 'Om, do it,' if he chooses to have her killed.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/24_hato_me_pApmA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 हतो मे पाप्मा पाप्मा मे हत इति जपित्वॐकुरुतेति कारयिष्यन् २४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/25_mAtA_rudrANAn_duhitA.md">
-<details open><summary><h3>25 माता रुद्राणान् दुहिता ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 माता रुद्राणां दुहिता वसूनामिति जपित्वोमुत्सृजतेत्युत्स्रक्ष्यन् २५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/25_mAtA_rudrANAn_duhitA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 32. Having murmured, 'The mother of the Rudras, the daughter of the Vasus' (Rig-veda VIII, 101, 15), (he says,) 'Om, let her loose,' if he chooses to let her loose.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/25_mAtA_rudrANAn_duhitA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 माता रुद्राणां दुहिता वसूनामिति जपित्वोमुत्सृजतेत्युत्स्रक्ष्यन् २५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/24/26_nAmAMso_madhuparko_bhavati.md">
-<details open><summary><h3>26 नामांसो मधुपर्को भवति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नामांसो मधुपर्को भवति भवति २६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/24/26_nAmAMso_madhuparko_bhavati.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 33 [^4] . Let the Madhuparka not be without flesh, without flesh.
 
@@ -522,13 +445,11 @@ and then sips the water destined thereto, with (the formula), 'Thou art the firs
 End of the First Adhyāya.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/24/26_nAmAMso_madhuparko_bhavati.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 नामांसो मधुपर्को भवति भवति २६
 </details>
-</div>
 
   
 
