--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/2/02.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/2/02.md
@@ -3,74 +3,63 @@ title = "०२"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/02/01_AshvayujyAmAshvayujIkarma.md">
-<details open><summary><h3>01 आश्वयुज्यामाश्वयुजीकर्म ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आश्वयुज्यामाश्वयुजीकर्म १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/02/01_AshvayujyAmAshvayujIkarma.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. On the full moon day of Āśvayuja the Āśvayujī ceremony (is performed).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/02/01_AshvayujyAmAshvayujIkarma.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आश्वयुज्यामाश्वयुजीकर्म १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/02/02_niveshanamalankRtya_snAtAH_.md">
-<details open><summary><h3>02 निवेशनमलङ्कृत्य स्नाताः शुचिवाससः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निवेशनमलङ्कृत्य स्नाताः शुचिवाससः पशुपतये स्थालीपाकं निरुप्य जुहुयुः पशुपतये शिवाय शङ्कराय पृषातकाय स्वाहेति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/02/02_niveshanamalankRtya_snAtAH_.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . Having adorned the house, having bathed and put on clean garments, they should pour out a mess of cooked food for Paśupati, and should sacrifice it with (the formula), To Paśupati, to Śiva, to Śaṃkara, to Pṛṣātaka svāhā!'
 
 [^1]:  2, 2. 'The plural "They should sacrifice it" means, that while the sacrifice is performed by the householder, his sons and the other persons belonging to the house should touch him.' Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/02/02_niveshanamalankRtya_snAtAH_.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 निवेशनमलङ्कृत्य स्नाताः शुचिवाससः पशुपतये स्थालीपाकं निरुप्य जुहुयुः पशुपतये शिवाय शङ्कराय पृषातकाय स्वाहेति २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/02/03_pRShAtakamanjalinA_juhuyAdU.md">
-<details open><summary><h3>03 पृषातकमञ्जलिना जुहुयादूनम् मे ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पृषातकमञ्जलिना जुहुयादूनं मे पूर्यतां पूर्णं मे मोपसदत्पृषातकाय स्वाहेति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/02/03_pRShAtakamanjalinA_juhuyAdU.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. He should sacrifice with his joined hands a mixture of curds and butter (pṛṣātaka) with (the formula), 'May what is deficient be made full to me; may what is full not decay to me. To Pṛṣātaka svāhā!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/02/03_pRShAtakamanjalinA_juhuyAdU.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 पृषातकमञ्जलिना जुहुयादूनं मे पूर्यतां पूर्णं मे मोपसदत्पृषातकाय स्वाहेति ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/02/04_sajUrRtubhiH_sajUrvidhAbhiH.md">
-<details open><summary><h3>04 सजूरृतुभिः सजूर्विधाभिः सजूरिन्द्राग्निभ्यां ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सजूरृतुभिः सजूर्विधाभिः सजूरिन्द्राग्निभ्यां स्वाहा सजूरृतुभिः सजूर्विधाभिः सजूर्विश्वेभ्यो देवेभ्यः स्वाहा ।
 सजूरृतुभिः सजूर्विधाभिः सजूर्द्यावापृथिवीभ्यां स्वाहेत्याहिताग्नेराग्रयणस्थालीपाकः ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/02/04_sajUrRtubhiH_sajUrvidhAbhiH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4 [^2] . 'United with the seasons, united with the manners, united with Indra and Agni, svāhā!
 
@@ -83,30 +72,26 @@ title = "०२"
 Āgrayaṇa sacrifice by one who has set up the (sacred Śrauta) fires.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/02/04_sajUrRtubhiH_sajUrvidhAbhiH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सजूरृतुभिः सजूर्विधाभिः सजूरिन्द्राग्निभ्यां स्वाहा सजूरृतुभिः सजूर्विधाभिः सजूर्विश्वेभ्यो देवेभ्यः स्वाहा ।
 सजूरृतुभिः सजूर्विधाभिः सजूर्द्यावापृथिवीभ्यां स्वाहेत्याहिताग्नेराग्रयणस्थालीपाकः ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/02/05_anAhitAgnerapi_shAlAgnau.md">
-<details open><summary><h3>05 अनाहिताग्नेरपि शालाग्नौ ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनाहिताग्नेरपि शालाग्नौ ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/02/05_anAhitAgnerapi_shAlAgnau.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. Also by one who has not set up the (Śrauta) fires (the same offering is performed) in the (sacred) domestic fire.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/02/05_anAhitAgnerapi_shAlAgnau.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अनाहिताग्नेरपि शालाग्नौ ५
 </details>
-</div>
+
