--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/2/03.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/2/03.md
@@ -3,55 +3,47 @@ title = "०३"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/03/01_mArgashIrShyAm_pratyavaroha.md">
-<details open><summary><h3>01 मार्गशीर्ष्याम् प्रत्यवरोहणञ् चतुर्दश्याम् ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मार्गशीर्ष्यां प्रत्यवरोहणं चतुर्दश्याम् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/03/01_mArgashIrShyAm_pratyavaroha.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . On the full moon of Mārgaśīrṣa the 'redescent' (is performed) - on the fourteenth (Tithi),
 
 [^1]:  3, 1. On the ceremony of 'redescent,' comp. Śāṅkhāyana-Gṛhya IV, 17; Pāraskara III, 2. The fourteenth Tithi of the bright fortnight, preceding the full moon, is referred to.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/03/01_mArgashIrShyAm_pratyavaroha.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 मार्गशीर्ष्यां प्रत्यवरोहणं चतुर्दश्याम् १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/03/02_paurNamAsyAM_vA.md">
-<details open><summary><h3>02 पौर्णमास्यां वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पौर्णमास्यां वा २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/03/02_paurNamAsyAM_vA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. Or on (the Tithi of) the full moon (itself).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/03/02_paurNamAsyAM_vA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 पौर्णमास्यां वा २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/03/03_niveshanam_punarnavIkRtya_l.md">
-<details open><summary><h3>03 निवेशनम् पुनर्नवीकृत्य लेपनस्तरणोपस्तरणैरस्तमिते ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निवेशनं पुनर्नवीकृत्य लेपनस्तरणोपस्तरणैरस्तमिते पायसस्य जुहुयुरपश्वेतपदा जहि पूर्वेण चापरेण च । सप्त च वारुणीरिमाः सर्वाश्च राजबान्धवीः स्वाहा न वै श्वेतस्याभ्यागारेऽहिर्जघान किञ्चन ।
 श्वेताय वैदार्वाय नमः स्वाहेति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/03/03_niveshanam_punarnavIkRtya_l.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3 [^2] . Having again renovated the house by (giving a new) coating (to the walls), by spreading out (a new roof), and by levelling (the floor), they should sacrifice after sunset (oblations) of milk-rice with (the texts), 'Beat away, O white one, with thy foot, with the forefoot and with the hind-foot, these seven daughters of Varuṇa and all that belong to the king's tribe. Svāhā!
 
@@ -60,41 +52,35 @@ title = "०३"
 'Within the dominion of the white one no serpent has killed anything. To the white one, the son of Vidārva, adoration! Svāhā!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/03/03_niveshanam_punarnavIkRtya_l.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 निवेशनं पुनर्नवीकृत्य लेपनस्तरणोपस्तरणैरस्तमिते पायसस्य जुहुयुरपश्वेतपदा जहि पूर्वेण चापरेण च । सप्त च वारुणीरिमाः सर्वाश्च राजबान्धवीः स्वाहा न वै श्वेतस्याभ्यागारेऽहिर्जघान किञ्चन ।
 श्वेताय वैदार्वाय नमः स्वाहेति ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/03/04_nAtra_sauviShTakRt.md">
-<details open><summary><h3>04 नात्र सौविष्टकृत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नात्र सौविष्टकृत् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/03/04_nAtra_sauviShTakRt.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. Here no oblation to (Agni) Sviṣṭakṛt (is made).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/03/04_nAtra_sauviShTakRt.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 नात्र सौविष्टकृत् ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/03/05_abhayannaH_prAjApatyemyo_bh.md">
-<details open><summary><h3>05 अभयन्नः प्राजापत्येभ्यो भूयादित्यग्निमीक्षमाणो ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभयन्नः प्राजापत्येभ्यो भूयादित्यग्निमीक्षमाणो जपति शिवो नः सुमना भवेति हेमन्तं मनसा ध्यायात् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/03/05_abhayannaH_prAjApatyemyo_bh.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5 [^3] . 'May we be secure from Prajāpati's sons' - thus he murmurs while looking at the fire.
 
@@ -103,149 +89,127 @@ title = "०३"
 6. (Saying), 'Be happy and friendly to us' - he should think in his mind of the winter.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/03/05_abhayannaH_prAjApatyemyo_bh.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अभयन्नः प्राजापत्येभ्यो भूयादित्यग्निमीक्षमाणो जपति शिवो नः सुमना भवेति हेमन्तं मनसा ध्यायात् ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/03/06_pashchAdagneH_svastaraH_svA.md">
-<details open><summary><h3>06 पश्चादग्नेः स्वस्तरः स्वास्तीर्णस्तस्मिन्नुपविश्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पश्चादग्नेः स्वस्तरः स्वास्तीर्णस्तस्मिन्नुपविश्य स्योना पृथिवि भवेति जपित्वा संविशेत्सामात्यः प्राक्शिरा उदङ्मुखः ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/03/06_pashchAdagneH_svastaraH_svA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. To the west of the fire is a well-spread layer (of straw); on that he should sit down, murmur (the verse), 'Be soft, O earth' (Rig-veda I, 22, 15), and lie down (on that layer) with his people, with the head to the east and the face to the north.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/03/06_pashchAdagneH_svastaraH_svA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 पश्चादग्नेः स्वस्तरः स्वास्तीर्णस्तस्मिन्नुपविश्य स्योना पृथिवि भवेति जपित्वा संविशेत्सामात्यः प्राक्शिरा उदङ्मुखः ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/03/07_yathAvakAshamitare.md">
-<details open><summary><h3>07 यथावकाशमितरे ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यथावकाशमितरे ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/03/07_yathAvakAshamitare.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. The others, as there is room.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/03/07_yathAvakAshamitare.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यथावकाशमितरे ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/03/08_jyAyAnjyAyAnvAnantaraH.md">
-<details open><summary><h3>08 ज्यायान्ज्यायान्वानन्तरः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ज्यायान्ज्यायान्वानन्तरः ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/03/08_jyAyAnjyAyAnvAnantaraH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. Or following on each other from the eldest to the youngest.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/03/08_jyAyAnjyAyAnvAnantaraH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ज्यायान्ज्यायान्वानन्तरः ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/03/09_mantravido_mantrAnjapeyuH.md">
-<details open><summary><h3>09 मन्त्रविदो मन्त्रान्जपेयुः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मन्त्रविदो मन्त्रान्जपेयुः ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/03/09_mantravido_mantrAnjapeyuH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10 [^4] . Those who know the Mantras, should murmur the Mantras.
 
 [^4]:  'The Mantras beginning from "Be soft, O earth" (Sūtra 7) down to the auspicious hymns (Sūtra 13).' Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/03/09_mantravido_mantrAnjapeyuH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 मन्त्रविदो मन्त्रान्जपेयुः ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/03/10_saMhAya_ato_devA.md">
-<details open><summary><h3>10 संहाय अतो देवा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संहाय अतो देवा अवन्तु न इति त्रिः १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/03/10_saMhAya_ato_devA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 11 [^5] . Arising (they should) three times (murmur the verse), 'From that place may the gods bless us' (Rig-veda I, 22, 16).
 
 [^5]:  It follows from Sūtra 12 that they are to turn here their faces to the east.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/03/10_saMhAya_ato_devA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 संहाय अतो देवा अवन्तु न इति त्रिः १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/03/11_etAn_daxiNAmukhAH_pratya~Nm.md">
-<details open><summary><h3>11 एतान् दक्षिणामुखाः प्रत्यङ्मुखा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एतां दक्षिणामुखाः प्रत्यङ्मुखा उदङ्मुखाश्चतुर्थम् ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/03/11_etAn_daxiNAmukhAH_pratya~Nm.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 12 [^6] . The same (verse) a fourth time with their faces to the south, to the west, and to the north.
 
 [^6]:  They mutter one Pāda of that verse, which is in the Gāyatrī metre, turned towards each of the three directions.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/03/11_etAn_daxiNAmukhAH_pratya~Nm.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 एतां दक्षिणामुखाः प्रत्यङ्मुखा उदङ्मुखाश्चतुर्थम् ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/03/12_saMhAya_sauryANi_svastyayan.md">
-<details open><summary><h3>12 संहाय सौर्याणि स्वस्त्ययनानि ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संहाय सौर्याणि स्वस्त्ययनानि च जपित्वान्नं संस्कृत्य ब्राह्मणान्भोजयित्वा स्वस्त्ययनं वाचयीत १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/03/12_saMhAya_sauryANi_svastyayan.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 13. Having arisen, having murmured the hymns sacred to the Sun and the auspicious hymns, having prepared food and given to the Brāhmaṇas to eat, he should cause (them) to pronounce auspicious words.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/03/12_saMhAya_sauryANi_svastyayan.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 संहाय सौर्याणि स्वस्त्ययनानि च जपित्वान्नं संस्कृत्य ब्राह्मणान्भोजयित्वा स्वस्त्ययनं वाचयीत १२
 </details>
-</div>
+
