--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/2/07.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/2/07.md
@@ -3,214 +3,181 @@ title = "०७"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/07/01_athAto_vAstuparIxA.md">
-<details open><summary><h3>01 अथातो वास्तुपरीक्षा ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथातो वास्तुपरीक्षा १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/07/01_athAto_vAstuparIxA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. Now the examination of the ground (where he intends to build a house).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/07/01_athAto_vAstuparIxA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथातो वास्तुपरीक्षा १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/07/02_anUSharamavivadiShNu_bhUma.md">
-<details open><summary><h3>02 अनूषरमविवदिष्णु भूम ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनूषरमविवदिष्णु भूम २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/07/02_anUSharamavivadiShNu_bhUma.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. (It must be) non-salinous soil of undisputed property,
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/07/02_anUSharamavivadiShNu_bhUma.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अनूषरमविवदिष्णु भूम २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/07/03_oShadhivanaspativat.md">
-<details open><summary><h3>03 ओषधिवनस्पतिवत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ओषधिवनस्पतिवत् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/07/03_oShadhivanaspativat.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. With herbs and trees,
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/07/03_oShadhivanaspativat.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ओषधिवनस्पतिवत् ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/07/04_yasminkushavIriNam_prabhUta.md">
-<details open><summary><h3>04 यस्मिन्कुशवीरिणम् प्रभूतम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यस्मिन्कुशवीरिणं प्रभूतम् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/07/04_yasminkushavIriNam_prabhUta.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. On which much Kuśa and Vīraṇa grass grows.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/07/04_yasminkushavIriNam_prabhUta.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यस्मिन्कुशवीरिणं प्रभूतम् ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/07/05_kaNTakixIriNastu_samUlAnpar.md">
-<details open><summary><h3>05 कण्टकिक्षीरिणस्तु समूलान्परिखायोद्वासयेदपामार्गः शाकस्तिल्वकः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कण्टकिक्षीरिणस्तु समूलान्परिखायोद्वासयेदपामार्गः शाकस्तिल्वकः परिव्याध इति चैतानि ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/07/05_kaNTakixIriNastu_samUlAnpar.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. Plants with thorns and with milky juice he should dig out with their roots and remove them - 
 
 6. And in the same way the following (sorts of plants), viz. Apāmārga, potherbs, Tilvaka, Parivyādha.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/07/05_kaNTakixIriNastu_samUlAnpar.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 कण्टकिक्षीरिणस्तु समूलान्परिखायोद्वासयेदपामार्गः शाकस्तिल्वकः परिव्याध इति चैतानि ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/07/06_yatra_sarvata_Apo.md">
-<details open><summary><h3>06 यत्र सर्वत आपो ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यत्र सर्वत आपो मध्यं समेत्य प्रदक्षिणं शयनीयं परीत्य प्राच्यः स्यन्देरन्नप्रवदत्यस्तत्सर्वं समृद्धम् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/07/06_yatra_sarvata_Apo.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. A spot where the waters, flowing together from all sides to the centre of it, flow round the resting-place, having it on their right side, and then flow off to the east without noise - that possesses all auspicious qualities.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/07/06_yatra_sarvata_Apo.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यत्र सर्वत आपो मध्यं समेत्य प्रदक्षिणं शयनीयं परीत्य प्राच्यः स्यन्देरन्नप्रवदत्यस्तत्सर्वं समृद्धम् ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/07/07_samavasrave_bhaktasharaNa~N.md">
-<details open><summary><h3>07 समवस्रवे भक्तशरणङ् कारयेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समवस्रवे भक्तशरणं कारयेत् ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/07/07_samavasrave_bhaktasharaNa~N.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. Where the waters flow off, he should have the provision-room built.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/07/07_samavasrave_bhaktasharaNa~N.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 समवस्रवे भक्तशरणं कारयेत् ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/07/08_bahvannaM_ha_bhavati.md">
-<details open><summary><h3>08 बह्वन्नं ह भवति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बह्वन्नं ह भवति ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/07/08_bahvannaM_ha_bhavati.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. Thus it becomes rich in food.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/07/08_bahvannaM_ha_bhavati.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 बह्वन्नं ह भवति ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/07/09_daxiNApravaNe_sabhAm_mApaye.md">
-<details open><summary><h3>09 दक्षिणाप्रवणे सभाम् मापयेत्साऽद्यूता ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दक्षिणाप्रवणे सभां मापयेत्साऽद्यूता ह भवति ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/07/09_daxiNApravaNe_sabhAm_mApaye.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. On a spot which is inclined towards the south, he should have the assembly-room constructed; thus there will be no gambling in it.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/07/09_daxiNApravaNe_sabhAm_mApaye.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 दक्षिणाप्रवणे सभां मापयेत्साऽद्यूता ह भवति ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/07/10_yuvAnastasyA~N_kitavAH_kala.md">
-<details open><summary><h3>10 युवानस्तस्याङ् कितवाः कलहिनः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 युवानस्तस्यां कितवाः कलहिनः प्रमायुका भवन्ति १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/07/10_yuvAnastasyA~N_kitavAH_kala.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 11. (But others say that) in such (an assembly-room) the young people become gamblers, quarrelsome, and die early.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/07/10_yuvAnastasyA~N_kitavAH_kala.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 युवानस्तस्यां कितवाः कलहिनः प्रमायुका भवन्ति १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/07/11_yatra_sarvata_ApaH.md">
-<details open><summary><h3>11 यत्र सर्वत आपः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यत्र सर्वत आपः प्रस्यन्देरन् सा स्वस्त्ययन्यद्यूता च ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/07/11_yatra_sarvata_ApaH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 12. Where the waters flow together from all directions, that assembly-room (situated on such a spot) brings luck and is free from gambling.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/07/11_yatra_sarvata_ApaH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यत्र सर्वत आपः प्रस्यन्देरन् सा स्वस्त्ययन्यद्यूता च ११
 </details>
-</div>
+
