--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/01.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/01.md
@@ -3,52 +3,44 @@ title = "०१"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/01/01_athAtaH_panchayajnAH.md">
-<details open><summary><h3>01 अथातः पञ्चयज्ञाः ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथातः पञ्चयज्ञाः १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/01/01_athAtaH_panchayajnAH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. Now (follow) the five sacrifices:
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/01/01_athAtaH_panchayajnAH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथातः पञ्चयज्ञाः १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/01/02_devayajno_bhUtayajnaH_pitRy.md">
-<details open><summary><h3>02 देवयज्ञो भूतयज्ञः पितृयज्ञो ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 देवयज्ञो भूतयज्ञः पितृयज्ञो ब्रह्मयज्ञो मनुष्ययज्ञ इति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/01/02_devayajno_bhUtayajnaH_pitRy.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. The sacrifice to the Gods, the sacrifice to the Beings, the sacrifice to the Fathers, the sacrifice to Brahman, the sacrifice to men.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/01/02_devayajno_bhUtayajnaH_pitRy.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 देवयज्ञो भूतयज्ञः पितृयज्ञो ब्रह्मयज्ञो मनुष्ययज्ञ इति २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/01/03_tadyadagnau_juhoti_sa.md">
-<details open><summary><h3>03 तद्यदग्नौ जुहोति स ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तद्यदग्नौ जुहोति स देवयज्ञो यद्बलिङ्करोति स भूतयज्ञो यत्पितृभ्यो ददाति स पितृयज्ञो यत्स्वाध्यायमधीयते स ब्रह्मयज्ञो यन्मनुष्येभ्यो ददाति स मनुष्ययज्ञ इति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/01/03_tadyadagnau_juhoti_sa.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. Here now, if he makes oblations over the (sacred) fire, this is the sacrifice to the Gods.
 
@@ -61,29 +53,25 @@ If he studies (Vedic) texts, this is the sacrifice to Brahman.
 If he gives to men, this is the sacrifice to men.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/01/03_tadyadagnau_juhoti_sa.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तद्यदग्नौ जुहोति स देवयज्ञो यद्बलिङ्करोति स भूतयज्ञो यत्पितृभ्यो ददाति स पितृयज्ञो यत्स्वाध्यायमधीयते स ब्रह्मयज्ञो यन्मनुष्येभ्यो ददाति स मनुष्ययज्ञ इति ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/01/04_tAnetAnyajnAnaharahaH_kurvI.md">
-<details open><summary><h3>04 तानेतान्यज्ञानहरहः कुर्वीत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तानेतान्यज्ञानहरहः कुर्वीत ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/01/04_tAnetAnyajnAnaharahaH_kurvI.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. These (five kinds of) sacrifices he should perform every day.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/01/04_tAnetAnyajnAnaharahaH_kurvI.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तानेतान्यज्ञानहरहः कुर्वीत ४
 </details>
-</div>
+
