--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/05.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/05.md
@@ -3,132 +3,112 @@ title = "०५"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/01_athAto-dhyAyopAkaraNam.md">
-<details open><summary><h3>01 अथातोऽध्यायोपाकरणम् ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथातोऽध्यायोपाकरणम् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/01_athAto-dhyAyopAkaraNam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. Now (follows) the Adhyāyopākaraṇa (i.e. the ceremony by which the annual course of study is opened);
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/01_athAto-dhyAyopAkaraNam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथातोऽध्यायोपाकरणम् १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/02_oShadhInAm_prAdurbhAve_shra.md">
-<details open><summary><h3>02 ओषधीनाम् प्रादुर्भावे श्रवणेन ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ओषधीनां प्रादुर्भावे श्रवणेन श्रावणस्य २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/02_oShadhInAm_prAdurbhAve_shra.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . When the herbs appear, (when the moon stands in conjunction) with Śravaṇa, in the Śrāvaṇa month,
 
 [^1]:  5, 2, 3. Perhaps the division of these Sūtras should be altered, so that śrāvaṇasya would belong to Sūtra 2. In this case we should have to translate, '2. When the herbs appear, (on a day on which the moon stands in conjunction) with Śravaṇa. 3. Or on the fifth (Tithi) of the Śrāvaṇa month, under (the Nakṣatra) Hasta.' Comp. śrāvaṇasya pañcamīm, Par. II, 10, 2. If we count the month beginning with the bright fortnight, and assume that the full moon day of Śrāvaṇa falls, as the name of the month implies, on Śravaṇa, the fifth Tithi of that month will fall indeed on Hasta. Comp. on the dates of the Upākaraṇa, Prof. Weber's remarks, Die vedischen Nachrichten von den Naxatra II, 322, and on the special symbolical signification of the Nakṣatra Śravaṇa in this connection, my note on Śāṅkhāyana IV, 5, 2.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/02_oShadhInAm_prAdurbhAve_shra.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ओषधीनां प्रादुर्भावे श्रवणेन श्रावणस्य २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/03_panchamyAM_hastena_vA.md">
-<details open><summary><h3>03 पञ्चम्यां हस्तेन वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पञ्चम्यां हस्तेन वा ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/03_panchamyAM_hastena_vA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. Or on the fifth (Tithi of that month), under (the Nakṣatra) Hasta.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/03_panchamyAM_hastena_vA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 पञ्चम्यां हस्तेन वा ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/04_AjyabhAgau_hutvAjyAhutIrjuh.md">
-<details open><summary><h3>04 आज्यभागौ हुत्वाज्याहुतीर्जुहुयात्सावित्र्यै ब्रह्मणे ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आज्यभागौ हुत्वाज्याहुतीर्जुहुयात्सावित्र्यै ब्रह्मणे श्रद्धायै मेधायै प्रज्ञायै धारणायै सदसस्पतयेऽनुमतये छन्दोभ्य ऋषिभ्यश्चेति ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/04_AjyabhAgau_hutvAjyAhutIrjuh.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4 [^2] . Having sacrificed the two Ājya portions, he should offer Ājya oblations (to the following deities, viz.) Sāvitrī, Brahman, Belief, Insight, Wisdom, Memory, Sadasaspati, Anumati, the metres, and the Ṛṣis.
 
 [^2]:  On the two Ājya portions, comp. above, I, 3, 5; 10, 13 seqq.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/04_AjyabhAgau_hutvAjyAhutIrjuh.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आज्यभागौ हुत्वाज्याहुतीर्जुहुयात्सावित्र्यै ब्रह्मणे श्रद्धायै मेधायै प्रज्ञायै धारणायै सदसस्पतयेऽनुमतये छन्दोभ्य ऋषिभ्यश्चेति ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/05_atha_dadhisaktUnjuhoti.md">
-<details open><summary><h3>05 अथ दधिसक्तून्जुहोति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ दधिसक्तून्जुहोति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/05_atha_dadhisaktUnjuhoti.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. He then sacrifices grains with curds (with the following texts):
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/05_atha_dadhisaktUnjuhoti.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथ दधिसक्तून्जुहोति ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/06_agnimILe_purohitamityekA.md">
-<details open><summary><h3>06 अग्निमीळे पुरोहितमित्येका ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्निमीळे पुरोहितमित्येका ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/06_agnimILe_purohitamityekA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. 'I praise Agni the Purohita' - this one verse (Rig-Veda I, 1, 1),
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/06_agnimILe_purohitamityekA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अग्निमीळे पुरोहितमित्येका ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/07_kuShumbhakastadabravIdAvada.md">
-<details open><summary><h3>07 कुषुम्भकस्तदब्रवीदावदंस्त्वं शकुने भद्रमावद ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुषुम्भकस्तदब्रवीदावदंस्त्वं शकुने भद्रमावद गृणाना जमदग्निना धामन्ते विश्वम्भुवनमधिश्रितं गन्ता नो यज्ञं यज्ञियाः सुशमियो नः स्वो अरणः प्रचक्ष्व विचक्ष्वाग्ने याहि मरुत्सखा यत्ते राजञ्छतं हविरिति द्व्यृचाः ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/07_kuShumbhakastadabravIdAvada.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7 [^3] . 'The Kuṣumbhaka (mungoose?) has said it' - 'If thou criest, O bird, announce luck to us Sung by Jamadagni' - 'In thy abode the whole world rests'
 
@@ -137,330 +117,289 @@ title = "०५"
  - 'Come to our sacrifice, O you that are worthy of sacrifice, with care' - 'Whosoever, be he ours, be he alien' - 'Look on, look about' - 'Come here, Agni, the Maruts' friend' - 'The oblation, O king, cooked for thee' - each time two verses;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/07_kuShumbhakastadabravIdAvada.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 कुषुम्भकस्तदब्रवीदावदंस्त्वं शकुने भद्रमावद गृणाना जमदग्निना धामन्ते विश्वम्भुवनमधिश्रितं गन्ता नो यज्ञं यज्ञियाः सुशमियो नः स्वो अरणः प्रचक्ष्व विचक्ष्वाग्ने याहि मरुत्सखा यत्ते राजञ्छतं हविरिति द्व्यृचाः ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/08_samAnIva_AkUtirityekA.md">
-<details open><summary><h3>08 समानीव आकूतिरित्येका ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समानीव आकूतिरित्येका ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/08_samAnIva_AkUtirityekA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. 'United is your will' (Rig-veda X, 191, 4) - this one verse;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/08_samAnIva_AkUtirityekA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 समानीव आकूतिरित्येका ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/09_tachChaMyorAvRNImaha_ityekA.md">
-<details open><summary><h3>09 तच्छंयोरावृणीमह इत्येका ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तच्छंयोरावृणीमह इत्येका ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/09_tachChaMyorAvRNImaha_ityekA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9 [^4] . 'That blessing and bliss we choose' - this one verse.
 
 [^4]:  This is the last verse of the Ṛk-Saṃhitā in the Bāṣkala Śākhā. See my note on Śāṅkhāyana IV, 5, 9.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/09_tachChaMyorAvRNImaha_ityekA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तच्छंयोरावृणीमह इत्येका ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/10_adhyeShyamANo-dhyApyairanvA.md">
-<details open><summary><h3>10 अध्येष्यमाणोऽध्याप्यैरन्वारब्ध एताभ्यो देवताभ्यो ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अध्येष्यमाणोऽध्याप्यैरन्वारब्ध एताभ्यो देवताभ्यो हुत्वा सौविष्टकृतं हुत्वा दधिसक्तून्प्राश्य ततो मार्जनम् १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/10_adhyeShyamANo-dhyApyairanvA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10 [^5] . When he intends to study (the Veda together with pupils), he should, while the pupils take hold of him, sacrifice to those deities, and sacrifice to (Agni) Sviṣṭakṛt, and partake of the grains with curds; then (follows) the 'cleaning.'
 
 [^5]:  The expression, 'Those deities' would, according to Nārāyaṇa, refer not only to the deities stated in Sūtra 4, but also to the deities of the first and last verses of the Maṇḍalas (Sūtras 6 seqq.). On the grains with curds, comp. Sūtra 5. The technical sense of the 'cleaning' is explained in the Śrauta-sūtra I, 8, 2; comp. Hillebrandt, Das altindische Neu- and Vollmondsopfer, p. 130, note 1. The sacrificer covers his joined hands with the Kuśa grass spread out round the fire, and has water sprinkled on them.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/10_adhyeShyamANo-dhyApyairanvA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अध्येष्यमाणोऽध्याप्यैरन्वारब्ध एताभ्यो देवताभ्यो हुत्वा सौविष्टकृतं हुत्वा दधिसक्तून्प्राश्य ततो मार्जनम् १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/11_apareNAgnim_prAkkUleShu_dar.md">
-<details open><summary><h3>11 अपरेणाग्निम् प्राक्कूलेषु दर्भेषूपविश्योदपात्रे ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अपरेणाग्निं प्राक्कूलेषु दर्भेषूपविश्योदपात्रे दर्भान्कृत्वा ब्रह्माञ्जलिकृतो जपेत् ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/11_apareNAgnim_prAkkUleShu_dar.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 11 [^6] . Sitting down to the west of the fire on Darbha grass, the tufts of which are directed towards the east, he should put Darbha blades into a water-pot, and making a Brahmāñjali (i.e. joining his hands as a sign of veneration for the Brahman), he should murmur (the following texts):
 
 [^6]:  On the term brahmāñjali, comp. Manu II, 71.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/11_apareNAgnim_prAkkUleShu_dar.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अपरेणाग्निं प्राक्कूलेषु दर्भेषूपविश्योदपात्रे दर्भान्कृत्वा ब्रह्माञ्जलिकृतो जपेत् ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/12_OMpUrvA_vyAhRtIH_sAvitrI~n.md">
-<details open><summary><h3>12 ॐपूर्वा व्याहृतीः सावित्रीञ् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ॐपूर्वा व्याहृतीः सावित्रीं च त्रिरभ्यस्य वेदादिमारभेत् १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/12_OMpUrvA_vyAhRtIH_sAvitrI~n.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 12. The Vyāhṛtis preceded by (the syllable) Om (stand first); (these) and the Sāvitrī he should repeat three times and then recite the beginning of the Veda.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/12_OMpUrvA_vyAhRtIH_sAvitrI~n.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ॐपूर्वा व्याहृतीः सावित्रीं च त्रिरभ्यस्य वेदादिमारभेत् १२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/13_tathotsarge.md">
-<details open><summary><h3>13 तथोत्सर्गे ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तथोत्सर्गे १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/13_tathotsarge.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 13. In the same way at the Utsarga (i.e. at the ceremony performed at the end of the term of Vedic study).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/13_tathotsarge.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तथोत्सर्गे १३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/14_ShaNmAsAnadhIyIta.md">
-<details open><summary><h3>14 षण्मासानधीयीत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 षण्मासानधीयीत १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/14_ShaNmAsAnadhIyIta.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 14. He should study six months.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/14_ShaNmAsAnadhIyIta.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 षण्मासानधीयीत १४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/15_samAvRtto_brahmachArikalpen.md">
-<details open><summary><h3>15 समावृत्तो ब्रह्मचारिकल्पेन ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समावृत्तो ब्रह्मचारिकल्पेन १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/15_samAvRtto_brahmachArikalpen.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 15 [^7] . One who has performed the Samāvartana (should live during that time) according to the regulations for Brahmacārins.
 
 [^7]:  On the Samāvartana, see below, chap. 8 seq. The restrictions referred to consist in the interdiction of eating honey and meat, of having sexual intercourse, of sleeping in a bedstead and in the day-time, &c. Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/15_samAvRtto_brahmachArikalpen.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 समावृत्तो ब्रह्मचारिकल्पेन १५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/16_yathAnyAyamitare.md">
-<details open><summary><h3>16 यथान्यायमितरे ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यथान्यायमितरे १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/16_yathAnyAyamitare.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 16 [^8] . The others according to the rules.
 
 [^8]:  I.e. the Brahmacārins.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/16_yathAnyAyamitare.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यथान्यायमितरे १६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/17_jAyopeyotyeke.md">
-<details open><summary><h3>17 जायोपेयोत्येके ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जायोपेयोत्येके १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/17_jAyopeyotyeke.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 17 [^9] . Some say that he should have intercourse with his wife.
 
 [^9]:  I.e. one who has performed the Samāvartana.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/17_jAyopeyotyeke.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 जायोपेयोत्येके १७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/18_prAjApatyan_tat.md">
-<details open><summary><h3>18 प्राजापत्यन् तत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राजापत्यं तत् १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/18_prAjApatyan_tat.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 18. That (is a practice) sacred to Prajāpati.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/18_prAjApatyan_tat.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 प्राजापत्यं तत् १८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/19_vArShikamityetadAchaxate.md">
-<details open><summary><h3>19 वार्षिकमित्येतदाचक्षते ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वार्षिकमित्येतदाचक्षते १९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/19_vArShikamityetadAchaxate.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 19. This (Upākaraṇa) they call vārshika (i.e. belonging to the rainy season).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/19_vArShikamityetadAchaxate.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 वार्षिकमित्येतदाचक्षते १९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/20_madhyamAShTakAyAmetAbhyo_de.md">
-<details open><summary><h3>20 मध्यमाष्टकायामेताभ्यो देवताभ्योऽन्नेन हुत्वाऽपोऽभ्यवयन्ति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मध्यमाष्टकायामेताभ्यो देवताभ्योऽन्नेन हुत्वाऽपोऽभ्यवयन्ति २०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/20_madhyamAShTakAyAmetAbhyo_de.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 20 [^10] . On the middle Aṣṭakā they offer food to those deities, and descend into water.
 
 [^10]:  After the six months (Sūtra 14) have elapsed, on the Aṣṭakā of Māgha.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/20_madhyamAShTakAyAmetAbhyo_de.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 मध्यमाष्टकायामेताभ्यो देवताभ्योऽन्नेन हुत्वाऽपोऽभ्यवयन्ति २०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/21_etA_eva_taddevatAstarpayant.md">
-<details open><summary><h3>21 एता एव तद्देवतास्तर्पयन्ति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एता एव तद्देवतास्तर्पयन्ति २१
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/21_etA_eva_taddevatAstarpayant.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 21. They satiate those same deities (with water oblations),
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/21_etA_eva_taddevatAstarpayant.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 एता एव तद्देवतास्तर्पयन्ति २१
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/22_AchAryAnRShInpitRRMshcha.md">
-<details open><summary><h3>22 आचार्यानृषीन्पितॄंश्च ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आचार्यानृषीन्पितॄंश्च २२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/22_AchAryAnRShInpitRRMshcha.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 22. (And besides) the Ācāryas, the Ṛṣis, and the Fathers.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/22_AchAryAnRShInpitRRMshcha.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 आचार्यानृषीन्पितॄंश्च २२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/05/23_etadutsarjanam.md">
-<details open><summary><h3>23 एतदुत्सर्जनम् ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एतदुत्सर्जनम् २३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/05/23_etadutsarjanam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 23 [^11] . This is the Utsarjana.
 
 [^11]:  Or Utsarga, see Sūtra 13.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/05/23_etadutsarjanam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 एतदुत्सर्जनम् २३
 </details>
-</div>
+
