--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/06.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/06.md
@@ -3,168 +3,142 @@ title = "०६"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/06/01_atha_kAmyAnAM_sthAne.md">
-<details open><summary><h3>01 अथ काम्यानां स्थाने ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ काम्यानां स्थाने काम्याः १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/06/01_atha_kAmyAnAM_sthAne.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Instead of the Kāmya ceremonies (i.e. the ceremonies, prescribed in the Śrauta-sūtra, by which special wishes are attained, oblations of) for the attainment of those wishes, 
 
 [^1]:  6, 1. Nārāyaṇa divides this Sūtra into two: 1. atha kāmyānāṃ sthāne kāmyāḥ; 2. caravaḥ.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/06/01_atha_kAmyAnAM_sthAne.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथ काम्यानां स्थाने काम्याः १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/06/02_charavaH.md">
-<details open><summary><h3>02 चरवः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चरवः २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/06/02_charavaH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. He attains (thereby) those same wishes.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/06/02_charavaH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 चरवः २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/06/03_tAneva_kAmAnApnoti.md">
-<details open><summary><h3>03 तानेव कामानाप्नोति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तानेव कामानाप्नोति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/06/03_tAneva_kAmAnApnoti.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 boiled (rice) grains (should be made by the Gṛhya sacrificer).
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/06/03_tAneva_kAmAnApnoti.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तानेव कामानाप्नोति ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/06/04_atha_vyAdhitasyAturasya_yax.md">
-<details open><summary><h3>04 अथ व्याधितस्यातुरस्य यक्ष्मगृहीतस्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ व्याधितस्यातुरस्य यक्ष्मगृहीतस्य वा षडाहुतिश्चरुः ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/06/04_atha_vyAdhitasyAturasya_yax.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. For a person that is sick, or suffering, or affected with consumption, a mess of boiled (rice) grains in six oblations (should he offered) - 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/06/04_atha_vyAdhitasyAturasya_yax.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथ व्याधितस्यातुरस्य यक्ष्मगृहीतस्य वा षडाहुतिश्चरुः ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/06/05_munchAmi_tvA_haviShA.md">
-<details open><summary><h3>05 मुञ्चामि त्वा हविषा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मुञ्चामि त्वा हविषा जीवनायकमित्येतेन ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/06/05_munchAmi_tvA_haviShA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. With this (hymn), 'I loosen thee by sacrificial food, that thou mayst live' (Rig-veda X, 161).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/06/05_munchAmi_tvA_haviShA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 मुञ्चामि त्वा हविषा जीवनायकमित्येतेन ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/06/06_svapnamamanojnan_dRShTvAdyA.md">
-<details open><summary><h3>06 स्वप्नममनोज्ञन् दृष्ट्वाद्या नो ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वप्नममनोज्ञं दृष्ट्वाद्या नो देव सवितरिति द्वाभ्यां यच्च गोषु दुःस्वप्न्यमिति पञ्चभिरादित्यमुपतिष्ठेत ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/06/06_svapnamamanojnan_dRShTvAdyA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. If he has seen a bad dream, he should worship the sun with the two verses, 'To-day, god Savitṛ' (Rig-veda V, 82, 4, 5), and with the five verses, 'What bad dreams there are among the cows' (Rig-veda VIII, 47, 14 seqq.),
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/06/06_svapnamamanojnan_dRShTvAdyA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 स्वप्नममनोज्ञं दृष्ट्वाद्या नो देव सवितरिति द्वाभ्यां यच्च गोषु दुःस्वप्न्यमिति पञ्चभिरादित्यमुपतिष्ठेत ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/06/07_yo_me_rAjanyujyo.md">
-<details open><summary><h3>07 यो मे राजन्युज्यो ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यो मे राजन्युज्यो वा सखा वेति वा ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/06/07_yo_me_rAjanyujyo.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. Or with (the verse), 'Whosoever, O king, be it a companion or a friend' (Rig-veda II, 28, 10).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/06/07_yo_me_rAjanyujyo.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यो मे राजन्युज्यो वा सखा वेति वा ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/06/08_xutvA_jRmbhitvA-manojnan_dR.md">
-<details open><summary><h3>08 क्षुत्वा जृम्भित्वाऽमनोज्ञन् दृष्ट्वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्षुत्वा जृम्भित्वाऽमनोज्ञं दृष्ट्वा पापकं गन्धमाघ्रायाक्षिस्पन्दने कर्णध्वनने च सुचक्षा अहमक्षीभ्यां भूयासं सुवर्चा मुखेन सुश्रुत्कर्णाभ्यां मयि दक्षक्रतू इति जपेत् ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/06/08_xutvA_jRmbhitvA-manojnan_dR.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. When he has sneezed, yawned, seen a disagreeable sight, smelt a bad smell, when his eye palpitates, and when he hears noises in his ears, he should murmur, 'Well-eyed may I become with my eyes, well-vigoured with my face, well-hearing with my ears. May will and insight dwell in me!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/06/08_xutvA_jRmbhitvA-manojnan_dR.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 क्षुत्वा जृम्भित्वाऽमनोज्ञं दृष्ट्वा पापकं गन्धमाघ्रायाक्षिस्पन्दने कर्णध्वनने च सुचक्षा अहमक्षीभ्यां भूयासं सुवर्चा मुखेन सुश्रुत्कर्णाभ्यां मयि दक्षक्रतू इति जपेत् ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/06/09_agamanIyA~N_gatvAyAjyaM_yAj.md">
-<details open><summary><h3>09 अगमनीयाङ् गत्वायाज्यं याजयित्वाभोज्यम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अगमनीयां गत्वायाज्यं याजयित्वाभोज्यं भुक्त्वाप्रतिग्राह्यं प्रतिगृह्य चैत्यं यूपं चोपहत्य पुनर्मामैत्विन्द्रियं पुनरायुः पुनर्भगः
 । पुनर्द्रविणमैतु मां पुनर्ब्राह्मणमैतु मां स्वाहा । इमे ये धिष्ण्यासो अग्नयो यथास्थानमिह कल्पताम् । वैश्वानरो वावृधानोऽन्तर्यच्छतु मे मनो हृद्यन्तरममृतस्य केतुः स्वाहेत्याज्याहुती जुहुयात् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/06/09_agamanIyA~N_gatvAyAjyaM_yAj.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8 [^2] . If he has gone to a wife to whom he ought not to go, or if he has performed a sacrifice for a person for whom he ought not to do so, or has eaten forbidden food, or accepted what he ought not to accept, or pushed against a piled-up (fire altar) or against a sacrificial post, he should sacrifice two Ājya oblations with (the verses),
 
@@ -175,49 +149,42 @@ boiled (rice) grains (should be made by the Gṛhya sacrificer).
 'These fires that are stationed on the (altars called) Dhiṣṇyās, may they be here in good order, each on its right place. (Agni) Vaiśvānara, grown strong, the standard of immortality, may he govern my mind in my heart. Svāhā!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/06/09_agamanIyA~N_gatvAyAjyaM_yAj.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अगमनीयां गत्वायाज्यं याजयित्वाभोज्यं भुक्त्वाप्रतिग्राह्यं प्रतिगृह्य चैत्यं यूपं चोपहत्य पुनर्मामैत्विन्द्रियं पुनरायुः पुनर्भगः
 । पुनर्द्रविणमैतु मां पुनर्ब्राह्मणमैतु मां स्वाहा । इमे ये धिष्ण्यासो अग्नयो यथास्थानमिह कल्पताम् । वैश्वानरो वावृधानोऽन्तर्यच्छतु मे मनो हृद्यन्तरममृतस्य केतुः स्वाहेत्याज्याहुती जुहुयात् ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/06/10_samidhau_vA.md">
-<details open><summary><h3>10 समिधौ वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समिधौ वा १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/06/10_samidhau_vA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. Or (he may sacrifice) two pieces of wood,
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/06/10_samidhau_vA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 समिधौ वा १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/06/11_japedvA.md">
-<details open><summary><h3>11 जपेद्वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जपेद्वा ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/06/11_japedvA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. Or murmur (the same two verses without any oblation).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/06/11_japedvA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 जपेद्वा ११
 </details>
-</div>
+
