--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/07.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/07.md
@@ -3,199 +3,169 @@ title = "०७"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/07/01_avyAdhitanchatsvapantamAdit.md">
-<details open><summary><h3>01 अव्याधितञ्चत्स्वपन्तमादित्योऽभ्यस्तमियाद्वाग्यतोऽनुपविशन्रात्रिशेषम्भूत्वा येन सूर्यज्योतिषा ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अव्याधितञ्चत्स्वपन्तमादित्योऽभ्यस्तमियाद्वाग्यतोऽनुपविशन्रात्रिशेषम्भूत्वा येन सूर्यज्योतिषा बाधसे तम इति पञ्चभिरादित्यमुपतिष्ठेत १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/07/01_avyAdhitanchatsvapantamAdit.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. If the sun sets while he is sleeping without being sick, he should spend the rest of the night keeping silence, without sitting down, and should worship the sun (when it rises) with the five (verses), 'The light, O sun, by which thou destroyest darkness' (Rig-veda X, 37, 4 seq.).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/07/01_avyAdhitanchatsvapantamAdit.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अव्याधितञ्चत्स्वपन्तमादित्योऽभ्यस्तमियाद्वाग्यतोऽनुपविशन्रात्रिशेषम्भूत्वा येन सूर्यज्योतिषा बाधसे तम इति पञ्चभिरादित्यमुपतिष्ठेत १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/07/02_abhyudiyAchchedakarmashrAnt.md">
-<details open><summary><h3>02 अभ्युदियाच्चेदकर्मश्रान्तमनभिरूपेण कर्मणा वाग्यत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभ्युदियाच्चेदकर्मश्रान्तमनभिरूपेण कर्मणा वाग्यत इति समानमुत्तरापराभिश्चतसृभिरुपस्थानम् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/07/02_abhyudiyAchchedakarmashrAnt.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . If (the sun) rises (while he is sleeping without being sick), being fatigued without having done any work, or having done work that is not becoming, he should keep silence, &c., as before, and perform his worship (to the sun) with the following four (verses, Rig-veda X, 37, 9 seq.).
 
 [^1]:  7, 2. Perhaps we should correct the text, akarmaśrāntam anabhirūpeṇa karmaṇā vā vāgyata iti, &c.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/07/02_abhyudiyAchchedakarmashrAnt.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अभ्युदियाच्चेदकर्मश्रान्तमनभिरूपेण कर्मणा वाग्यत इति समानमुत्तरापराभिश्चतसृभिरुपस्थानम् २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/07/03_yajnopavItI_nityodakaH_sand.md">
-<details open><summary><h3>03 यज्ञोपवीती नित्योदकः सन्ध्यामुपासीत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यज्ञोपवीती नित्योदकः सन्ध्यामुपासीत वाग्यतः ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/07/03_yajnopavItI_nityodakaH_sand.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3 [^2] . Invested with the sacrificial cord, constantly fulfilling the prescribed duties regarding the use of water, he should perform the Sandhyā (or twilight devotion), observing silence.
 
 [^2]:  3 seq. See Śāṅkhāyana-Gṛhya II, 9. There the same word anvaṣṭamadeśa occurs.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/07/03_yajnopavItI_nityodakaH_sand.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यज्ञोपवीती नित्योदकः सन्ध्यामुपासीत वाग्यतः ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/07/04_sAyamuttarAparAbhimukho-nva.md">
-<details open><summary><h3>04 सायमुत्तरापराभिमुखोऽन्वष्टमदेशं सावित्रीञ् जपेदर्धास्तमिते ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सायमुत्तरापराभिमुखोऽन्वष्टमदेशं सावित्रीं जपेदर्धास्तमिते मण्डल आनक्षत्रदर्शनात् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/07/04_sAyamuttarAparAbhimukho-nva.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. In the evening he should, turning his face to the north-west, to the region between the chief (west) point and the intermediate (north-western) point (of the horizon), murmur the Sāvitrī, (beginning) when the sun is half set, until the stars appear.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/07/04_sAyamuttarAparAbhimukho-nva.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सायमुत्तरापराभिमुखोऽन्वष्टमदेशं सावित्रीं जपेदर्धास्तमिते मण्डल आनक्षत्रदर्शनात् ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/07/05_evam_prAtaH.md">
-<details open><summary><h3>05 एवम् प्रातः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं प्रातः ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/07/05_evam_prAtaH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. In the same way in the morning - 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/07/05_evam_prAtaH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 एवं प्रातः ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/07/06_prA~NmukhastiShThannAmaNDal.md">
-<details open><summary><h3>06 प्राङ्मुखस्तिष्ठन्नामण्डलदर्शनात् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राङ्मुखस्तिष्ठन्नामण्डलदर्शनात् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/07/06_prA~NmukhastiShThannAmaNDal.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. Standing, with his face turned to the east, until the disk (of the sun) appears.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/07/06_prA~NmukhastiShThannAmaNDal.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 प्राङ्मुखस्तिष्ठन्नामण्डलदर्शनात् ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/07/07_kapotashchedagAramupahanyAd.md">
-<details open><summary><h3>07 कपोतश्चेदगारमुपहन्यादनुपतेद्वा देवाः कपोत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कपोतश्चेदगारमुपहन्यादनुपतेद्वा देवाः कपोत इति प्रत्यृचं जुहुयाज्जपेद्वा ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/07/07_kapotashchedagAramupahanyAd.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. If a dove flies against his house or towards it, he should sacrifice with (the hymn), 'O gods, the dove' (Rig-veda X, 165), verse by verse, or should murmur (that hymn).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/07/07_kapotashchedagAramupahanyAd.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 कपोतश्चेदगारमुपहन्यादनुपतेद्वा देवाः कपोत इति प्रत्यृचं जुहुयाज्जपेद्वा ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/07/08_vayamu_tvA_pathaspata.md">
-<details open><summary><h3>08 वयमु त्वा पथस्पत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वयमु त्वा पथस्पत इत्यर्थचर्याञ्चरिष्यन् ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/07/08_vayamu_tvA_pathaspata.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. 'We have thee, O Lord of the path' (Rig-veda VI, 53) - if he is going out for doing some business.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/07/08_vayamu_tvA_pathaspata.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 वयमु त्वा पथस्पत इत्यर्थचर्याञ्चरिष्यन् ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/07/09_sampUShanviduSheti_naShTama.md">
-<details open><summary><h3>09 सम्पूषन्विदुषेति नष्टमधिजिगमिषन्मूळ्हो वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सम्पूषन्विदुषेति नष्टमधिजिगमिषन्मूळ्हो वा ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/07/09_sampUShanviduSheti_naShTama.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9 [^3] . 'Bring us together, Pūṣan, with a knowing one' (Rig-Veda VI, 54) - if he wishes to find something lost, or if he has strayed.
 
 [^3]:  Mūlha may either mean, 'having lost his way,' or 'bewildered in his mind.' Nārāyaṇa prefers the latter explanation ('prajñāhīnaḥ').
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/07/09_sampUShanviduSheti_naShTama.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सम्पूषन्विदुषेति नष्टमधिजिगमिषन्मूळ्हो वा ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/07/10_sampUShannadhvana_iti_mahAn.md">
-<details open><summary><h3>10 सम्पूषन्नध्वन इति महान्तमध्वानमेष्यन्प्रतिभयं ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सम्पूषन्नध्वन इति महान्तमध्वानमेष्यन्प्रतिभयं वा १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/07/10_sampUShannadhvana_iti_mahAn.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. 'Journey over the ways, Pūṣan' (Rig-veda I, 42) - if he is going out on a long or dangerous way.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/07/10_sampUShannadhvana_iti_mahAn.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सम्पूषन्नध्वन इति महान्तमध्वानमेष्यन्प्रतिभयं वा १०
 </details>
-</div>
+
