--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/08.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/08.md
@@ -3,210 +3,178 @@ title = "०८"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/01_athaitAnyupakalpayIta_samAv.md">
-<details open><summary><h3>01 अथैतान्युपकल्पयीत समावर्त्यमाने मणिङ् ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथैतान्युपकल्पयीत समावर्त्यमाने मणिं कुण्डले वस्त्रयुगं छत्रमुपानद्युगं दण्डं स्रजमुन्मर्दनमनुलेपनमाञ्जनमुष्णीषमित्यात्मने चाचार्याय च १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/01_athaitAnyupakalpayIta_samAv.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. Now when returning (home from his teacher) he should get the following things, viz. a jewel (to be tied round the neck), two ear-rings, a pair of garments, a parasol, a pair of shoes, a staff, a wreath, (pounded seed of the Karañja fruit) for rubbing with, ointment, eye salve, a turban; (all that) for himself and for the teacher.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/01_athaitAnyupakalpayIta_samAv.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथैतान्युपकल्पयीत समावर्त्यमाने मणिं कुण्डले वस्त्रयुगं छत्रमुपानद्युगं दण्डं स्रजमुन्मर्दनमनुलेपनमाञ्जनमुष्णीषमित्यात्मने चाचार्याय च १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/02_yadyubhayorna_vindetAchAryA.md">
-<details open><summary><h3>02 यद्युभयोर्न विन्देताचार्यायैव ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यद्युभयोर्न विन्देताचार्यायैव २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/02_yadyubhayorna_vindetAchAryA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. If he cannot get it for both, only for the teacher.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/02_yadyubhayorna_vindetAchAryA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यद्युभयोर्न विन्देताचार्यायैव २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/03_samidhan_tvAharedaparAjitAy.md">
-<details open><summary><h3>03 समिधन् त्वाहरेदपराजितायान्दिशि यज्ञियस्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समिधं त्वाहरेदपराजितायान्दिशि यज्ञियस्य वृक्षस्य ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/03_samidhan_tvAharedaparAjitAy.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. He then should get a piece of wood of a tree which is sacrificially pure, in a north-eastern direction - 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/03_samidhan_tvAharedaparAjitAy.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 समिधं त्वाहरेदपराजितायान्दिशि यज्ञियस्य वृक्षस्य ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/04_ArdrAmannAdyakAmaH_puShTikA.md">
-<details open><summary><h3>04 आर्द्रामन्नाद्यकामः पुष्टिकामस्तेजस्कामो वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आर्द्रामन्नाद्यकामः पुष्टिकामस्तेजस्कामो वा ब्रह्मवर्चसकाम उपवाताम् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/04_ArdrAmannAdyakAmaH_puShTikA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. Sappy (wood) if he wishes for the enjoyment of food, or for prosperity, or for splendour; dry (wood), if for holy lustre,
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/04_ArdrAmannAdyakAmaH_puShTikA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आर्द्रामन्नाद्यकामः पुष्टिकामस्तेजस्कामो वा ब्रह्मवर्चसकाम उपवाताम् ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/05_ubhayImubhayakAmaH.md">
-<details open><summary><h3>05 उभयीमुभयकामः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उभयीमुभयकामः ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/05_ubhayImubhayakAmaH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. (Wood) which is both (sappy and dry, in its different parts), if (he wishes) for both.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/05_ubhayImubhayakAmaH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उभयीमुभयकामः ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/06_upari_samidha~N_kRtvA.md">
-<details open><summary><h3>06 उपरि समिधङ् कृत्वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उपरि समिधं कृत्वा गामन्नञ्च ब्राह्मणेभ्यः प्रदाय गौदानिकं कर्म कुर्वीत ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/06_upari_samidha~N_kRtvA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6 [^1] . Having put the piece of wood on high, and having given a cow and food to the Brāhmaṇas, he should perform the ceremony of shaving the beard.
 
 [^1]:  8, 6. 'On high' means 'not on the ground' (Nārāyaṇa). On the gaudānikaṃ karma (the shaving of the beard), comp. above, Adhyāya I, Kaṇḍikā 18. The word 'ceremony' would mean here, according to Nārāyaṇa, that he should perform the rite alone, without observing such prescriptions as stated above, I, 18, 7.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/06_upari_samidha~N_kRtvA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उपरि समिधं कृत्वा गामन्नञ्च ब्राह्मणेभ्यः प्रदाय गौदानिकं कर्म कुर्वीत ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/07_Atmani_mantrAntsannamayet.md">
-<details open><summary><h3>07 आत्मनि मन्त्रान्त्सन्नमयेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आत्मनि मन्त्रान्त्सन्नमयेत् ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/07_Atmani_mantrAntsannamayet.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7 [^2] . He should alter the texts so that they refer to himself.
 
 [^2]:  Thus, instead of 'Herb! protect him!' (I, 17, 8) he is to say, 'Herb! protect me!' and so on.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/07_Atmani_mantrAntsannamayet.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आत्मनि मन्त्रान्त्सन्नमयेत् ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/08_ekaklItakena.md">
-<details open><summary><h3>08 एकक्लीतकेन ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एकक्लीतकेन ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/08_ekaklItakena.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8 [^3] . With Ekaklītaka (he should perform the rubbing).
 
 [^3]:  Ekaklītaka is, according to Nārāyaṇa and the Prayogaratna, the seed of such a Karañja fruit (Pongamia Glabra, Vent.) which contains only one grain of seed. Such grains are pounded before he rubs himself therewith.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/08_ekaklItakena.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 एकक्लीतकेन ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/09_shItoShNAbhiradbhiH_snAtvA_.md">
-<details open><summary><h3>09 शीतोष्णाभिरद्भिः स्नात्वा युवं ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शीतोष्णाभिरद्भिः स्नात्वा युवं वस्त्राणि पीवसा वसाथे इत्यहते वाससी आच्छाद्याश्मनस्तेजोऽसि चक्षुर्मे पाहीति चक्षुषी आञ्जयीत ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/09_shItoShNAbhiradbhiH_snAtvA_.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. Having washed himself with lukewarm water, and having put on two (new) garments which have not yet been washed, with (the verse), 'Garments with fat splendour you put on, (Mitra and Varuṇa)' (Rig-veda I, 152, 1); he should anoint his eyes with (the words), 'The sharpness of the stone art thou; protect my eye.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/09_shItoShNAbhiradbhiH_snAtvA_.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 शीतोष्णाभिरद्भिः स्नात्वा युवं वस्त्राणि पीवसा वसाथे इत्यहते वाससी आच्छाद्याश्मनस्तेजोऽसि चक्षुर्मे पाहीति चक्षुषी आञ्जयीत ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/10_ashmanastejo-si_shrotram_me.md">
-<details open><summary><h3>10 अश्मनस्तेजोऽसि श्रोत्रम् मे ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अश्मनस्तेजोऽसि श्रोत्रं मे पाहि इति कुण्डले आबध्नीत १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/10_ashmanastejo-si_shrotram_me.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. With (the words), 'The sharpness of the stone art thou; protect my ear' - he should tie on the two ear-rings.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/10_ashmanastejo-si_shrotram_me.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अश्मनस्तेजोऽसि श्रोत्रं मे पाहि इति कुण्डले आबध्नीत १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/11_anulepanena_pANI_pralipya.md">
-<details open><summary><h3>11 अनुलेपनेन पाणी प्रलिप्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनुलेपनेन पाणी प्रलिप्य मुखमग्रे ब्राह्मणोऽनुलिम्पेद्बाहू राजन्य उदरं वैश्य उपस्थं स्त्र्यूरू सरणजीविनः ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/11_anulepanena_pANI_pralipya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 11. After having salved his two hands with ointment, a Brāhmaṇa should salve his head first,
 
@@ -219,109 +187,93 @@ title = "०८"
 15. Persons who gain their livelihood by running, their thighs.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/11_anulepanena_pANI_pralipya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अनुलेपनेन पाणी प्रलिप्य मुखमग्रे ब्राह्मणोऽनुलिम्पेद्बाहू राजन्य उदरं वैश्य उपस्थं स्त्र्यूरू सरणजीविनः ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/12_anArttAsyanArto-ham_bhUyAsa.md">
-<details open><summary><h3>12 अनार्त्तास्यनार्तोऽहम् भूयासमिति स्रजमपि ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनार्त्तास्यनार्तोऽहं भूयासमिति स्रजमपि बध्नीत न मालोक्ताम् १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/12_anArttAsyanArto-ham_bhUyAsa.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 16. With (the formula), 'Free from pain art thou, free from pain may I become' - he should put on the wreath.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/12_anArttAsyanArto-ham_bhUyAsa.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अनार्त्तास्यनार्तोऽहं भूयासमिति स्रजमपि बध्नीत न मालोक्ताम् १२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/13_mAleti_chedbrUyuH_sragityab.md">
-<details open><summary><h3>13 मालेति चेद्ब्रूयुः स्रगित्यभिधापयीत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मालेति चेद्ब्रूयुः स्रगित्यभिधापयीत १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/13_mAleti_chedbrUyuH_sragityab.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 17. Not (such a wreath) which is called mālā.
 
 18. If they call it mālā, he should cause them to call it sraj.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/13_mAleti_chedbrUyuH_sragityab.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 मालेति चेद्ब्रूयुः स्रगित्यभिधापयीत १३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/14_devAnAm_pratiShThe_sthaH.md">
-<details open><summary><h3>14 देवानाम् प्रतिष्ठे स्थः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 देवानां प्रतिष्ठे स्थः सर्वतो मा पातमित्युपानहावास्थाय दिवश्छद्मासीति च्छत्रभादत्ते १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/14_devAnAm_pratiShThe_sthaH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 19. With (the formula), 'The standing-places of the gods are you; protect me from all sides' - he steps into the shoes, and with (the formula), 'The heaven's covering art thou' - he takes the parasol.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/14_devAnAm_pratiShThe_sthaH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 देवानां प्रतिष्ठे स्थः सर्वतो मा पातमित्युपानहावास्थाय दिवश्छद्मासीति च्छत्रभादत्ते १४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/15_veNurasi_vAnaspatyo-si_sarv.md">
-<details open><summary><h3>15 वेणुरसि वानस्पत्योऽसि सर्वतो ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वेणुरसि वानस्पत्योऽसि सर्वतो मा पाहीति वैणवं दण्डम् १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/15_veNurasi_vAnaspatyo-si_sarv.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 20. With (the formula), 'Reed thou art; from the tree thou descendest; protect me from all sides' - (he takes) a staff of reed.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/15_veNurasi_vAnaspatyo-si_sarv.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 वेणुरसि वानस्पत्योऽसि सर्वतो मा पाहीति वैणवं दण्डम् १५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/08/16_AyuShyamiti_sUktena_maNi~N.md">
-<details open><summary><h3>16 आयुष्यमिति सूक्तेन मणिङ् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आयुष्यमिति सूक्तेन मणिं कण्ठे प्रतिमुच्योष्णीषं कृत्वा तिष्ठन्त्समिधमादध्यात् १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/08/16_AyuShyamiti_sUktena_maNi~N.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 21 [^4] . Having with the hymn 'Giving life' tied the jewel to his neck and arranged the turban (on his head), he should standing put the piece of wood (on the fire).
 
 [^4]:  On the hymn beginning with the words 'Giving life,' see Prof. Stenzler's note on this Sūtra. Its first verse is identical with Vājasaneyi Saṃhitā XXXIV, 50 (comp. also Śāṅkhāyana-Gṛhya III, 1, 7), and so are most of its verses found in that Saṃhitā or in the Atharva-veda; the whole of it occurs among the Rig-veda Khilas (vol. vi, p. 25, 2-12).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/08/16_AyuShyamiti_sUktena_maNi~N.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आयुष्यमिति सूक्तेन मणिं कण्ठे प्रतिमुच्योष्णीषं कृत्वा तिष्ठन्त्समिधमादध्यात् १६
 </details>
-</div>
+
