--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/10.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/10.md
@@ -3,220 +3,187 @@ title = "१०"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/10/01_gurave_prasraxyamANo_nAma.md">
-<details open><summary><h3>01 गुरवे प्रस्रक्ष्यमाणो नाम ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गुरवे प्रस्रक्ष्यमाणो नाम प्रब्रुवीत १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/10/01_gurave_prasraxyamANo_nAma.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . If (a student) wishes to be dismissed (by his teacher), he should pronounce before the teacher his (i.e. the teacher's?) name - 
 
 [^1]:  10, 1. Nārāyaṇa refers this rule to a student who has performed the Samāvartana and wishes to go away. But a comparison of Śāṅkhāyana-Gṛhya II, 18 seems to make it probable that the ceremony described here has nothing to do with the Samāvartana.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/10/01_gurave_prasraxyamANo_nAma.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 गुरवे प्रस्रक्ष्यमाणो नाम प्रब्रुवीत १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/10/02_idaM_vatsyAmo_bho.md">
-<details open><summary><h3>02 इदं वत्स्यामो भो ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इदं वत्स्यामो भो३ इति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/10/02_idaM_vatsyAmo_bho.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . (And should say), 'Here we will dwell, sir!'
 
 [^2]:  Śāṅkhāyana II, 18, 1. Sāṅkh. has ahaṃ vatsyāmi; Āśvalāyana, idaṃ vatsyārnaḥ. The commentator says that instead of idaṃ the Āśrama is to be named which the student chooses to enter upon, for instance, Devadatta, we will dwell in the state of a householder, sir!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/10/02_idaM_vatsyAmo_bho.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 इदं वत्स्यामो भो३ इति २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/10/03_uchchairUrdhvan_nAmnaH.md">
-<details open><summary><h3>03 उच्चैरूर्ध्वन् नाम्नः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उच्चैरूर्ध्वं नाम्नः ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/10/03_uchchairUrdhvan_nAmnaH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. With a loud voice (the words) following after the name.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/10/03_uchchairUrdhvan_nAmnaH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उच्चैरूर्ध्वं नाम्नः ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/10/04_prANApAnayorupAMshu.md">
-<details open><summary><h3>04 प्राणापानयोरुपांशु ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राणापानयोरुपांशु ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/10/04_prANApAnayorupAMshu.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. 'Of inhalation and exhalation' - (this he says) with a low voice,
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/10/04_prANApAnayorupAMshu.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 प्राणापानयोरुपांशु ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/10/05_A_mandrairindra_haribhiriti.md">
-<details open><summary><h3>05 आ मन्द्रैरिन्द्र हरिभिरिति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आ मन्द्रैरिन्द्र हरिभिरिति च ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/10/05_A_mandrairindra_haribhiriti.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. And (the verse), 'Come hither, Indra, with thy lovely-sounding, fallow-coloured (horses)' (Rig-veda III, 45, 1).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/10/05_A_mandrairindra_haribhiriti.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आ मन्द्रैरिन्द्र हरिभिरिति च ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/10/06_ato_vRddho_japati.md">
-<details open><summary><h3>06 अतो वृद्धो जपति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अतो वृद्धो जपति प्राणापानयोरुरुव्यचास्तया प्रपद्ये देवाय सवित्रे परिददामीत्यृचं च ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/10/06_ato_vRddho_japati.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6 [^3] . The aged one then murmurs, 'To inhalation and exhalation I, the wide-extended one, resort with thee. To the god Savitṛ I give thee in charge' - and the verse.
 
 [^3]:  I have translated, as Prof. Stenzler has also done, according to Śāṅkhāyana's reading, prāṇāpānā . . . tvayā. The 'aged one' is the teacher, the verse that which is quoted in Sūtra 5.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/10/06_ato_vRddho_japati.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अतो वृद्धो जपति प्राणापानयोरुरुव्यचास्तया प्रपद्ये देवाय सवित्रे परिददामीत्यृचं च ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/10/07_samApyaOM_prAk_svastIti.md">
-<details open><summary><h3>07 समाप्यॐ प्राक् स्वस्तीति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समाप्यॐ प्राक् स्वस्तीति जपित्वा महित्रीणामित्यनुमन्त्र्य ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/10/07_samApyaOM_prAk_svastIti.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. When he has finished (that verse), and has muttered, 'Om! Forwards! Blessing!' and recited (over the student the hymn), 'The great bliss of the three' (Rig-veda X, 185) - (he should dismiss him).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/10/07_samApyaOM_prAk_svastIti.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 समाप्यॐ प्राक् स्वस्तीति जपित्वा महित्रीणामित्यनुमन्त्र्य ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/10/08_evamatisRShTasya_na_kutashc.md">
-<details open><summary><h3>08 एवमतिसृष्टस्य न कुतश्चिद्भयम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवमतिसृष्टस्य न कुतश्चिद्भयं भवतीति विज्ञायते ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/10/08_evamatisRShTasya_na_kutashc.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. On one who has been thus dismissed, danger comes from no side - thus it is understood (in the Śruti).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/10/08_evamatisRShTasya_na_kutashc.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 एवमतिसृष्टस्य न कुतश्चिद्भयं भवतीति विज्ञायते ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/10/09_vayasAmamanojnA_vAchaH_shru.md">
-<details open><summary><h3>09 वयसाममनोज्ञा वाचः श्रुत्वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वयसाममनोज्ञा वाचः श्रुत्वा कनिक्रदज्जनुषं प्रबुवाण इति सूक्ते जपेद्देवीं वाचमजनयन्त देवा इति च ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/10/09_vayasAmamanojnA_vAchaH_shru.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. If he hears (on his way) disagreeable voices of birds, he should murmur the two hymns, 'Shrieking, manifesting his being' (Rig-veda II, 42, 43), and (the verse), 'The divine voice have the gods created' (Rig-veda VIII, 100, 11).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/10/09_vayasAmamanojnA_vAchaH_shru.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 वयसाममनोज्ञा वाचः श्रुत्वा कनिक्रदज्जनुषं प्रबुवाण इति सूक्ते जपेद्देवीं वाचमजनयन्त देवा इति च ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/10/10_stuhi_shrutangartasadaM_yuv.md">
-<details open><summary><h3>10 स्तुहि श्रुतङ्गर्तसदं युवानमिति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्तुहि श्रुतङ्गर्तसदं युवानमिति मृगस्य १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/10/10_stuhi_shrutangartasadaM_yuv.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. 'Praise the renowned youth who sits on the war-chariot' (Rig-veda II, 33, 11) - if (he hears disagreeable voices) of deer.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/10/10_stuhi_shrutangartasadaM_yuv.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 स्तुहि श्रुतङ्गर्तसदं युवानमिति मृगस्य १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/10/11_yasyA_disho_bibhIyAdyasmAdv.md">
-<details open><summary><h3>11 यस्या दिशो बिभीयाद्यस्माद्वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यस्या दिशो बिभीयाद्यस्माद्वा तान्दिशमुल्मुकमुभयतः प्रदीप्तं प्रत्यस्येन्मन्थं वा प्रसव्यमालोड्याभयं मित्रावरुणा मह्यमस्त्वर्चिषा शत्रून्दहन्तं प्रतीत्य मा ज्ञातारं मा प्रतिष्ठां विन्दन्तु मिथो भिन्दाना उभयन्तु मृत्युमिति संसृष्टं धनमुभयं समाकृतमिति मन्थं न्यञ्चङ्करोति ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/10/11_yasyA_disho_bibhIyAdyasmAdv.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 11. From the direction, or from the (being) from which he expects danger, towards that direction he should throw a fire-brand, burning on both sides, or having twirled about a churning-stick from the right to the left, with (the words), 'Safety be to me, Mitra and Varuṇa; encounter the foes and burn them up with your flame. May they find none who knows them and no support; divided by discord may they go to death' - 
 
 12. He turns the churning-stick downwards with (the verse), 'The combined wealth of both, heaped together' (Rig-veda X, 84, 7).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/10/11_yasyA_disho_bibhIyAdyasmAdv.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यस्या दिशो बिभीयाद्यस्माद्वा तान्दिशमुल्मुकमुभयतः प्रदीप्तं प्रत्यस्येन्मन्थं वा प्रसव्यमालोड्याभयं मित्रावरुणा मह्यमस्त्वर्चिषा शत्रून्दहन्तं प्रतीत्य मा ज्ञातारं मा प्रतिष्ठां विन्दन्तु मिथो भिन्दाना उभयन्तु मृत्युमिति संसृष्टं धनमुभयं समाकृतमिति मन्थं न्यञ्चङ्करोति ११
 </details>
-</div>
+
