--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/11.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/11.md
@@ -3,14 +3,12 @@ title = "११"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/11/01_sarvato_bhayAdanAjnAtAdaShT.md">
-<details open><summary><h3>01 सर्वतो भयादनाज्ञातादष्टावाज्याहुतीर्जुहुयात्पृथिवी वृता ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्वतो भयादनाज्ञातादष्टावाज्याहुतीर्जुहुयात्पृथिवी वृता साग्निना वृता तया वृतया वर्त्र्या यस्माद्भयाद्बिभेमि तद्वारये स्वाहा । अन्तरिक्षं वृतं तद्वायुना वृतन्तेन वृतेन वर्त्रेण यस्माद्भयाद्बिभेमि तद्वारये स्वाहा । द्यौर्वृता सादित्येन वृता तया वृतया वर्त्र्या यस्माद्भयाद्बिभेमि तद्वारये स्वाहा । दिशो वृतास्ताश्चन्द्रमसा वृतास्ताभिर्वृताभिर्वर्त्रीभिर्यस्माद्भयाद्बिभेमि तद्वारये स्वाहा । आपो वृतास्ता वरुणेन वृतास्ताभिर्वृताभिर्वर्त्रीभिर्यस्माद्भयाद्बिभेमि तद्वारये स्वाहा । प्रजा वृतास्ताः प्राणेन वृतास्ताभिर्वृताभिर्वर्त्रीभिर्यस्माद्भयाद्बिभेमि तद्वारये स्वाहा । वेदा वृतास्ते छन्दोभिर्वृतास्तैर्वृतैर्वर्त्रैर्यस्माद्भयाद्बिभेमि तद्वारये स्वाहा । सर्वं वृतं तद्ब्रह्मणा वृतन्तेन वृतेन वर्त्रेण यस्माद्भयाद्बिभेमि तद्वारये स्वाहा इति १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/11/01_sarvato_bhayAdanAjnAtAdaShT.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . If unknown danger from all sides (menaces him), he should sacrifice eight Ājya oblations with (the formulas),
 
@@ -33,31 +31,27 @@ title = "११"
 'All is covered; it is covered by Brahman. By it, &c. Svāhā!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/11/01_sarvato_bhayAdanAjnAtAdaShT.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सर्वतो भयादनाज्ञातादष्टावाज्याहुतीर्जुहुयात्पृथिवी वृता साग्निना वृता तया वृतया वर्त्र्या यस्माद्भयाद्बिभेमि तद्वारये स्वाहा । अन्तरिक्षं वृतं तद्वायुना वृतन्तेन वृतेन वर्त्रेण यस्माद्भयाद्बिभेमि तद्वारये स्वाहा । द्यौर्वृता सादित्येन वृता तया वृतया वर्त्र्या यस्माद्भयाद्बिभेमि तद्वारये स्वाहा । दिशो वृतास्ताश्चन्द्रमसा वृतास्ताभिर्वृताभिर्वर्त्रीभिर्यस्माद्भयाद्बिभेमि तद्वारये स्वाहा । आपो वृतास्ता वरुणेन वृतास्ताभिर्वृताभिर्वर्त्रीभिर्यस्माद्भयाद्बिभेमि तद्वारये स्वाहा । प्रजा वृतास्ताः प्राणेन वृतास्ताभिर्वृताभिर्वर्त्रीभिर्यस्माद्भयाद्बिभेमि तद्वारये स्वाहा । वेदा वृतास्ते छन्दोभिर्वृतास्तैर्वृतैर्वर्त्रैर्यस्माद्भयाद्बिभेमि तद्वारये स्वाहा । सर्वं वृतं तद्ब्रह्मणा वृतन्तेन वृतेन वर्त्रेण यस्माद्भयाद्बिभेमि तद्वारये स्वाहा इति १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/11/02_athAparAjitAyAn_dishyavasth.md">
-<details open><summary><h3>02 अथापराजितायान् दिश्यवस्थाय स्वस्त्यात्रेयञ् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथापराजितायां दिश्यवस्थाय स्वस्त्यात्रेयं जपति यत इन्द्र भयामह इति च सूक्तशेषम् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/11/02_athAparAjitAyAn_dishyavasth.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . Then, stationing himself towards the north, east, he murmurs the Svasti-Ātreya and, 'Of what we are in fear, Indra' (Rig-veda VIII, 61, 13 seqq.), down to the end of the hymn.
 
 [^2]:  The Svasti-Ātreya is the part of the hymn V, 51, which very frequently contains the word svasti (vv. 11-15). There is a Khila appended to that hymn (Rig-veda, vol. iii, p. 30), which, according to Nārāyaṇa, is also to be murmured on this occasion.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/11/02_athAparAjitAyAn_dishyavasth.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथापराजितायां दिश्यवस्थाय स्वस्त्यात्रेयं जपति यत इन्द्र भयामह इति च सूक्तशेषम् २
 </details>
-</div>
+
