--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/12.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/12.md
@@ -3,400 +3,344 @@ title = "१२"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/01_sangrAme_samupoLhe_rAjAnaM.md">
-<details open><summary><h3>01 सङ्ग्रामे समुपोळ्हे राजानं ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सङ्ग्रामे समुपोळ्हे राजानं सन्नाहयेत् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/01_sangrAme_samupoLhe_rAjAnaM.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. When a battle is beginning, (the royal Purohita) should cause the king to put on his armour (in the following way).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/01_sangrAme_samupoLhe_rAjAnaM.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सङ्ग्रामे समुपोळ्हे राजानं सन्नाहयेत् १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/02_A_tvAhArShamantaredhIti_pas.md">
-<details open><summary><h3>02 आ त्वाहार्षमन्तरेधीति पश्चाद्रथस्यावस्थाय ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आ त्वाहार्षमन्तरेधीति पश्चाद्रथस्यावस्थाय २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/02_A_tvAhArShamantaredhIti_pas.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . (The Purohita) stations himself to the west of (the king's) chariot with (the hymn?), 'I have brought thee hither; be here' (Rig-veda X, 173).
 
 [^1]:  12, 2. According to Nārāyaṇa the Pratīka here signifies not the verse, but the whole hymn, though a whole Pāda is given (comp. Śrauta-sūtra I, 1, 17).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/02_A_tvAhArShamantaredhIti_pas.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आ त्वाहार्षमन्तरेधीति पश्चाद्रथस्यावस्थाय २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/03_jImUtasyeva_bhavati_pratIka.md">
-<details open><summary><h3>03 जीमूतस्येव भवति प्रतीकमिति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जीमूतस्येव भवति प्रतीकमिति कवचं प्रयच्छेत् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/03_jImUtasyeva_bhavati_pratIka.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. With (the verse), 'Like a thunder-cloud is his countenance' (Rig-veda VI, 75, 1), he should tender the coat of mail to him.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/03_jImUtasyeva_bhavati_pratIka.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 जीमूतस्येव भवति प्रतीकमिति कवचं प्रयच्छेत् ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/04_uttarayA_dhanuH.md">
-<details open><summary><h3>04 उत्तरया धनुः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तरया धनुः ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/04_uttarayA_dhanuH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. With the following (verse) the bow.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/04_uttarayA_dhanuH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उत्तरया धनुः ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/05_uttarAM_vAchayet.md">
-<details open><summary><h3>05 उत्तरां वाचयेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तरां वाचयेत् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/05_uttarAM_vAchayet.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. The following (verse) he should cause him to repeat.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/05_uttarAM_vAchayet.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उत्तरां वाचयेत् ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/06_svayanchaturthI~n_japet.md">
-<details open><summary><h3>06 स्वयञ्चतुर्थीञ् जपेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वयञ्चतुर्थीं जपेत् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/06_svayanchaturthI~n_japet.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. He should murmur himself the fourth.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/06_svayanchaturthI~n_japet.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 स्वयञ्चतुर्थीं जपेत् ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/07_panchamyeShudhim_prayachChe.md">
-<details open><summary><h3>07 पञ्चम्येषुधिम् प्रयच्छेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पञ्चम्येषुधिं प्रयच्छेत् ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/07_panchamyeShudhim_prayachChe.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. With the fifth he should tender the quiver to him.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/07_panchamyeShudhim_prayachChe.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 पञ्चम्येषुधिं प्रयच्छेत् ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/08_abhipravartamAne_ShaShThIm.md">
-<details open><summary><h3>08 अभिप्रवर्तमाने षष्ठीम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभिप्रवर्तमाने षष्ठीम् ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/08_abhipravartamAne_ShaShThIm.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. When (the king) starts, the sixth.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/08_abhipravartamAne_ShaShThIm.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अभिप्रवर्तमाने षष्ठीम् ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/09_saptamyAshvAn.md">
-<details open><summary><h3>09 सप्तम्याश्वान् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सप्तम्याश्वान् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/09_saptamyAshvAn.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. The seventh (he recites) over the horses.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/09_saptamyAshvAn.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सप्तम्याश्वान् ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/10_aShTamImiShUnavexamANaM_vAc.md">
-<details open><summary><h3>10 अष्टमीमिषूनवेक्षमाणं वाचयति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अष्टमीमिषूनवेक्षमाणं वाचयति १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/10_aShTamImiShUnavexamANaM_vAc.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. The eighth he should cause (the king) to repeat while looking at the arrows;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/10_aShTamImiShUnavexamANaM_vAc.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अष्टमीमिषूनवेक्षमाणं वाचयति १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/11_ahiriva_bhogaiH_paryeti.md">
-<details open><summary><h3>11 अहिरिव भोगैः पर्येति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहिरिव भोगैः पर्येति बाहुमिति तलं नह्यमानम् ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/11_ahiriva_bhogaiH_paryeti.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 11. (The verse), 'Like a serpent it encircles the arm with its windings' (Rig-veda VI, 75, 14), when he ties to his arm the leather (by which the arm is protected against the bow-string).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/11_ahiriva_bhogaiH_paryeti.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अहिरिव भोगैः पर्येति बाहुमिति तलं नह्यमानम् ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/12_athainaM_sArayamANamupAruhy.md">
-<details open><summary><h3>12 अथैनं सारयमाणमुपारुह्याभीवर्तं वाचयति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथैनं सारयमाणमुपारुह्याभीवर्तं वाचयति प्र यो वां मित्रावरुणेति च द्वे १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/12_athainaM_sArayamANamupAruhy.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 12 [^2] . He then mounts up to (the king on his chariot), while he is driving, and causes him to repeat the Abhīvarta hymn (Rig-veda X, 174) and the two verses, 'He who, Mitra and Varuṇa' (Rig-veda VIII, 101, 3 seq.).
 
 [^2]:  The Abhīvarta hymn begins with the word abhīvartena, and is ascribed to Abhīvarta Āṅgirasa.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/12_athainaM_sArayamANamupAruhy.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथैनं सारयमाणमुपारुह्याभीवर्तं वाचयति प्र यो वां मित्रावरुणेति च द्वे १२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/13_athainamanvIxetApratirathas.md">
-<details open><summary><h3>13 अथैनमन्वीक्षेताप्रतिरथशाससौपर्णैः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथैनमन्वीक्षेताप्रतिरथशाससौपर्णैः १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/13_athainamanvIxetApratirathas.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 13 [^3] . He then should look at him with the Apratiratha, Śāsa, and Sauparṇa hymns.
 
 [^3]:  The Apratiratha hymn is Rig-veda X, 103 (ascribed to Apratiratha Aindra); the Śāsa, X, 152 (ascribed to Sāsa Bhāradvāja). On the Sauparṇa, see the next Sūtra.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/13_athainamanvIxetApratirathas.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथैनमन्वीक्षेताप्रतिरथशाससौपर्णैः १३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/14_pradhArayantu_madhuno_ghRta.md">
-<details open><summary><h3>14 प्रधारयन्तु मधुनो घृतस्येत्येतत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रधारयन्तु मधुनो घृतस्येत्येतत् सौपर्णम् १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/14_pradhArayantu_madhuno_ghRta.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 14 [^4] . The Sauparṇa is (the hymn), 'May the streams of honey and ghee flow forwards.'
 
 [^4]:  This hymn is not found in any Vedic Saṃhitā, as far s I know, nor does it occur in the Suparṇādhyāya. I have followed Prof. Stenzler's conjecture pra dhārā yantu instead of pradhārayantu, which is confirmed by Sāyaṇa's note on Aitareya Brāhmaṇa VI, 25, 7; VIII, 10, 4 (pp. 365, 399 ed. Aufrecht).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/14_pradhArayantu_madhuno_ghRta.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 प्रधारयन्तु मधुनो घृतस्येत्येतत् सौपर्णम् १४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/15_sarvA_disho-nuparIryAyAt.md">
-<details open><summary><h3>15 सर्वा दिशोऽनुपरीर्यायात् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्वा दिशोऽनुपरीर्यायात् १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/15_sarvA_disho-nuparIryAyAt.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 15. (The king) should drive (in his chariot successively) to all quarters (of the horizon).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/15_sarvA_disho-nuparIryAyAt.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सर्वा दिशोऽनुपरीर्यायात् १५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/16_AdityamaushanasaM_vAvasthAy.md">
-<details open><summary><h3>16 आदित्यमौशनसं वावस्थाय प्रयोधयेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आदित्यमौशनसं वावस्थाय प्रयोधयेत् १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/16_AdityamaushanasaM_vAvasthAy.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 16. He should commence the battle in the line of battle invented by Āditya or by Uśanas.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/16_AdityamaushanasaM_vAvasthAy.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आदित्यमौशनसं वावस्थाय प्रयोधयेत् १६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/17_upashvAsaya_pRthivImuta_dyA.md">
-<details open><summary><h3>17 उपश्वासय पृथिवीमुत द्यामिति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उपश्वासय पृथिवीमुत द्यामिति तृचेन दुन्दुभिमभिमृशेत् १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/17_upashvAsaya_pRthivImuta_dyA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 17 [^5] . He should touch the drum with the three verses, 'Fill earth and heaven with thy roar' (Rig-veda VI, 47, 29 seqq.).
 
 [^5]:  17, 18. According to Nārāyaṇa the subject is the king.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/17_upashvAsaya_pRthivImuta_dyA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उपश्वासय पृथिवीमुत द्यामिति तृचेन दुन्दुभिमभिमृशेत् १७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/18_avasRShTA_parApatetIShUnvis.md">
-<details open><summary><h3>18 अवसृष्टा परापतेतीषून्विसर्जयेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अवसृष्टा परापतेतीषून्विसर्जयेत् १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/18_avasRShTA_parApatetIShUnvis.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 18. With (the verse), 'Shot off fall down' (Rig-veda VI, 75, 16), he should shoot off the arrows.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/18_avasRShTA_parApatetIShUnvis.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अवसृष्टा परापतेतीषून्विसर्जयेत् १८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/19_yatra_bANAH_sampatantIti.md">
-<details open><summary><h3>19 यत्र बाणाः सम्पतन्तीति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यत्र बाणाः सम्पतन्तीति यध्यमानेषु जपेत् १९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/19_yatra_bANAH_sampatantIti.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 19 [^6] . 'Where the arrows fly' (l.l. v. 17) - this (verse) he should murmur while they are fighting.
 
 [^6]:  Here the subject is the Purohita.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/19_yatra_bANAH_sampatantIti.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 यत्र बाणाः सम्पतन्तीति यध्यमानेषु जपेत् १९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/12/20_saMshiShyAdvA_saMshiShyAdvA.md">
-<details open><summary><h3>20 संशिष्याद्वा संशिष्याद्वा ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संशिष्याद्वा संशिष्याद्वा २०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/12/20_saMshiShyAdvA_saMshiShyAdvA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 20. Or he should teach (the king the texts mentioned). Or he should teach (the king).
 
 End of the Third Adhyāya.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/12/20_saMshiShyAdvA_saMshiShyAdvA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 संशिष्याद्वा संशिष्याद्वा २०
 </details>
-</div>
+
 
   
 
