--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/4/01.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/4/01.md
@@ -3,334 +3,284 @@ title = "०१"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/01_AhitAgnishchedupatapetprAch.md">
-<details open><summary><h3>01 आहिताग्निश्चेदुपतपेत्प्राच्यामुदीच्यामपराजितायां वा दिश्युदवस्येत् ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आहिताग्निश्चेदुपतपेत्प्राच्यामुदीच्यामपराजितायां वा दिश्युदवस्येत् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/01_AhitAgnishchedupatapetprAch.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . If disease befalls one who has set up the (sacred Śrauta) fires, he should leave his home (and go away) to the eastern, or northern, or north-eastern direction.
 
 [^1]:  1, 1. Comp. Śrauta-sūtra VI, 9, 1. The funeral rites according to the Gṛhya-sūtras have been treated of by Prof. Max Müller, Zeitschrift der Deutschen Morgenländischen Gesellschaft, vol. ix.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/01_AhitAgnishchedupatapetprAch.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आहिताग्निश्चेदुपतपेत्प्राच्यामुदीच्यामपराजितायां वा दिश्युदवस्येत् १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/02_grAmakAmA_agnaya_ityudAhara.md">
-<details open><summary><h3>02 ग्रामकामा अग्नय इत्युदाहरन्ति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ग्रामकामा अग्नय इत्युदाहरन्ति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/02_grAmakAmA_agnaya_ityudAhara.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. 'The sacred fires are fond of the village' - thus it is said.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/02_grAmakAmA_agnaya_ityudAhara.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ग्रामकामा अग्नय इत्युदाहरन्ति २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/03_AshaMsanta_ena~N_grAmamAjig.md">
-<details open><summary><h3>03 आशंसन्त एनङ् ग्राममाजिगमिषन्तोऽगदङ्कुर्युरिति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आशंसन्त एनं ग्राममाजिगमिषन्तोऽगदङ्कुर्युरिति ह विज्ञायते ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/03_AshaMsanta_ena~N_grAmamAjig.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3 [^2] . Longing for it, desirous of returning to the village they might restore him to health-thus it is understood (in the Śruti).
 
 [^2]:  I.e. longing for the village. I here differ from Prof. Stenzler's translation, 'Indem sie, um nach dem Dorfe zu kommen, ihm Gutes wünschen.' Prof. Stenzler here follows Nārāyaṇa, who has the following note, grāmam āgantum icchantoऽgnaya enam āhitāgnim āśaṃsante, ayam agado bhaved iti.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/03_AshaMsanta_ena~N_grAmamAjig.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आशंसन्त एनं ग्राममाजिगमिषन्तोऽगदङ्कुर्युरिति ह विज्ञायते ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/04_agadaH_somena_pashuneShTyeS.md">
-<details open><summary><h3>04 अगदः सोमेन पशुनेष्ट्येष्ट्वावस्येत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अगदः सोमेन पशुनेष्ट्येष्ट्वावस्येत् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/04_agadaH_somena_pashuneShTyeS.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4 [^3] . Being restored to health, he should offer a Soma sacrifice, or an animal sacrifice, or an ordinary sacrifice, and take his dwelling (again in the village).
 
 [^3]:  Comp. Śrauta-sūtra VI, 9, 7.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/04_agadaH_somena_pashuneShTyeS.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अगदः सोमेन पशुनेष्ट्येष्ट्वावस्येत् ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/05_aniShTvA_vA.md">
-<details open><summary><h3>05 अनिष्ट्वा वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनिष्ट्वा वा ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/05_aniShTvA_vA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5 [^4] . Or without such a sacrifice.
 
 [^4]:  Śrauta-sūtra VI, 10, 1.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/05_aniShTvA_vA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अनिष्ट्वा वा ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/06_saMsthite_bhUmibhAga~N_khAn.md">
-<details open><summary><h3>06 संस्थिते भूमिभागङ् खानयेद्दक्षिणपूर्वस्यान्दिशि ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संस्थिते भूमिभागं खानयेद्दक्षिणपूर्वस्यान्दिशि दक्षिणापरस्यां वा ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/06_saMsthite_bhUmibhAga~N_khAn.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. If he dies, one should have a piece of ground dug up to the south-east or to the south-west - 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/06_saMsthite_bhUmibhAga~N_khAn.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 संस्थिते भूमिभागं खानयेद्दक्षिणपूर्वस्यान्दिशि दक्षिणापरस्यां वा ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/07_daxiNApravaNam_prAgdaxiNApr.md">
-<details open><summary><h3>07 दक्षिणाप्रवणम् प्राग्दक्षिणाप्रवणं वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दक्षिणाप्रवणं प्राग्दक्षिणाप्रवणं वा प्रत्यग्दक्षिणाप्रवणमित्येके ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/07_daxiNApravaNam_prAgdaxiNApr.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. At a place which is inclined towards the south or towards the south-east.
 
 8. According to some (teachers), inclined towards south-west.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/07_daxiNApravaNam_prAgdaxiNApr.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 दक्षिणाप्रवणं प्राग्दक्षिणाप्रवणं वा प्रत्यग्दक्षिणाप्रवणमित्येके ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/08_yAvAnudvAhukaH_puruShastAva.md">
-<details open><summary><h3>08 यावानुद्वाहुकः पुरुषस्तावदायामम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यावानुद्वाहुकः पुरुषस्तावदायामम् ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/08_yAvAnudvAhukaH_puruShastAva.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. (The piece of ground dug up should be) of the length of a man with upraised arms,
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/08_yAvAnudvAhukaH_puruShastAva.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यावानुद्वाहुकः पुरुषस्तावदायामम् ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/09_vyAmamAtrantiryak.md">
-<details open><summary><h3>09 व्याममात्रन्तिर्यक् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 व्याममात्रन्तिर्यक् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/09_vyAmamAtrantiryak.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. Of the breadth of one Vyāma (fathom),
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/09_vyAmamAtrantiryak.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 व्याममात्रन्तिर्यक् ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/10_vitastyavAka.md">
-<details open><summary><h3>10 वितस्त्यवाक ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वितस्त्यवाक १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/10_vitastyavAka.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 11. Of the depth of one Vitasti (span).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/10_vitastyavAka.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 वितस्त्यवाक १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/11_abhita_AkAshaM_shmashAnam.md">
-<details open><summary><h3>11 अभित आकाशं श्मशानम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभित आकाशं श्मशानम् ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/11_abhita_AkAshaM_shmashAnam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 [MISSING]
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/11_abhita_AkAshaM_shmashAnam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अभित आकाशं श्मशानम् ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/12_bahulauShadhikam.md">
-<details open><summary><h3>12 बहुलौषधिकम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बहुलौषधिकम् १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/12_bahulauShadhikam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 [MISSING]
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/12_bahulauShadhikam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 बहुलौषधिकम् १२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/13_kaNTakixIriNastviti_yathokt.md">
-<details open><summary><h3>13 कण्टकिक्षीरिणस्त्विति यथोक्तम् पुरस्तात् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कण्टकिक्षीरिणस्त्विति यथोक्तं पुरस्तात् १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/13_kaNTakixIriNastviti_yathokt.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 12 [^5] . But plants with thorns and with milky juice, &c., as stated above.
 
 [^5]:  See above, II, 7, 5.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/13_kaNTakixIriNastviti_yathokt.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 कण्टकिक्षीरिणस्त्विति यथोक्तं पुरस्तात् १३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/14_yatra_sarvata_ApaH.md">
-<details open><summary><h3>14 यत्र सर्वत आपः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यत्र सर्वत आपः प्रस्यन्देरन्नेतदादहनस्य लक्षणं श्मशानस्य १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/14_yatra_sarvata_ApaH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 15 [^6] . From which the waters flow off to all sides: this is a characteristic required for the cemetery (śmaśāna) where the body is to be burned.
 
 [^6]:  See the note on Sūtra 12.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/14_yatra_sarvata_ApaH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यत्र सर्वत आपः प्रस्यन्देरन्नेतदादहनस्य लक्षणं श्मशानस्य १४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/15_keshashmashrulomanakhAnItyu.md">
-<details open><summary><h3>15 केशश्मश्रुलोमनखानीत्युक्तम् पुरस्तात् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 केशश्मश्रुलोमनखानीत्युक्तं पुरस्तात् १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/15_keshashmashrulomanakhAnItyu.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 16 [^7] . 'They cut off (from the dead body) the hair, the beard, the hairs of the body, and the nails' - this has been stated above.
 
 [^7]:  See the Śrauta-sūtra VI, 10, 2.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/15_keshashmashrulomanakhAnItyu.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 केशश्मश्रुलोमनखानीत्युक्तं पुरस्तात् १५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/16_dvigulpham_barhirAjyancha.md">
-<details open><summary><h3>16 द्विगुल्फम् बर्हिराज्यञ्च ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 द्विगुल्फं बर्हिराज्यञ्च १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/16_dvigulpham_barhirAjyancha.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 17 [^8] . (They should provide) plenty of sacrificial grass and of butter.
 
 [^8]:  Dvigulphaṃ barhir ājyañ ca. Nārāyaṇa explains dvigulpha by prabhūta. Comp. bahulatṛṇa, Kātyāyana XXV, 7, 15.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/16_dvigulpham_barhirAjyancha.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 द्विगुल्फं बर्हिराज्यञ्च १६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/01/17_dadhanyatra_sarpirAnayantye.md">
-<details open><summary><h3>17 दधन्यत्र सर्पिरानयन्त्येतत्पित्र्यम् पृषदाज्यम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दधन्यत्र सर्पिरानयन्त्येतत्पित्र्यं पृषदाज्यम् १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/01/17_dadhanyatra_sarpirAnayantye.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 18 [^9] . They here pour clarified butter into curds.
 
@@ -339,10 +289,9 @@ title = "०१"
 19. This is the 'sprinkled butter' used for the Fathers (i.e. Manes).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/01/17_dadhanyatra_sarpirAnayantye.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 दधन्यत्र सर्पिरानयन्त्येतत्पित्र्यं पृषदाज्यम् १७
 </details>
-</div>
+
