--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/4/07.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/4/07.md
@@ -3,35 +3,30 @@ title = "०७"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/01_athAtaH_pArvaNe_shrAddhe.md">
-<details open><summary><h3>01 अथातः पार्वणे श्राद्धे ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथातः पार्वणे श्राद्धे काम्य आभ्युदयिक एकोद्दिष्टे वा १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/01_athAtaH_pArvaNe_shrAddhe.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Now at a Śrāddha ceremony, at that which is celebrated on the Parvan day, or for the attainment of special wishes, or at the Ābhyudayika Śrāddha (i.e. the Śrāddha celebrated when some good luck has happened), or at the Ekoddiṣṭa Śrāddha (the Śrāddha directed to a single dead person) - 
 
 [^1]:  7, 1. Comp. on the Śrāddha ceremonies in general the note on Śāṅkhāyana-Gṛhya IV, 1, 1, and the quotations given there. The Pārvaṇa Śrāddha, which is celebrated on the new-moon day, is treated of by Śāṅkhāyana IV, 1, the Ābhyudayika Śrāddha, IV, 4, the Ekoddiṣṭa Śrāddha, IV, 2.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/01_athAtaH_pArvaNe_shrAddhe.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथातः पार्वणे श्राद्धे काम्य आभ्युदयिक एकोद्दिष्टे वा १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/02_brAhmaNAnshrutashIlavRttasa.md">
-<details open><summary><h3>02 ब्राह्मणान्श्रुतशीलवृत्तसम्पन्नानेकेन वो काले ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्राह्मणान्श्रुतशीलवृत्तसम्पन्नानेकेन वो काले ज्ञापितान्स्नातान्कृतपच्छौचानाचान्तानुदङ्मुखान् पितृवदुपवेश्यैकैकमेकैकम्य द्वौद्वौ त्रींस्त्रीन्वा वृद्धौ फलभूयस्त्वं न त्वेवैकं सर्वेषाम् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/02_brAhmaNAnshrutashIlavRttasa.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. He causes Brāhmaṇas who are endowed with learning, moral character, and correct conduct, or with one of these (characteristics), who have been invited in time, who have taken a bath, washed their feet, and sipped water, to sit down, as representatives of the Fathers, with their faces turned to the north, one for each one of the Fathers, or two for each, or three for each.
 
@@ -40,256 +35,219 @@ title = "०७"
 4. But in no case one (Brāhmaṇa) for all (the fathers).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/02_brAhmaNAnshrutashIlavRttasa.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ब्राह्मणान्श्रुतशीलवृत्तसम्पन्नानेकेन वो काले ज्ञापितान्स्नातान्कृतपच्छौचानाचान्तानुदङ्मुखान् पितृवदुपवेश्यैकैकमेकैकम्य द्वौद्वौ त्रींस्त्रीन्वा वृद्धौ फलभूयस्त्वं न त्वेवैकं सर्वेषाम् २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/03_kAmamanAdye.md">
-<details open><summary><h3>03 काममनाद्ये ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 काममनाद्ये ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/03_kAmamanAdye.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5 [^2] . Optionally (he may invite only one Brāhmaṇa) except at the first (Śrāddha).
 
 [^2]:  Anādye. Of the different interpretations of this word which Nārāyaṇa gives, it may suffice here to quote two. The first Śrāddha may either mean the Pārvaṇa Śrāddha, because this stands first among the different kinds of Śrāddha ceremonies enumerated in Sūtra 1; or it may mean the Sapiṇḍīkaraṇa (see Sāṅkhāyana IV, 3), for this is the first occasion on which a dead person receives Śrāddha oblations together with two others of the Fathers.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/03_kAmamanAdye.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 काममनाद्ये ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/04_piNDairvyAkhyAtam.md">
-<details open><summary><h3>04 पिण्डैर्व्याख्यातम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पिण्डैर्व्याख्यातम् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/04_piNDairvyAkhyAtam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6 [^3] . By (the exposition of) the Piṇḍa sacrifice (the corresponding rules) have been declared (for the Śrāddha ceremonies also).
 
 [^3]:  The sacrifice to the Manes, as forming part of the Śrauta ritual, is explained in the Śrauta-sūtra II, 6 seq.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/04_piNDairvyAkhyAtam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 पिण्डैर्व्याख्यातम् ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/05_apaH_pradAya.md">
-<details open><summary><h3>05 अपः प्रदाय ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अपः प्रदाय ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/05_apaH_pradAya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. Having given water (to the Brāhmaṇas),
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/05_apaH_pradAya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अपः प्रदाय ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/06_darbhAndviguNabhugnAnAsanam.md">
-<details open><summary><h3>06 दर्भान्द्विगुणभुग्नानासनम् प्रदाय ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दर्भान्द्विगुणभुग्नानासनं प्रदाय ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/06_darbhAndviguNabhugnAnAsanam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8 [^4] . Having given to them double-folded Darbha blades, and a seat,
 
 [^4]:  Yājñavalkya I, 229.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/06_darbhAndviguNabhugnAnAsanam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 दर्भान्द्विगुणभुग्नानासनं प्रदाय ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/07_apaH_pradAya.md">
-<details open><summary><h3>07 अपः प्रदाय ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अपः प्रदाय ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/07_apaH_pradAya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9 [^5] . Having (again) given water (to them),
 
 [^5]:  Yājñavalkya I, 230. The reading of several words of the Mantra is doubtful, and the parallel texts, as Prof. Stenzler has not failed to observe, differ; especially the words pratnavadbhiḥ prattaḥ seem to me to be corrupt. The word pratnavat is only known to the Petersburg Dictionary as having the meaning, 'containing the word pratna,' which will not do here. Thus, I think that the reading pratnam adbhiḥ pṛktaḥ should be adopted; the translation would be, 'Anciently thou hast been mixed with water.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/07_apaH_pradAya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अपः प्रदाय ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/08_taijasAshmamayamRNmayeShu_t.md">
-<details open><summary><h3>08 तैजसाश्ममयमृण्मयेषु त्रिषु पात्रेष्वेकद्रव्येषु ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तैजसाश्ममयमृण्मयेषु त्रिषु पात्रेष्वेकद्रव्येषु वा दर्भान्तर्हितेष्वप आसिच्य शन्नो देवीरभिष्टय इत्यनुमन्त्रितासु तिलानावपति तिलोऽसि सोमदेवत्यो गोसवे देवनिर्मितः । प्रत्नवद्भिः प्रत्तः स्वधया पितॄनिमाल्ँलोकान्प्रीणयाहि नः स्वधा नम इति ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/08_taijasAshmamayamRNmayeShu_t.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. Having poured water into three vessels of metal, of stone, and of earthen-ware, or (into three vessels) made of the same substance, over which he has put Darbha grass,
 
 And having recited over (that water the verse), 'For luck and help the divine waters' (Rig-veda X, 9, 4), he pours sesamum seeds into it with (the formula), 'Sesamum art thou; Soma is thy deity; at the Gosava sacrifice thou hast been created by the gods. By the ancients thou hast been offered. Through the funeral oblation render the Fathers and these worlds propitious to us. Svadhā! Adoration!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/08_taijasAshmamayamRNmayeShu_t.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तैजसाश्ममयमृण्मयेषु त्रिषु पात्रेष्वेकद्रव्येषु वा दर्भान्तर्हितेष्वप आसिच्य शन्नो देवीरभिष्टय इत्यनुमन्त्रितासु तिलानावपति तिलोऽसि सोमदेवत्यो गोसवे देवनिर्मितः । प्रत्नवद्भिः प्रत्तः स्वधया पितॄनिमाल्ँलोकान्प्रीणयाहि नः स्वधा नम इति ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/09_prasavyena.md">
-<details open><summary><h3>09 प्रसव्येन ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रसव्येन ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/09_prasavyena.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 12 [^6] . (The different rites are performed) from the right to the left.
 
 [^6]:  Comp. Śāṅkhāyana-Gṛhya IV, 4, 6.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/09_prasavyena.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 प्रसव्येन ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/10_itarapANyanguShThAntareNopa.md">
-<details open><summary><h3>10 इतरपाण्यङ्गुष्ठान्तरेणोपवीतित्वाद्दक्षिणेन वा सव्योपगृहीतेन ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इतरपाण्यङ्गुष्ठान्तरेणोपवीतित्वाद्दक्षिणेन वा सव्योपगृहीतेन पितरिदं ते अर्घ्यं पितामहेदं ते अर्घ्यं प्रपितामहेदं ते अर्घ्यमिति १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/10_itarapANyanguShThAntareNopa.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 13 [^7] . With (the part) of the other (i.e. left) hand between the thumb (and the fore-finger), because he wears the sacrificial cord over ḥis left shoulder, or with the right hand which he seizes with the left (he offers the Arghya water to the Fathers with the words), 'Father, this is thy Arghya. Grandfather, this is thy Arghya. Great-grandfather, this is thy Arghya' 
 
 [^7]:  The part of the hand above the thumb is called the 'Tīrtha belonging to the Manes;' see, for instance, Baudhāyana's Dharma-sūtra I, 8, 16. The sacrificer is here understood to wear his sacrificial cord suspended over the left shoulder (he is 'yājñopavītin'). But as the oblation here treated of is directed to the Manes, it is required that he should be prācīnāvītin. Now he is considered as prācīnāvītin, according to Nārāyaṇa, not only if the cord is suspended over his right shoulder (which is the ordinary meaning of prācīnāvītin), but also if the hand with which he performs the rites, and the shoulder over which he wears the sacred cord, are either both right or both left. Thus here, acting with the left-hand and wearing the cord over the left shoulder, he becomes prācīnāvītin.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/10_itarapANyanguShThAntareNopa.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 इतरपाण्यङ्गुष्ठान्तरेणोपवीतित्वाद्दक्षिणेन वा सव्योपगृहीतेन पितरिदं ते अर्घ्यं पितामहेदं ते अर्घ्यं प्रपितामहेदं ते अर्घ्यमिति १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/11_appUrvam.md">
-<details open><summary><h3>11 अप्पूर्वम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अप्पूर्वम् ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/11_appUrvam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 - having first offered (ordinary) water (to the Fathers).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/11_appUrvam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अप्पूर्वम् ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/12_tAH_pratigrAhayiShyansakRts.md">
-<details open><summary><h3>12 ताः प्रतिग्राहयिष्यन्सकृत्सकृत्स्वधा अर्घ्या ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ताः प्रतिग्राहयिष्यन्सकृत्सकृत्स्वधा अर्घ्या इति १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/12_tAH_pratigrAhayiShyansakRts.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 14. When he is going to hand over that (Arghya water to the Brāhmaṇas who represent the Fathers, he says once each time), 'Svadhā! The Arghya water!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/12_tAH_pratigrAhayiShyansakRts.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ताः प्रतिग्राहयिष्यन्सकृत्सकृत्स्वधा अर्घ्या इति १२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/13_prasRShTA_anumantrayeta_yA.md">
-<details open><summary><h3>13 प्रसृष्टा अनुमन्त्रयेत या ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रसृष्टा अनुमन्त्रयेत या दिव्या आपः पृथिवी सम्बभूवुर्या अन्तरिक्ष्या उत पार्थिवीर्याः । हिरण्यवर्णा यज्ञियास्ता न आपः शंस्योना भवन्त्विति संस्रवान्समवनीयताभिरद्भिः पुत्रकामो मुखमनक्ति १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/13_prasRShTA_anumantrayeta_yA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 15 [^8] . Over (the Arghya water) which has been poured out, he should recite the verse, 'The celestial waters which have been produced on the earth, the aerial waters and the waters which are terrestrial, the gold-coloured ones, apt for sacrifice, may these waters bring us luck and be kind to us.' Pouring together what has been left (in the three Arghya vessels) he moistens his face with that water, if he desires that a son should be born to him.
 
 [^8]:  The sacrificer gives the water to the Brāhmaṇas, and these p. 253 pour it out. Instead of pṛthivī sambabhūvuḥ (pṛthivī being intended as a locative; see Lanman, Noun-inflection in the Veda, p. 389) we should read, no doubt, as the parallel texts have, payasā sambabhūvuḥ: 'The celestial waters which have united themselves with milk.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/13_prasRShTA_anumantrayeta_yA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 प्रसृष्टा अनुमन्त्रयेत या दिव्या आपः पृथिवी सम्बभूवुर्या अन्तरिक्ष्या उत पार्थिवीर्याः । हिरण्यवर्णा यज्ञियास्ता न आपः शंस्योना भवन्त्विति संस्रवान्समवनीयताभिरद्भिः पुत्रकामो मुखमनक्ति १३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/14_noddharetprathamam_pAtram_p.md">
-<details open><summary><h3>14 नोद्धरेत्प्रथमम् पात्रम् पितॄणामर्घ्यपातितम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नोद्धरेत्प्रथमं पात्रं पितॄणामर्घ्यपातितम् आवृतास्तत्र तिष्ठन्ति पितरः शौनकोऽब्रवीत् उद्धरेद्यदि चेत्पात्रं विवृतं वा यदा भवेत् तदासुरं भवेच्छ्राद्धं क्रुद्धैः पितृगणैर्गतैः इति १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/14_noddharetprathamam_pAtram_p.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 16 [^9] . 'He should not take up the first vessel, into which the Arghya water for the Fathers has been poured. Hidden the Fathers dwell therein: thus Śaunaka has said.'
 
 [^9]:  This is a Śloka.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/14_noddharetprathamam_pAtram_p.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 नोद्धरेत्प्रथमं पात्रं पितॄणामर्घ्यपातितम् आवृतास्तत्र तिष्ठन्ति पितरः शौनकोऽब्रवीत् उद्धरेद्यदि चेत्पात्रं विवृतं वा यदा भवेत् तदासुरं भवेच्छ्राद्धं क्रुद्धैः पितृगणैर्गतैः इति १४
 </details>
-</div>
+
