--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/08.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/08.md
@@ -3,302 +3,284 @@ title = "०८"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/01_prayANa_upapadyamAne_pUShA.md">
-<details open><summary><h3>01 प्रयाण उपपद्यमाने पूषा ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रयाण उपपद्यमाने पूषा त्वेतो नयतु हस्तगृह्येति यानमारोहयेत् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/01_prayANa_upapadyamAne_pUShA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . If (the newly-married couple) have to make a journey (to their new home), let him cause her to mount the chariot with the (verse), 'May Pūṣan lead thee from here holding thy hand' (Rig-veda X, 85, 26).
 
 [^1]:  8, 1. Śāṅkhāyana-Gṛhya I, 15, 13.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/01_prayANa_upapadyamAne_pUShA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 प्रयाण उपपद्यमाने पूषा त्वेतो नयतु हस्तगृह्येति यानमारोहयेत् १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/02_ashmanvatIrIyate_saMrabhadh.md">
-<details open><summary><h3>02 अश्मन्वतीरीयते संरभध्वमित्यर्द्धर्चेन नावमारोहयेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अश्मन्वतीरीयते संरभध्वमित्यर्द्धर्चेन नावमारोहयेत् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/02_ashmanvatIrIyate_saMrabhadh.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . With the hemistich, 'Carrying stones (the river) streams; hold fast each other' (Rig-veda X, 53, 8) let him cause her to ascend a ship.
 
 [^2]:  Śāṅkhāyana-Gṛhya I, 15, try. 18.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/02_ashmanvatIrIyate_saMrabhadh.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अश्मन्वतीरीयते संरभध्वमित्यर्द्धर्चेन नावमारोहयेत् २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/03_uttareNoktramayet.md">
-<details open><summary><h3>03 उत्तरेणोक्त्रमयेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तरेणोक्त्रमयेत् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/03_uttareNoktramayet.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. With the following (hemistich) let him make her descend (from it).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/03_uttareNoktramayet.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उत्तरेणोक्त्रमयेत् ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/04_jIvaM_rudantIti_rudatyAm.md">
-<details open><summary><h3>04 जीवं रुदन्तीति रुदत्याम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जीवं रुदन्तीति रुदत्याम् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/04_jIvaM_rudantIti_rudatyAm.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4 [^3] . (He pronounces the verse), 'The living one they bewail' (Rig-veda X, 40, 10), if she weeps.
 
 [^3]:  Śāṅkhāyana-Gṛhya I, 15, 2.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/04_jIvaM_rudantIti_rudatyAm.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 जीवं रुदन्तीति रुदत्याम् ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/05_vivAhAgnimagrato-jasrannaya.md">
-<details open><summary><h3>05 विवाहाग्निमग्रतोऽजस्रन्नयन्ति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विवाहाग्निमग्रतोऽजस्रन्नयन्ति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/05_vivAhAgnimagrato-jasrannaya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. They constantly carry the nuptial fire in front.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/05_vivAhAgnimagrato-jasrannaya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 विवाहाग्निमग्रतोऽजस्रन्नयन्ति ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/06_kalyANeShu_deshavRxachatuSh.md">
-<details open><summary><h3>06 कल्याणेषु देशवृक्षचतुष्पथेषु माविदन्परिपन्थिन ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कल्याणेषु देशवृक्षचतुष्पथेषु माविदन्परिपन्थिन इति जपेत् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/06_kalyANeShu_deshavRxachatuSh.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6 [^4] . At lovely places, trees, and cross-ways let him murmur (the verse), 'May no waylayers meet us' (Rig-veda X, 85, 32).
 
 [^4]:  Śāṅkhāyana-Gṛhya I, 15, 24.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/06_kalyANeShu_deshavRxachatuSh.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 कल्याणेषु देशवृक्षचतुष्पथेषु माविदन्परिपन्थिन इति जपेत् ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/07_vAsevAse_sumangalIriyaM_vad.md">
-<details open><summary><h3>07 वासेवासे सुमङ्गलीरियं वधूरितीक्षकानीक्षेत ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वासेवासे सुमङ्गलीरियं वधूरितीक्षकानीक्षेत ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/07_vAsevAse_sumangalIriyaM_vad.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 7. At every dwelling-place (on their way) let him look at the lookers on, with (the verse), 'Good luck brings this woman' (Rig-veda X, 85, 33).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/07_vAsevAse_sumangalIriyaM_vad.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 वासेवासे सुमङ्गलीरियं वधूरितीक्षकानीक्षेत ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/08_iha_priyam_prajayA.md">
-<details open><summary><h3>08 इह प्रियम् प्रजया ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इह प्रियं प्रजया ते समृध्यतामिति गृहं प्रवेशयेत् ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/08_iha_priyam_prajayA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 8 [^5] . With (the verse), 'Here may delight fulfil itself to thee through offspring' (Rig-veda X, 85, 27) he should make her enter the house.
 
 [^5]:  Śāṅkhāyana-Gṛhya I, 15, 22; 16, 12.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/08_iha_priyam_prajayA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 इह प्रियं प्रजया ते समृध्यतामिति गृहं प्रवेशयेत् ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/09_vivAhAgnimupasamAdhAya_pash.md">
-<details open><summary><h3>09 विवाहाग्निमुपसमाधाय पश्चादस्यानडुहञ् चर्मास्तीर्य ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विवाहाग्निमुपसमाधाय पश्चादस्यानडुहं चर्मास्तीर्य प्राग्ग्रीवमुत्तरलोम तस्मिन्नुपविष्टायां समन्वारब्धायाम् आ नः प्रजां जनयतु प्रजापतिरिति चतसृभिः प्रत्यृचं हुत्वा समञ्जन्तु विश्वेदेवा इति दध्नः प्राश्य प्रतिप्रयच्छेदाज्यशेषेण वानक्ति हृदये ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/09_vivAhAgnimupasamAdhAya_pash.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 9 [^6] . Having given its place to the nuptial fire, and having spread to the west of it a bull's hide with the neck to the east, with the hair outside, he makes oblations, while she is sitting on that (hide) and takes hold of him, with the four (verses), 'May Prajāpati create offspring to us' (Rig-veda X, 85, 43 seq.), verse by verse, and with (the verse), 'May all the gods unite' (Rig-veda X, 85, 47), he partakes of curds and gives (thereof) to her, or he besmears their two hearts with the rest of the Ājya (of which he has sacrificed).
 
 [^6]:  Śāṅkhāyana-Gṛhya I, 16, 1. 2.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/09_vivAhAgnimupasamAdhAya_pash.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 विवाहाग्निमुपसमाधाय पश्चादस्यानडुहं चर्मास्तीर्य प्राग्ग्रीवमुत्तरलोम तस्मिन्नुपविष्टायां समन्वारब्धायाम् आ नः प्रजां जनयतु प्रजापतिरिति चतसृभिः प्रत्यृचं हुत्वा समञ्जन्तु विश्वेदेवा इति दध्नः प्राश्य प्रतिप्रयच्छेदाज्यशेषेण वानक्ति हृदये ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/10_axArAlavaNAshinau_brahmachA.md">
-<details open><summary><h3>10 अक्षारालवणाशिनौ ब्रह्मचारिणावलङ्कुर्वाणावधःशायिनौ स्याताम् ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अक्षारालवणाशिनौ ब्रह्मचारिणावलङ्कुर्वाणावधःशायिनौ स्याताम् १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/10_axArAlavaNAshinau_brahmachA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 10. From that time they should eat no saline food, they should be chaste, wear ornaments, 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/10_axArAlavaNAshinau_brahmachA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 अक्षारालवणाशिनौ ब्रह्मचारिणावलङ्कुर्वाणावधःशायिनौ स्याताम् १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/11_ata_Urddhvan_trirAtran.md">
-<details open><summary><h3>11 अत ऊर्द्ध्वन् त्रिरात्रन् ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अत ऊर्द्ध्वं त्रिरात्रं द्वादशरात्रम् ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/11_ata_Urddhvan_trirAtran.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 sleep on the ground three nights or twelve nights;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/11_ata_Urddhvan_trirAtran.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 अत ऊर्द्ध्वं त्रिरात्रं द्वादशरात्रम् ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/12_saMvatsaraM_vaika_RShirjAya.md">
-<details open><summary><h3>12 संवत्सरं वैक ऋषिर्जायत ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संवत्सरं वैक ऋषिर्जायत इति १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/12_saMvatsaraM_vaika_RShirjAya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 11. Or one year, (according to) some (teachers); thus, they say, a Ṛṣi will be born (as their son).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/12_saMvatsaraM_vaika_RShirjAya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 संवत्सरं वैक ऋषिर्जायत इति १२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/13_charitavrataH_sUryAvide_vad.md">
-<details open><summary><h3>13 चरितव्रतः सूर्याविदे वधूवस्त्रन् ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चरितव्रतः सूर्याविदे वधूवस्त्रं दद्यात् १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/13_charitavrataH_sUryAvide_vad.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 12 [^7] . When he has fulfilled (this) observance (and has had intercourse with his wife), he should give the bride's shift to (the Brāhmaṇa) who knows the Sūryā hymn (Rig-veda X, 85);
 
 [^7]:  Śāṅkhāyana-Gṛhya I, 14, 12.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/13_charitavrataH_sUryAvide_vad.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 चरितव्रतः सूर्याविदे वधूवस्त्रं दद्यात् १३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/14_annam_brAhmaNebhyaH.md">
-<details open><summary><h3>14 अन्नम् ब्राह्मणेभ्यः ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्नं ब्राह्मणेभ्यः १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/14_annam_brAhmaNebhyaH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 13. 'Food to the Brāhmaṇas;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/14_annam_brAhmaNebhyaH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 अन्नं ब्राह्मणेभ्यः १४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/08/15_atha_svastyayanaM_vAchayIta.md">
-<details open><summary><h3>15 अथ स्वस्त्ययनं वाचयीत ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ स्वस्त्ययनं वाचयीत १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/08/15_atha_svastyayanaM_vAchayIta.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 14. Then he should cause them to pronounce auspicious words.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/08/15_atha_svastyayanaM_vAchayIta.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 अथ स्वस्त्ययनं वाचयीत १५
 </details>
-</div>
+
