--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/09.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/09.md
@@ -3,160 +3,144 @@ title = "०९"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/09/01_pANigrahaNAdi_gRhyam_parich.md">
-<details open><summary><h3>01 पाणिग्रहणादि गृह्यम् परिचरेत्स्वयम् ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पाणिग्रहणादि गृह्यं परिचरेत्स्वयं पत्न्यपि वा पुत्रः कुमार्यन्तेवासी वा १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/09/01_pANigrahaNAdi_gRhyam_parich.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Beginning from the seizing of (the bride's) hand (i.e. from the wedding), he should worship the domestic (fire) himself, or his wife, or also his son, or his daughter, or a pupil.
 
 [^1]:  9, 1. Comp. Śāṅkhāyana-Gṛhya II, 17, 3.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/09/01_pANigrahaNAdi_gRhyam_parich.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 पाणिग्रहणादि गृह्यं परिचरेत्स्वयं पत्न्यपि वा पुत्रः कुमार्यन्तेवासी वा १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/09/02_nityAnugRhItaM_syAt.md">
-<details open><summary><h3>02 नित्यानुगृहीतं स्यात् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नित्यानुगृहीतं स्यात् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/09/02_nityAnugRhItaM_syAt.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. (The fire) should be kept constantly.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/09/02_nityAnugRhItaM_syAt.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 नित्यानुगृहीतं स्यात् २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/09/03_yadi_tUpashAmyetpatnyupavas.md">
-<details open><summary><h3>03 यदि तूपशाम्येत्पत्न्युपवसेदित्येके ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यदि तूपशाम्येत्पत्न्युपवसेदित्येके ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/09/03_yadi_tUpashAmyetpatnyupavas.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. When it goes out, however, the wife should fast: thus (say) some (teachers).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/09/03_yadi_tUpashAmyetpatnyupavas.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यदि तूपशाम्येत्पत्न्युपवसेदित्येके ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/09/04_tasyAgnihotreNa.md">
-<details open><summary><h3>04 तस्याग्निहोत्रेण ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्याग्निहोत्रेण ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/09/04_tasyAgnihotreNa.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4 [^2] . By (the rules given with regard to) the Agnihotra,
 
 [^2]:  Śāṅkhāyana-Gṛhya I, I, 12; Āśvalāyana-Śrauta II, 2.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/09/04_tasyAgnihotreNa.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तस्याग्निहोत्रेण ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/09/05_prAduShkaraNahomakAlau_vyAk.md">
-<details open><summary><h3>05 प्रादुष्करणहोमकालौ व्याख्यातौ ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रादुष्करणहोमकालौ व्याख्यातौ ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/09/05_prAduShkaraNahomakAlau_vyAk.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 The time for setting it in a blaze and for sacrificing in it has been explained 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/09/05_prAduShkaraNahomakAlau_vyAk.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 प्रादुष्करणहोमकालौ व्याख्यातौ ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/09/06_haumya~n_cha_mAMsavarjam.md">
-<details open><summary><h3>06 हौम्यञ् च मांसवर्जम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हौम्यं च मांसवर्जम् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/09/06_haumya~n_cha_mAMsavarjam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 5 [^3] . And the sacrificial food, except meat.
 
 [^3]:  Āśvalāyana-Śrauta II, 3, 1 seq. Nārāyaṇa: By the prohibition of meat which is expressed in the words 'Except meat,' it is to be understood that the food to be sacrificed, as stated in other Śāstras, may likewise be chosen.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/09/06_haumya~n_cha_mAMsavarjam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 हौम्यं च मांसवर्जम् ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/09/07_kAman_tu_vrIhiyavatilaiH.md">
-<details open><summary><h3>07 कामन् तु व्रीहियवतिलैः ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कामं तु व्रीहियवतिलैः ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/09/07_kAman_tu_vrIhiyavatilaiH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 6. But if he likes he may (perform the sacrifice) with rice, barley, or sesamum.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/09/07_kAman_tu_vrIhiyavatilaiH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 कामं तु व्रीहियवतिलैः ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/09/08_agnaye_svAheti_sAya~n.md">
-<details open><summary><h3>08 अग्नये स्वाहेति सायञ् ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्नये स्वाहेति सायं जुहुयात् सूर्याय स्वाहेति प्रातस्तूष्णीं द्वितीये उभयत्र ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/09/08_agnaye_svAheti_sAya~n.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 7. He should sacrifice in the evening with (the formula), 'To Agni svāhā!' in the morning with (the formula), 'To Sūrya svāhā!' Silently the second (oblations) both times.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/09/08_agnaye_svAheti_sAya~n.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 अग्नये स्वाहेति सायं जुहुयात् सूर्याय स्वाहेति प्रातस्तूष्णीं द्वितीये उभयत्र ८
 </details>
-</div>
+
