--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/13.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/13.md
@@ -3,146 +3,139 @@ title = "१३"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/13/01_upaniShadi_garbhalambhanam_.md">
-<details open><summary><h3>01 उपनिषदि गर्भलम्भनम् पुंसवनमनवलोभनञ्च ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उपनिषदि गर्भलम्भनं पुंसवनमनवलोभनञ्च १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/13/01_upaniShadi_garbhalambhanam_.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . The Upaniṣad (treats of) the Garbhalambhana, the Puṃsavana, and the Anavalobhana (i.e. the ceremonies for securing the conception of a child, the male gender of the child, and for preventing disturbances which could endanger the embryo).
 
 [^1]:  13, 1. Nārāyaṇa evidently did not know the Upaniṣad here referred to; he states that it belongs to another Śākhā. Comp. Professor Max Müller's note on Bṛhad Āraṇyaka VI, 4, 24 (S.B.E., vol. xv, p. 222).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/13/01_upaniShadi_garbhalambhanam_.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उपनिषदि गर्भलम्भनं पुंसवनमनवलोभनञ्च १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/13/02_yadi_nAdhIyAttRtIye_garbham.md">
-<details open><summary><h3>02 यदि नाधीयात्तृतीये गर्भमासे ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यदि नाधीयात्तृतीये गर्भमासे तिष्येणोपोषितायाः सरूपवत्साया गोर्दधनि द्वौ द्वौ माषौ यवञ्च दधि प्रसृतेन प्राशयेत् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/13/02_yadi_nAdhIyAttRtIye_garbham.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . If he does not study (that Upaniṣad), he should in the third month of her pregnancy, under (the Nakṣatra) Tiṣya, give to eat (to the wife), after she has fasted, in curds from a cow which has a calf of the same colour (with herself), two beans and one barley grain for each handful of curds.
 
 [^2]:  'He should give her the two beans as a symbol of the testicles, and the barley grain as a symbol of the penis.' Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/13/02_yadi_nAdhIyAttRtIye_garbham.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यदि नाधीयात्तृतीये गर्भमासे तिष्येणोपोषितायाः सरूपवत्साया गोर्दधनि द्वौ द्वौ माषौ यवञ्च दधि प्रसृतेन प्राशयेत् २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/13/03_kim_pibasi_kim.md">
-<details open><summary><h3>03 किम् पिबसि किम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 किं पिबसि किं पिबसीति पृष्ट्वा पुंसवनं पुंसवनमिति त्रिः प्रतिजानीयात् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/13/03_kim_pibasi_kim.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 3. To his question, 'What dost thou drink? What dost thou drink?' she should thrice reply, 'Generation of a male child! Generation of a male child!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/13/03_kim_pibasi_kim.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 किं पिबसि किं पिबसीति पृष्ट्वा पुंसवनं पुंसवनमिति त्रिः प्रतिजानीयात् ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/13/04_evan_trInprasRtAn.md">
-<details open><summary><h3>04 एवन् त्रीन्प्रसृतान् ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं त्रीन्प्रसृतान् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/13/04_evan_trInprasRtAn.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 4. Thus three handfuls (of curds).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/13/04_evan_trInprasRtAn.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 एवं त्रीन्प्रसृतान् ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/13/05_athAsyai_maNDalAgArachChAyA.md">
-<details open><summary><h3>05 अथास्यै मण्डलागारच्छायायान् दक्षिणस्यान् ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथास्यै मण्डलागारच्छायायां दक्षिणस्यां नासिकायामजीतामोषधीं नस्तःकरोति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/13/05_athAsyai_maNDalAgArachChAyA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 5 [^3] . He then inserts into her right nostril, in the shadow of a round apartment, (the sap of) an herb which is not faded,
 
 [^3]:  Nārāyaṇa (comp. also the Prayogaratna, folio 40; Āśvalāyanīya-Gṛhya-Pariśiṣṭa I, 25; NIS. Chambers 667) separates this rite from the ceremony described in Sūtras 2-4. He says that Sūtras 2-4 - as indeed is evidently the case - refer to the Puṃsavana, and in Sūtra 5 begins the Anavalobhana (comp. garbharakṣaṇa, Sāṅkh. I, 21). To me it seems more probable that the text describes one continuous ceremony. There is no difficulty in supposing that of the Anavalobhana, though it is mentioned in Sūtra 1, no description is given in the following Sūtras, the same being the case undoubtedly with regard to the Garbhalambhana, of which a description is found in the Āśv.-Pariśiṣṭa I, 25.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/13/05_athAsyai_maNDalAgArachChAyA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 अथास्यै मण्डलागारच्छायायां दक्षिणस्यां नासिकायामजीतामोषधीं नस्तःकरोति ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/13/06_prajAvajjIvaputrAbhyAM_haik.md">
-<details open><summary><h3>06 प्रजावज्जीवपुत्राभ्यां हैके आ ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रजावज्जीवपुत्राभ्यां हैके आ ते गर्भो योनिमेतु पुमान्वाण इवेषुधिम्
 । आ वीरो जायतां पुत्रस्ते दशमास्यः । अग्निरेतु प्रथमो देवतानां सौऽस्यै प्रजां मुञ्चतु मृत्युपाशात् । तदयं राजा वरुणोऽनुमन्यतां यथेयं स्त्री पौत्रमघं न रोदादिति ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/13/06_prajAvajjIvaputrAbhyAM_haik.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 6 [^4] . According to some (teachers) with the Prajāvat and Jīvaputra hymns.
 
 [^4]:  Two texts commencing ā te garbho yonim etu and Agnir etu prathamaḥ. See Stenzler's Various Readings, p. 48, and the Bibliotheca Indica edition, p. 61.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/13/06_prajAvajjIvaputrAbhyAM_haik.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 प्रजावज्जीवपुत्राभ्यां हैके आ ते गर्भो योनिमेतु पुमान्वाण इवेषुधिम्
 । आ वीरो जायतां पुत्रस्ते दशमास्यः । अग्निरेतु प्रथमो देवतानां सौऽस्यै प्रजां मुञ्चतु मृत्युपाशात् । तदयं राजा वरुणोऽनुमन्यतां यथेयं स्त्री पौत्रमघं न रोदादिति ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/13/07_prAjApatyasya_sthAlIpAkasya.md">
-<details open><summary><h3>07 प्राजापत्यस्य स्थालीपाकस्य हुत्वा ...{Loading}...</h3></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राजापत्यस्य स्थालीपाकस्य हुत्वा हृदयदेशमस्या आलभेत यत्ते सुसीमे हृदये हितमन्तः प्रजापतौ । मन्येऽहं मां तद्विद्वांसं माहं पौत्रमघन्नियामिति ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/13/07_prAjApatyasya_sthAlIpAkasya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+
+<details><summary>Oldenberg</summary>
 
 7. Having sacrificed of a mess of cooked food sacred to Prajāpati, he should touch the place of her heart with the (verse,) 'What is hidden, O thou whose hair is well parted, in thy heart, in Prajāpati, that I know; such is my belief. May I not fall into distress that comes from sons.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/13/07_prAjApatyasya_sthAlIpAkasya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+
+<details><summary>मूलम्</summary>
 
 प्राजापत्यस्य स्थालीपाकस्य हुत्वा हृदयदेशमस्या आलभेत यत्ते सुसीमे हृदये हितमन्तः प्रजापतौ । मन्येऽहं मां तद्विद्वांसं माहं पौत्रमघन्नियामिति ७
 </details>
-</div>
+
