--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/17.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/17.md
@@ -3,228 +3,193 @@ title = "१७"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/01_tRtIye_varShe_chaulaM.md">
-<details open><summary><h3>01 तृतीये वर्षे चौलं ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तृतीये वर्षे चौलं यथाकुलधर्मं वा १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/01_tRtIye_varShe_chaulaM.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. In the third year the Caula (i.e. the tonsure of the child's head), or according to the custom of the family.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/01_tRtIye_varShe_chaulaM.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तृतीये वर्षे चौलं यथाकुलधर्मं वा १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/02_uttarato-gnervrIhiyavamASha.md">
-<details open><summary><h3>02 उत्तरतोऽग्नेर्व्रीहियवमाषतिलानाम् पृथक्पूर्णशरावाणि निदधाति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तरतोऽग्नेर्व्रीहियवमाषतिलानां पृथक्पूर्णशरावाणि निदधाति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/02_uttarato-gnervrIhiyavamASha.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. To the north of the fire he places vessels which are filled respectively, with rice, barley, beans, and sesamum seeds;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/02_uttarato-gnervrIhiyavamASha.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उत्तरतोऽग्नेर्व्रीहियवमाषतिलानां पृथक्पूर्णशरावाणि निदधाति २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/03_pashchAtkArayiShyamANo_mAtu.md">
-<details open><summary><h3>03 पश्चात्कारयिष्यमाणो मातुरुपस्थ आनडुहङ् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पश्चात्कारयिष्यमाणो मातुरुपस्थ आनडुहं गोमयं नवे शरावे शमीपर्णानि चोपनिहितानि भवन्ति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/03_pashchAtkArayiShyamANo_mAtu.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. To the west (the boy) for whom the ceremony shall be performed, in his mother's lap, bull-dung in a new vessel, and Śamī leaves are placed.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/03_pashchAtkArayiShyamANo_mAtu.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 पश्चात्कारयिष्यमाणो मातुरुपस्थ आनडुहं गोमयं नवे शरावे शमीपर्णानि चोपनिहितानि भवन्ति ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/04_mAtuH_pitA_daxiNata.md">
-<details open><summary><h3>04 मातुः पिता दक्षिणत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मातुः पिता दक्षिणत एकविंशतिकुशपिञ्जूलान्यादाय ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/04_mAtuH_pitA_daxiNata.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4 [^1] . To the south of the mother the father (is seated) holding twenty-one bunches of Kuśa grass.
 
 [^1]:  He cuts off the hair four times on the right side (Sūtras 10-14), three times on the left side (Sūtra 15); each time three Kuśa bunches are required. This is the reason why twenty-one bunches are prescribed.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/04_mAtuH_pitA_daxiNata.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 मातुः पिता दक्षिणत एकविंशतिकुशपिञ्जूलान्यादाय ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/05_brahmA_vaitAni_dhArayet.md">
-<details open><summary><h3>05 ब्रह्मा वैतानि धारयेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्रह्मा वैतानि धारयेत् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/05_brahmA_vaitAni_dhArayet.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. Or the Brahman should hold them.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/05_brahmA_vaitAni_dhArayet.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ब्रह्मा वैतानि धारयेत् ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/06_pashchAtkArayiShyamANasyAva.md">
-<details open><summary><h3>06 पश्चात्कारयिष्यमाणस्यावस्थाय शीतोष्णा अपः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पश्चात्कारयिष्यमाणस्यावस्थाय शीतोष्णा अपः समानीयोष्णेन वा य उदकेनेहीति ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/06_pashchAtkArayiShyamANasyAva.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. To the west of (the boy) for whom the ceremony is to be performed, (the father) stations himself and pours cold and warm water together with (the words), 'With warm water, O Vāyu, come hither!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/06_pashchAtkArayiShyamANasyAva.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 पश्चात्कारयिष्यमाणस्यावस्थाय शीतोष्णा अपः समानीयोष्णेन वा य उदकेनेहीति ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/07_tAsA~N_gRhItvA_navanItan.md">
-<details open><summary><h3>07 तासाङ् गृहीत्वा नवनीतन् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तासां गृहीत्वा नवनीतं दधिद्रप्सान्वा प्रदक्षिणं शिरस्त्रिरुन्दति अदितिः केशान्वपत्वाप उन्दन्तु वर्चस इति ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/07_tAsA~N_gRhItvA_navanItan.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. Taking of that (water), (and) fresh butter, or (some) drops of curds, he three times moistens (the boy's) head, from the left to the right, with (the formula), 'May Aditi cut thy hair; may the waters moisten thee for vigour!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/07_tAsA~N_gRhItvA_navanItan.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तासां गृहीत्वा नवनीतं दधिद्रप्सान्वा प्रदक्षिणं शिरस्त्रिरुन्दति अदितिः केशान्वपत्वाप उन्दन्तु वर्चस इति ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/08_daxiNe_keshapaxe_trINi.md">
-<details open><summary><h3>08 दक्षिणे केशपक्षे त्रीणि ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दक्षिणे केशपक्षे त्रीणि त्रीणि कुशपिञ्जूलान्यभ्यात्माग्राणि निदधाति ओषधे त्रायस्वैनमिति ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/08_daxiNe_keshapaxe_trINi.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8 [^2] . Into the right part (of the hair) he puts each time three Kuśa bunches, with the points towards (the boy) himself, with (the words), 'Herb! protect him!'
 
 [^2]:  Each of the four times and of the three times respectively that he cuts off the hair; see the preceding note.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/08_daxiNe_keshapaxe_trINi.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 दक्षिणे केशपक्षे त्रीणि त्रीणि कुशपिञ्जूलान्यभ्यात्माग्राणि निदधाति ओषधे त्रायस्वैनमिति ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/09_svadhite_mainaM_hiMsIriti.md">
-<details open><summary><h3>09 स्वधिते मैनं हिंसीरिति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वधिते मैनं हिंसीरिति निष्पोड्य लौहेन क्षुरेण ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/09_svadhite_mainaM_hiMsIriti.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. (With the words,) 'Axe! do no harm to him!' he presses a copper razor (on the Kuśa blades),
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/09_svadhite_mainaM_hiMsIriti.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 स्वधिते मैनं हिंसीरिति निष्पोड्य लौहेन क्षुरेण ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/10_praChinatti_yenAvapatsavitA.md">
-<details open><summary><h3>10 प्रछिनत्ति येनावपत्सविता क्षुरेण ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रछिनत्ति येनावपत्सविता क्षुरेण सोमस्य राज्ञो वरुणस्य विद्वान् । तेन ब्रह्माणो वपतेदमस्यायुष्माञ्जरदष्टिर्यथासदिति १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/10_praChinatti_yenAvapatsavitA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. And cuts (the hair) with (the verse), 'The razor with which in the beginning Savitṛ the knowing one has shaved (the beard) of king Soma and of Varuṇa, with that, ye Brāhmaṇas, shave now his (hair), that he may be blessed with long life, with old age.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/10_praChinatti_yenAvapatsavitA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 प्रछिनत्ति येनावपत्सविता क्षुरेण सोमस्य राज्ञो वरुणस्य विद्वान् । तेन ब्रह्माणो वपतेदमस्यायुष्माञ्जरदष्टिर्यथासदिति १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/11_prachChidyaprachChidya_prAg.md">
-<details open><summary><h3>11 प्रच्छिद्यप्रच्छिद्य प्रागग्राञ्छमीपर्णैः सह ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रच्छिद्यप्रच्छिद्य प्रागग्राञ्छमीपर्णैः सह मात्रे प्रयच्छति तानानडुहे गोमये निदधाति ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/11_prachChidyaprachChidya_prAg.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 11. Each time that he has cut, he gives (the hairs) with their points to the east, together with Śamī leaves, to the mother. She puts them down on the bull-dung.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/11_prachChidyaprachChidya_prAg.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 प्रच्छिद्यप्रच्छिद्य प्रागग्राञ्छमीपर्णैः सह मात्रे प्रयच्छति तानानडुहे गोमये निदधाति ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/12_yena_dhAtA_bRhaspateragneri.md">
-<details open><summary><h3>12 येन धाता बृहस्पतेरग्नेरिन्द्रस्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 येन धाता बृहस्पतेरग्नेरिन्द्रस्य चायुषेऽवपत् । तेन त आयुषे वपामि सुश्लोक्याय स्वस्तय इति द्वितीयम् ।  
 येन भूयश्चरात्र्यां ज्योक्च पश्याति सूर्यम् । तेन त आयुषे वपामि सुश्लोक्याय स्वस्तय इति तृतीयम् १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/12_yena_dhAtA_bRhaspateragneri.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 12. 'With what Dhātṛ has shaven (the head) of Bṛhaspati, Agni and Indra, for the sake of long life, with that I shave thy (head) for the sake of long life, of glory, and of welfare' - thus a second time.
 
@@ -233,129 +198,110 @@ title = "१७"
 [^3]:  Instead of yena bhūyaś ca rātryām, Pāraskara (II, 1, 16) has, yena bhūriś carā divam.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/12_yena_dhAtA_bRhaspateragneri.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 येन धाता बृहस्पतेरग्नेरिन्द्रस्य चायुषेऽवपत् । तेन त आयुषे वपामि सुश्लोक्याय स्वस्तय इति द्वितीयम् ।  
 येन भूयश्चरात्र्यां ज्योक्च पश्याति सूर्यम् । तेन त आयुषे वपामि सुश्लोक्याय स्वस्तय इति तृतीयम् १२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/13_sarvairmantraishchaturtham.md">
-<details open><summary><h3>13 सर्वैर्मन्त्रैश्चतुर्थम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्वैर्मन्त्रैश्चतुर्थम् १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/13_sarvairmantraishchaturtham.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 14. With all (the indicated) Mantras a fourth time.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/13_sarvairmantraishchaturtham.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सर्वैर्मन्त्रैश्चतुर्थम् १३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/14_evamuttaratastriH.md">
-<details open><summary><h3>14 एवमुत्तरतस्त्रिः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवमुत्तरतस्त्रिः १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/14_evamuttaratastriH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 15. Thus three times on the left side (of the head).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/14_evamuttaratastriH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 एवमुत्तरतस्त्रिः १४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/15_xuratejo_nimRjedyatxureNa_m.md">
-<details open><summary><h3>15 क्षुरतेजो निमृजेद्यत्क्षुरेण मर्चयता ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्षुरतेजो निमृजेद्यत्क्षुरेण मर्चयता सुपेशसा वप्ता वपसि केशान् । शुन्धि शिरो मास्यायुः प्रमोषीरिति १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/15_xuratejo_nimRjedyatxureNa_m.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 16 [^4] . Let him wipe off the edge of the razor with (the words), 'If thou shavest, as a shaver, his hair with the razor, the wounding, the well-shaped, purify his head, but do not take away his life.'
 
 [^4]:  Comp. Pāraskara II, I, 19; Atharva-veda VIII, 2, 17.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/15_xuratejo_nimRjedyatxureNa_m.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 क्षुरतेजो निमृजेद्यत्क्षुरेण मर्चयता सुपेशसा वप्ता वपसि केशान् । शुन्धि शिरो मास्यायुः प्रमोषीरिति १५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/16_nApitaM_shiShyAchChItoShNAb.md">
-<details open><summary><h3>16 नापितं शिष्याच्छीतोष्णाभिरद्भिरवर्थङ् कुर्वाणोऽक्षण्वन्कुशलीकुर्विति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नापितं शिष्याच्छीतोष्णाभिरद्भिरवर्थं कुर्वाणोऽक्षण्वन्कुशलीकुर्विति १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/16_nApitaM_shiShyAchChItoShNAb.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 17. Let him give orders to the barber, 'With lukewarm water doing what has to be done with water, without doing harm to him, arrange (his hair) well.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/16_nApitaM_shiShyAchChItoShNAb.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 नापितं शिष्याच्छीतोष्णाभिरद्भिरवर्थं कुर्वाणोऽक्षण्वन्कुशलीकुर्विति १६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/17_yathAkuladharma~N_keshavesh.md">
-<details open><summary><h3>17 यथाकुलधर्मङ् केशवेशान् कारयेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यथाकुलधर्मं केशवेशान् कारयेत् १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/17_yathAkuladharma~N_keshavesh.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 18 [^5] . Let him have the arrangement of the hair made according to the custom of his family.
 
 [^5]:  On these family customs, see Gṛhya-saṃgraha-pariśiṣṭa II, 40; Roth, Zur Literatur and Geschichte des Weda, p. 120; Max Müller, History of A. S. L., p. 54 seq.; Weber, Indische Studien, X, 95.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/17_yathAkuladharma~N_keshavesh.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यथाकुलधर्मं केशवेशान् कारयेत् १७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/17/18_AvRtaiva_kumAryyai.md">
-<details open><summary><h3>18 आवृतैव कुमार्य्यै ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आवृतैव कुमार्य्यै १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/17/18_AvRtaiva_kumAryyai.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 19. The rite only (without the Mantras) for a girl.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/17/18_AvRtaiva_kumAryyai.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आवृतैव कुमार्य्यै १८
 </details>
-</div>
+
