--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/22.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/1/22.md
@@ -3,147 +3,124 @@ title = "२२"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/01_mekhalAmAbadhya_daNDam_prad.md">
-<details open><summary><h3>01 मेखलामाबध्य दण्डम् प्रदाय ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मेखलामाबध्य दण्डं प्रदाय ब्रह्मचर्यमादिशेत् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/01_mekhalAmAbadhya_daNDam_prad.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. Having tied the girdle round him and given him the staff, he should impose the (observances of the) Brahmacarya on him - 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/01_mekhalAmAbadhya_daNDam_prad.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 मेखलामाबध्य दण्डं प्रदाय ब्रह्मचर्यमादिशेत् १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/02_brahmachAryasyapo-shAna_kar.md">
-<details open><summary><h3>02 ब्रह्मचार्यस्यपोऽशान कर्म कुरु ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्रह्मचार्यस्यपोऽशान कर्म कुरु दिवा मास्वाप्सीराचार्याधीनो वेदमधीष्वेति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/02_brahmachAryasyapo-shAna_kar.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. (With the words), 'A Brahmacārin thou art. Eat water. Do the service. Do not sleep in the day-time. Devoted to the teacher study the Veda.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/02_brahmachAryasyapo-shAna_kar.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ब्रह्मचार्यस्यपोऽशान कर्म कुरु दिवा मास्वाप्सीराचार्याधीनो वेदमधीष्वेति २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/03_dvAdasha_varShANi_vedabrahm.md">
-<details open><summary><h3>03 द्वादश वर्षाणि वेदब्रह्मचर्यम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 द्वादश वर्षाणि वेदब्रह्मचर्यम् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/03_dvAdasha_varShANi_vedabrahm.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. Twelve years lasts the Brahmacarya for (each) Veda, 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/03_dvAdasha_varShANi_vedabrahm.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 द्वादश वर्षाणि वेदब्रह्मचर्यम् ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/04_grahaNAntaM_vA.md">
-<details open><summary><h3>04 ग्रहणान्तं वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ग्रहणान्तं वा ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/04_grahaNAntaM_vA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 or until he has learnt it.
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/04_grahaNAntaM_vA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ग्रहणान्तं वा ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/05_sAyam_prAtarbhixeta.md">
-<details open><summary><h3>05 सायम् प्रातर्भिक्षेत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सायं प्रातर्भिक्षेत ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/05_sAyam_prAtarbhixeta.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. Let him beg (food) in the evening and in the morning.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/05_sAyam_prAtarbhixeta.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सायं प्रातर्भिक्षेत ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/06_sAyam_prAtaH_samidhamAdadhy.md">
-<details open><summary><h3>06 सायम् प्रातः समिधमादध्यात् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सायं प्रातः समिधमादध्यात् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/06_sAyam_prAtaH_samidhamAdadhy.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. Let him put fuel on (the fire) in the evening and in the morning.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/06_sAyam_prAtaH_samidhamAdadhy.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सायं प्रातः समिधमादध्यात् ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/07_apratyAkhyAyinamagre_bhixet.md">
-<details open><summary><h3>07 अप्रत्याख्यायिनमग्रे भिक्षेताप्रत्याख्यायिनीं वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अप्रत्याख्यायिनमग्रे भिक्षेताप्रत्याख्यायिनीं वा ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/07_apratyAkhyAyinamagre_bhixet.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. Let him beg first of a man who will not refuse,  
 7. Or of a woman who will not refuse.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/07_apratyAkhyAyinamagre_bhixet.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अप्रत्याख्यायिनमग्रे भिक्षेताप्रत्याख्यायिनीं वा ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/08_bhavAn_bhixAn_dadAtvityanup.md">
-<details open><summary><h3>08 भवान् भिक्षान् ददात्वित्यनुप्रवचनीयमिति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवान् भिक्षां ददात्वित्यनुप्रवचनीयमिति वा ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/08_bhavAn_bhixAn_dadAtvityanup.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. (In begging he should use the words), 'Sir, give food!'
 
@@ -152,21 +129,18 @@ or until he has learnt it.
 [^1]:  22, 9. Food for the Anupravacanīya offering; see Sūtra 12.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/08_bhavAn_bhixAn_dadAtvityanup.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 भवान् भिक्षां ददात्वित्यनुप्रवचनीयमिति वा ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/09_tadAchAryAya_vedayIta_tiShT.md">
-<details open><summary><h3>09 तदाचार्याय वेदयीत तिष्ठेदहःशेषम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदाचार्याय वेदयीत तिष्ठेदहःशेषम् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/09_tadAchAryAya_vedayIta_tiShT.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10 [^2] . That (which he has received) he should announce to his teacher.
 
@@ -175,271 +149,230 @@ or until he has learnt it.
 11. He should stand the rest of the day.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/09_tadAchAryAya_vedayIta_tiShT.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तदाचार्याय वेदयीत तिष्ठेदहःशेषम् ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/10_astamite_brahmaudanamanupra.md">
-<details open><summary><h3>10 अस्तमिते ब्रह्मौदनमनुप्रवचनीयं श्रपयित्वाचार्याय ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अस्तमिते ब्रह्मौदनमनुप्रवचनीयं श्रपयित्वाचार्याय वेदयीत १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/10_astamite_brahmaudanamanupra.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 12 [^3] . After sunset (the student) should cook the Brāhmaudana (or boiled rice with which the Brāhmaṇas are to be fed) for the Anupravacanīya sacrifice (the sacrifice to be performed after a part of the Veda has been studied), and should announce to the teacher (that it is ready).
 
 [^3]:  'The student should, according to the rules for the Pākayajñas, cook the Anupravacanīya food and announce it to the teacher in the words, "The food is cooked."' Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/10_astamite_brahmaudanamanupra.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अस्तमिते ब्रह्मौदनमनुप्रवचनीयं श्रपयित्वाचार्याय वेदयीत १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/11_AchAryaH_samanvArabdhe_juhu.md">
-<details open><summary><h3>11 आचार्यः समन्वारब्धे जुहुयात्सदसस्पतिमद्भुतमिति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आचार्यः समन्वारब्धे जुहुयात्सदसस्पतिमद्भुतमिति ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/11_AchAryaH_samanvArabdhe_juhu.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 13. The teacher should sacrifice, while the student takes hold of him, with the verse, 'The wonderful lord of the abode' (Rig-Veda I, 18, 6).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/11_AchAryaH_samanvArabdhe_juhu.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आचार्यः समन्वारब्धे जुहुयात्सदसस्पतिमद्भुतमिति ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/12_sAvitryA_dvitIyam.md">
-<details open><summary><h3>12 सावित्र्या द्वितीयम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सावित्र्या द्वितीयम् १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/12_sAvitryA_dvitIyam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 14. A second time with the Sāvitrī - 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/12_sAvitryA_dvitIyam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सावित्र्या द्वितीयम् १२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/13_yadyatkinchAta_UrdhvamanUkt.md">
-<details open><summary><h3>13 यद्यत्किञ्चात ऊर्ध्वमनूक्तं स्यात् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यद्यत्किञ्चात ऊर्ध्वमनूक्तं स्यात् १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/13_yadyatkinchAta_UrdhvamanUkt.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 15 [^4] . And whatever else has been studied afterwards.
 
 [^4]:  Nārāyaṇa mentions as such texts especially those belonging to the Āraṇyaka, viz. the Mahānāmnyas, the Mahāvrata, and the Upaniṣad. But there is no reason why we should not think quite as well of the Rig-veda Saṃhitā itself.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/13_yadyatkinchAta_UrdhvamanUkt.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यद्यत्किञ्चात ऊर्ध्वमनूक्तं स्यात् १३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/14_RShibhyastRtIyam.md">
-<details open><summary><h3>14 ऋषिभ्यस्तृतीयम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ऋषिभ्यस्तृतीयम् १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/14_RShibhyastRtIyam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 16. A third time to the Ṛṣis.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/14_RShibhyastRtIyam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ऋषिभ्यस्तृतीयम् १४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/15_sauviShTakRta~n_chaturtham.md">
-<details open><summary><h3>15 सौविष्टकृतञ् चतुर्थम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सौविष्टकृतं चतुर्थम् १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/15_sauviShTakRta~n_chaturtham.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 17. A fourth time (the oblation) to (Agni) Sviṣṭakṛt.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/15_sauviShTakRta~n_chaturtham.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सौविष्टकृतं चतुर्थम् १५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/16_brAhmaNAnbhojayitvA_vedasam.md">
-<details open><summary><h3>16 ब्राह्मणान्भोजयित्वा वेदसमाप्तिं वाचयीत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्राह्मणान्भोजयित्वा वेदसमाप्तिं वाचयीत १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/16_brAhmaNAnbhojayitvA_vedasam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 18 [^5] . Having given food to the Brāhmaṇas he should cause them to pronounce the end of the Veda (study).
 
 [^5]:  'He should say, "Sirs! Pronounce the end of the Veda (study)." And they should reply, "May an end of the Veda (study) be made."' Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/16_brAhmaNAnbhojayitvA_vedasam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ब्राह्मणान्भोजयित्वा वेदसमाप्तिं वाचयीत १६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/17_ata_UrdhvamaxAralavaNAshI_b.md">
-<details open><summary><h3>17 अत ऊर्ध्वमक्षारलवणाशी ब्रह्मचार्यधःशायी ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अत ऊर्ध्वमक्षारलवणाशी ब्रह्मचार्यधःशायी त्रिरात्रं द्वादशरात्रं संवत्सरं वा १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/17_ata_UrdhvamaxAralavaNAshI_b.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 19. From that time (the student) should eat no saline food; he should observe chastity, and should sleep on the ground through three nights, or twelve nights, or one year.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/17_ata_UrdhvamaxAralavaNAshI_b.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अत ऊर्ध्वमक्षारलवणाशी ब्रह्मचार्यधःशायी त्रिरात्रं द्वादशरात्रं संवत्सरं वा १७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/18_charitavratAya_medhAjanana~.md">
-<details open><summary><h3>18 चरितव्रताय मेधाजननङ् करोति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चरितव्रताय मेधाजननं करोति १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/18_charitavratAya_medhAjanana~.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 20 [^6] . When he has fulfilled those observances, (the teacher) performs (for him) the 'production of intelligence,' (in the following way):
 
 [^6]:  Comp. above, chap. 15, 2.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/18_charitavratAya_medhAjanana~.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 चरितव्रताय मेधाजननं करोति १८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/19_aninditAyAndishyekamUlam_pa.md">
-<details open><summary><h3>19 अनिन्दितायान्दिश्येकमूलम् पलाशङ् कुशस्तम्बं ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनिन्दितायान्दिश्येकमूलं पलाशं कुशस्तम्बं वा पलाशापचारे प्रदक्षिणमुदकुम्भेन त्रिः परिषिञ्चन्तं वाचयति सुश्रवः सुश्रवा असि यथा त्वं सुश्रवः सुश्रवा अस्येवं मां सुश्रवः सौश्रवसं कुरु । यथा त्वं देवानां यज्ञस्य निधिपोऽस्येवमहं मनुष्याणां वेदस्य निधिपो भूयासमिति १९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/19_aninditAyAndishyekamUlam_pa.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अनिन्दितायान्दिश्येकमूलं पलाशं कुशस्तम्बं वा पलाशापचारे प्रदक्षिणमुदकुम्भेन त्रिः परिषिञ्चन्तं वाचयति सुश्रवः सुश्रवा असि यथा त्वं सुश्रवः सुश्रवा अस्येवं मां सुश्रवः सौश्रवसं कुरु । यथा त्वं देवानां यज्ञस्य निधिपोऽस्येवमहं मनुष्याणां वेदस्य निधिपो भूयासमिति १९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/20_etena_vApanAdiparidAnAntaM_.md">
-<details open><summary><h3>20 एतेन वापनादिपरिदानान्तं व्रतादेशनं ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एतेन वापनादिपरिदानान्तं व्रतादेशनं व्याख्यातम् २०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/20_etena_vApanAdiparidAnAntaM_.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 22 [^8] . Thereby, beginning with his having the hair cut, and ending with the giving in charge, the imposing of observances has been declared.
 
 [^8]:  The rules stated above for the Upanayana, beginning with the prescription regarding the cutting of the hair (given chap. 19, so in the words, 'whose [hair on the] head is arranged;' see the note there), and ending with the ceremony prescribed chap. 20, 8, are to be extended also to other cases of the imposing of a vow, such, for instance, as that mentioned chap. 18, 9.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/20_etena_vApanAdiparidAnAntaM_.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 एतेन वापनादिपरिदानान्तं व्रतादेशनं व्याख्यातम् २०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/21_ityanupetapUrvasya.md">
-<details open><summary><h3>21 इत्यनुपेतपूर्वस्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इत्यनुपेतपूर्वस्य २१
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/21_ityanupetapUrvasya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 23. Thus for one who has not been initiated before.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/21_ityanupetapUrvasya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 इत्यनुपेतपूर्वस्य २१
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/22_athopetapUrvasya.md">
-<details open><summary><h3>22 अथोपेतपूर्वस्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथोपेतपूर्वस्य २२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/22_athopetapUrvasya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 24. Now as regards one who has been initiated before:
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/22_athopetapUrvasya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथोपेतपूर्वस्य २२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/23_kRtAkRta~N_keshavapanam_med.md">
-<details open><summary><h3>23 कृताकृतङ् केशवपनम् मेधाजननञ् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कृताकृतं केशवपनं मेधाजननं च २३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/23_kRtAkRta~N_keshavapanam_med.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 25 [^9] . The cutting of the hair is optional,
 
@@ -450,73 +383,63 @@ or until he has learnt it.
 [^10]:  See above, Sūtra 20.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/23_kRtAkRta~N_keshavapanam_med.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 कृताकृतं केशवपनं मेधाजननं च २३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/24_aniruktam_paridAnam.md">
-<details open><summary><h3>24 अनिरुक्तम् परिदानम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनिरुक्तं परिदानम् २४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/24_aniruktam_paridAnam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 27 [^11] . On the giving in charge there are no express rules (in this case);
 
 [^11]:  See chap. 20, 8.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/24_aniruktam_paridAnam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अनिरुक्तं परिदानम् २४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/25_kAlashcha.md">
-<details open><summary><h3>25 कालश्च ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कालश्च २५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/25_kAlashcha.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 28 [^12] . And on the time.
 
 [^12]:  See chap. 4, 1.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/25_kAlashcha.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 कालश्च २५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/1/22/26_tatsaviturvRNImaha_iti_sAvi.md">
-<details open><summary><h3>26 तत्सवितुर्वृणीमह इति सावित्रीम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्सवितुर्वृणीमह इति सावित्रीं२६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/1/22/26_tatsaviturvRNImaha_iti_sAvi.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 29 [^13] . (He should recite to him) as the Sāvitrī (the Ṛc),'That we choose of god Savitṛ' (Rig-veda V, 82, 1).
 
 [^13]:  Instead of the ordinary Sāvitrī, Rig-veda III, 62, 10.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/1/22/26_tatsaviturvRNImaha_iti_sAvi.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तत्सवितुर्वृणीमह इति सावित्रीं२६
 </details>
-</div>
+
