--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/2/08.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/2/08.md
@@ -3,305 +3,258 @@ title = "०८"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/01_athaitairvAstu_parIxeta.md">
-<details open><summary><h3>01 अथैतैर्वास्तु परीक्षेत ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथैतैर्वास्तु परीक्षेत १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/01_athaitairvAstu_parIxeta.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. Now he should examine the ground in the following ways.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/01_athaitairvAstu_parIxeta.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथैतैर्वास्तु परीक्षेत १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/02_jAnumAtrangarta~N_khAtvA_ta.md">
-<details open><summary><h3>02 जानुमात्रङ्गर्तङ् खात्वा तैरेव ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जानुमात्रङ्गर्तं खात्वा तैरेव पांसुभिः प्रतिपूरयेत् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/02_jAnumAtrangarta~N_khAtvA_ta.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. He should dig a pit knee-deep and fill it again with the same earth (which he has taken out of it).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/02_jAnumAtrangarta~N_khAtvA_ta.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 जानुमात्रङ्गर्तं खात्वा तैरेव पांसुभिः प्रतिपूरयेत् २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/03_adhike_prashastaM_same.md">
-<details open><summary><h3>03 अधिके प्रशस्तं समे ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधिके प्रशस्तं समे वार्त्तं न्यूने गर्हितम् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/03_adhike_prashastaM_same.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. If (the earth) reaches out (of the pit, the ground is) excellent; if it is level, (it is) of middle quality; if it does not fill (the pit, it is) to be rejected.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/03_adhike_prashastaM_same.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अधिके प्रशस्तं समे वार्त्तं न्यूने गर्हितम् ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/04_astamite-pAM_supUrNam_pariv.md">
-<details open><summary><h3>04 अस्तमितेऽपां सुपूर्णम् परिवासयेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अस्तमितेऽपां सुपूर्णं परिवासयेत् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/04_astamite-pAM_supUrNam_pariv.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. After sunset he should fill (the pit) with water and leave it so through the night.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/04_astamite-pAM_supUrNam_pariv.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अस्तमितेऽपां सुपूर्णं परिवासयेत् ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/05_sodake_prashastamArdre_vArt.md">
-<details open><summary><h3>05 सोदके प्रशस्तमार्द्रे वार्त्तं ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोदके प्रशस्तमार्द्रे वार्त्तं शुष्के गर्हितं श्वेतं मधुरास्वादम् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/05_sodake_prashastamArdre_vArt.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. If (in the morning) there is water in it, (the ground is) excellent; if it is moist, (it is) of middle quality; if it is dry, (it is) to be rejected.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/05_sodake_prashastamArdre_vArt.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सोदके प्रशस्तमार्द्रे वार्त्तं शुष्के गर्हितं श्वेतं मधुरास्वादम् ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/06_sikatottaram_brAhmaNasya.md">
-<details open><summary><h3>06 सिकतोत्तरम् ब्राह्मणस्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सिकतोत्तरं ब्राह्मणस्य ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/06_sikatottaram_brAhmaNasya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. White (ground), of sweet taste, with sand on the surface, (should be elected) by a Brāhmaṇa.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/06_sikatottaram_brAhmaNasya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सिकतोत्तरं ब्राह्मणस्य ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/07_lohita~N_xatriyasya.md">
-<details open><summary><h3>07 लोहितङ् क्षत्रियस्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 लोहितं क्षत्रियस्य ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/07_lohita~N_xatriyasya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. Red (ground) for a Kṣatriya.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/07_lohita~N_xatriyasya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 लोहितं क्षत्रियस्य ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/08_pItaM_vaishyasya.md">
-<details open><summary><h3>08 पीतं वैश्यस्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पीतं वैश्यस्य ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/08_pItaM_vaishyasya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. Yellow (ground) for a Vaiśya.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/08_pItaM_vaishyasya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 पीतं वैश्यस्य ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/09_tatsahasrasIta~N_kRtvA_yath.md">
-<details open><summary><h3>09 तत्सहस्रसीतङ् कृत्वा यथादिक्समचतुरस्रम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्सहस्रसीतं कृत्वा यथादिक्समचतुरस्रं मापयेत् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/09_tatsahasrasIta~N_kRtvA_yath.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. He should draw a thousand furrows on it and should have it measured off as quadrangular, with equal sides to each (of the four) directions;
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/09_tatsahasrasIta~N_kRtvA_yath.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तत्सहस्रसीतं कृत्वा यथादिक्समचतुरस्रं मापयेत् ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/10_Ayata~n_chaturasraM_vA.md">
-<details open><summary><h3>10 आयतञ् चतुरस्रं वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आयतं चतुरस्रं वा १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/10_Ayata~n_chaturasraM_vA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. Or as an oblong quadrangle.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/10_Ayata~n_chaturasraM_vA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आयतं चतुरस्रं वा १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/11_tachChamIshAkhayoDumbarashA.md">
-<details open><summary><h3>11 तच्छमीशाखयोडुम्बरशाखया वा शन्तातीयेन ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तच्छमीशाखयोडुम्बरशाखया वा शन्तातीयेन त्रिः परिव्रजन्प्रोक्षति ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/11_tachChamIshAkhayoDumbarashA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 11 [^1] . With a Śamī branch or an Udumbara branch he sprinkles it (with water), going thrice round it, so that his right side is turned towards it, reciting the Śantātīya hymn.
 
 [^1]:  8, 11. The hymn of which all verses (except a few) commence with, and frequently contain, the word śam (Rig-veda VII, 35).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/11_tachChamIshAkhayoDumbarashA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तच्छमीशाखयोडुम्बरशाखया वा शन्तातीयेन त्रिः परिव्रजन्प्रोक्षति ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/12_avichChinnayA_chodakadhAray.md">
-<details open><summary><h3>12 अविच्छिन्नया चोदकधारयापो हि ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अविच्छिन्नया चोदकधारयापो हि ष्ठा मयोभुव इति तृचेन १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/12_avichChinnayA_chodakadhAray.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 12. And (so he does again three times) pouring out water without interruption, with the three verses, 'O waters, ye are wholesome' (Rig-veda X, 9, 1 seqq.).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/12_avichChinnayA_chodakadhAray.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अविच्छिन्नया चोदकधारयापो हि ष्ठा मयोभुव इति तृचेन १२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/13_vaMshAntareShu_sharaNAni_kA.md">
-<details open><summary><h3>13 वंशान्तरेषु शरणानि कारयेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वंशान्तरेषु शरणानि कारयेत् १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/13_vaMshAntareShu_sharaNAni_kA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 13 [^2] . In the interstices between the bamboo staffs he should have the (single) rooms constructed.
 
 [^2]:  The bamboo staffs (vaṃśa) rest on the chief posts (sthūṇā); see chap. 9, 1. 2.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/13_vaMshAntareShu_sharaNAni_kA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 वंशान्तरेषु शरणानि कारयेत् १३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/14_garteShvavakAM_shIpAlamitya.md">
-<details open><summary><h3>14 गर्तेष्ववकां शीपालमित्यवधापयेन्नास्याग्निर्दाहुको भवतीति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गर्तेष्ववकां शीपालमित्यवधापयेन्नास्याग्निर्दाहुको भवतीति विज्ञायते १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/14_garteShvavakAM_shIpAlamitya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 14. Into the pits in which the posts are to stand, he should have an Avakā, i.e. (the water-plant called) Śīpāla put down; then fire will not befall him: thus it is understood (in the Śruti).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/14_garteShvavakAM_shIpAlamitya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 गर्तेष्ववकां शीपालमित्यवधापयेन्नास्याग्निर्दाहुको भवतीति विज्ञायते १४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/15_madhyamasthUNAyA_garte-vadh.md">
-<details open><summary><h3>15 मध्यमस्थूणाया गर्तेऽवधाय प्रागग्रोदग्रान्कुशानास्तीर्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मध्यमस्थूणाया गर्तेऽवधाय प्रागग्रोदग्रान्कुशानास्तीर्य व्रीहियवमतीरप आसेचयेदच्युताय भौमाय स्वाहेति १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/15_madhyamasthUNAyA_garte-vadh.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 15 [^3] . Having put (that plant) into the pit in which the middle-post is to stand, he should spread (on it) eastward-pointed and northward-pointed Kuśa grass and should sprinkle (on that grass) water into which rice and barley have been thrown, with (the words), 'To the steady one, the earth-demon, svāhā!'
 
 [^3]:  Comp. chap. 1, 4.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/15_madhyamasthUNAyA_garte-vadh.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 मध्यमस्थूणाया गर्तेऽवधाय प्रागग्रोदग्रान्कुशानास्तीर्य व्रीहियवमतीरप आसेचयेदच्युताय भौमाय स्वाहेति १५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/08/16_athainAmuchChriyamANAmanuma.md">
-<details open><summary><h3>16 अथैनामुच्छ्रियमाणामनुमन्त्रयेतेहैव तिष्ठ निमिता ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथैनामुच्छ्रियमाणामनुमन्त्रयेतेहैव तिष्ठ निमिता तिल्विलास्तामिरावतीं मध्ये पोषस्य तिष्ठन्तीम् । आ त्वा प्रापन्नघायव आ त्वा कुमारस्तरुण आ वत्सो जायतां सह । आ त्वा परिश्रितः कुम्भ आ दध्नः कलशैरयन्निति १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/08/16_athainAmuchChriyamANAmanuma.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 16 [^4] . He then should, when (the middle-post) is being erected, recite over it (the two verses), 'Stand here, fixed in the ground, prosperous, long-lasting (?), standing amid prosperity. May the malevolent ones not attain thee!
 
@@ -310,10 +263,9 @@ title = "०८"
 'To thee (may) the young child (come), to thee the calf . . .; to thee (may) the cup of Parisrut (come); (to thee) may they come with pots of curds.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/08/16_athainAmuchChriyamANAmanuma.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथैनामुच्छ्रियमाणामनुमन्त्रयेतेहैव तिष्ठ निमिता तिल्विलास्तामिरावतीं मध्ये पोषस्य तिष्ठन्तीम् । आ त्वा प्रापन्नघायव आ त्वा कुमारस्तरुण आ वत्सो जायतां सह । आ त्वा परिश्रितः कुम्भ आ दध्नः कलशैरयन्निति १६
 </details>
-</div>
+
