--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/2/10.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/2/10.md
@@ -3,115 +3,98 @@ title = "१०"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/10/01_ukta~N_gRhaprapadanam.md">
-<details open><summary><h3>01 उक्तङ् गृहप्रपदनम् ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उक्तं गृहप्रपदनम् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/10/01_ukta~N_gRhaprapadanam.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . It has been declared how he should enter the house (when returning from a journey).
 
 [^1]:  10, 1. See Śrauta-sūtra II, 5, 17 seqq. It is there expressly stated that these rules refer also to an Anāhitāgni.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/10/01_ukta~N_gRhaprapadanam.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उक्तं गृहप्रपदनम् १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/10/02_bIjavato_gRhAn_prapadyeta.md">
-<details open><summary><h3>02 बीजवतो गृहान् प्रपद्येत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बीजवतो गृहान् प्रपद्येत २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/10/02_bIjavato_gRhAn_prapadyeta.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. The house, when he enters it, should be provided with seed-corn.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/10/02_bIjavato_gRhAn_prapadyeta.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 बीजवतो गृहान् प्रपद्येत २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/10/03_xetram_prakarShayeduttaraiH.md">
-<details open><summary><h3>03 क्षेत्रम् प्रकर्षयेदुत्तरैः प्रोष्ठपदैः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्षेत्रं प्रकर्षयेदुत्तरैः प्रोष्ठपदैः फाल्गुनीभी रोहिण्या वा ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/10/03_xetram_prakarShayeduttaraiH.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3 [^2] . He should have his field ploughed under the Nakṣatras Uttarāḥ Proṣṭhapadās, (Uttarāḥ) Phālgunyas, or Rohiṇī.
 
 [^2]:  Śāṅkhāyana IV, 13, 1.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/10/03_xetram_prakarShayeduttaraiH.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 क्षेत्रं प्रकर्षयेदुत्तरैः प्रोष्ठपदैः फाल्गुनीभी रोहिण्या वा ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/10/04_xetrasyAnuvAta~N_xetrasya_p.md">
-<details open><summary><h3>04 क्षेत्रस्यानुवातङ् क्षेत्रस्य पतिना ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्षेत्रस्यानुवातं क्षेत्रस्य पतिना वयमिति प्रत्यृचं जुहुयाज्जपेद्वा ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/10/04_xetrasyAnuvAta~N_xetrasya_p.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. In order that the wind may blow to him from the field, he should offer oblations with the hymn, 'Through the lord of the field' (Rig-veda IV, 57), verse by verse, or he should murmur (that hymn).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/10/04_xetrasyAnuvAta~N_xetrasya_p.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 क्षेत्रस्यानुवातं क्षेत्रस्य पतिना वयमिति प्रत्यृचं जुहुयाज्जपेद्वा ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/10/05_gAH_pratiShThamAnA_anumantr.md">
-<details open><summary><h3>05 गाः प्रतिष्ठमाना अनुमन्त्रयेत ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गाः प्रतिष्ठमाना अनुमन्त्रयेत मयोभूर्वातो अभिवातूस्रा इति द्वाभ्याम् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/10/05_gAH_pratiShThamAnA_anumantr.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5 [^3] . He should speak over the cows when they go away, the two verses, 'May refreshing wind blow over the cows' (Rig-veda X, 169, I seq.).
 
 [^3]:  Śāṅkhāyana-Gṛhya III, 9.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/10/05_gAH_pratiShThamAnA_anumantr.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 गाः प्रतिष्ठमाना अनुमन्त्रयेत मयोभूर्वातो अभिवातूस्रा इति द्वाभ्याम् ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/10/06_AyatIH_yAsAmUdhashchaturbil.md">
-<details open><summary><h3>06 आयतीः यासामूधश्चतुर्बिलम् मधोः ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आयतीः यासामूधश्चतुर्बिलं मधोः पूर्णं घृतस्य च । ता नः सन्तु पयस्वतीर्बह्वीर्गोष्ठे घृताच्यः । उप मैतु मयोभुव ऊर्जं चौजश्च बिभ्रतीः । दुहाना अक्षितं पयो मयि गोष्ठे निविशध्वम् । यथा भवाम्युत्तमो या देवेषु तन्वामैरयन्तेति च सूक्तशेषम् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/10/06_AyatIH_yAsAmUdhashchaturbil.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6 [^4] . When they come back, (he should recite the following verses,)
 
@@ -124,42 +107,36 @@ title = "१०"
 And, 'They who have raised their body up to the gods' - the rest of the hymn (Rig-veda X, 169, 3. 4).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/10/06_AyatIH_yAsAmUdhashchaturbil.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आयतीः यासामूधश्चतुर्बिलं मधोः पूर्णं घृतस्य च । ता नः सन्तु पयस्वतीर्बह्वीर्गोष्ठे घृताच्यः । उप मैतु मयोभुव ऊर्जं चौजश्च बिभ्रतीः । दुहाना अक्षितं पयो मयि गोष्ठे निविशध्वम् । यथा भवाम्युत्तमो या देवेषु तन्वामैरयन्तेति च सूक्तशेषम् ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/10/07_AgAvIyameke.md">
-<details open><summary><h3>07 आगावीयमेके ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आगावीयमेके ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/10/07_AgAvIyameke.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7 [^5] . Some recite (instead of the texts stated in Sūtra 6) the Āgāvīya hymn.
 
 [^5]:  The hymn commencing ā gāvo agman (hither came the cows) is Rig-veda VI, 28.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/10/07_AgAvIyameke.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आगावीयमेके ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/2/10/08_gaNAnAsAmupatiShThetAguruga.md">
-<details open><summary><h3>08 गणानासामुपतिष्ठेतागुरुगवीनाम् भूताः स्थ ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गणानासामुपतिष्ठेतागुरुगवीनां भूताः स्थ प्रशस्ताः स्थ शोभनाः प्रियाः प्रियो वो भूयासं शं मयि जानीध्वं शं मयि जानीध्वं ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/2/10/08_gaNAnAsAmupatiShThetAguruga.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8 [^6] . He should approach their herds, if the cows do not belong to his Guru, with (the words), 'Prospering are ye; excellent are ye, beautiful, dear. May I become dear to you. May you see bliss in me.'
 
@@ -168,13 +145,11 @@ And, 'They who have raised their body up to the gods' - the rest of the hymn (Ri
 End of the Second Adhyāya.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/2/10/08_gaNAnAsAmupatiShThetAguruga.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 गणानासामुपतिष्ठेतागुरुगवीनां भूताः स्थ प्रशस्ताः स्थ शोभनाः प्रियाः प्रियो वो भूयासं शं मयि जानीध्वं शं मयि जानीध्वं ८
 </details>
-</div>
 
   
 
