--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/03.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/03.md
@@ -3,83 +3,71 @@ title = "०३"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/03/01_atha_svAdhyAyamadhIyIta_Rch.md">
-<details open><summary><h3>01 अथ स्वाध्यायमधीयीत ऋचो ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ स्वाध्यायमधीयीत ऋचो यजूंषि सामान्यथर्वाङ्गिरसो ब्राह्मणानि कल्पान्गाथा नाराशंसीरितिहासपराणानीति १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/03/01_atha_svAdhyAyamadhIyIta_Rch.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . He then should recite for himself (the following texts, viz.) the Ṛcas, the Yajus, the Sāmans, the Atharvan and Aṅgiras hymns, the Brāhmaṇas, the Kalpa (Sūtras), the Gāthās, the (texts in honour of kings and heroes, called) Nārāśaṃsīs, the Itihāsas and Purāṇas.
 
 [^1]:  3, 1. On this and the following paragraphs comp. chiefly Śatapatha Brāhmaṇa XI, 5, 6. Other enumerations, contained in the Veda itself, of the texts that were considered as forming the Veda or as attached to the body of the Veda, are found in the Śatapatha Brāhmaṇa XIV, 5, 4, 10 (Sacred Books, XV, 111), and in the Chāndogya Upaniṣad VII, 1 (Sacred Books, I, 109)
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/03/01_atha_svAdhyAyamadhIyIta_Rch.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथ स्वाध्यायमधीयीत ऋचो यजूंषि सामान्यथर्वाङ्गिरसो ब्राह्मणानि कल्पान्गाथा नाराशंसीरितिहासपराणानीति १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/03/02_yadRcho-dhIte_payaAhutibhir.md">
-<details open><summary><h3>02 यदृचोऽधीते पयआहुतिभिरेव तद्देवतास्तर्पयति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यदृचोऽधीते पयआहुतिभिरेव तद्देवतास्तर्पयति यद्यजूंषि घृताहुतिभिर्यत्सामानि मध्वाहुतिभिर्यदथर्वाङ्गिरसः सोमाहुतिभिर्यद्ब्राह्मणानि कल्पान् गाथा नाराशंसीरितिहासपुराणानीत्यमृताहुतिभिः २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/03/02_yadRcho-dhIte_payaAhutibhir.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. In that he recites the Ṛcas, he thereby satiates the gods with oblations of milk - in that (he recites) the Yajus, with oblations of ghee - the Sāmans, with oblations of honey - the Atharvan and Aṅgiras hymns, with oblations of Soma - the Brāhmaṇas, Kalpas, Gāthās, Nārāśaṃsīs, Itihāsas and Purāṇas, with oblations of ambrosia.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/03/02_yadRcho-dhIte_payaAhutibhir.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यदृचोऽधीते पयआहुतिभिरेव तद्देवतास्तर्पयति यद्यजूंषि घृताहुतिभिर्यत्सामानि मध्वाहुतिभिर्यदथर्वाङ्गिरसः सोमाहुतिभिर्यद्ब्राह्मणानि कल्पान् गाथा नाराशंसीरितिहासपुराणानीत्यमृताहुतिभिः २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/03/03_yadRcho-dhIte_payasaH_kulyA.md">
-<details open><summary><h3>03 यदृचोऽधीते पयसः कुल्यास्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यदृचोऽधीते पयसः कुल्यास्य पितॄन्त्स्वधा उपक्षरन्ति यद्यजूंषि घृतस्य कुल्या यत्सामानि मध्वः कुल्या यदथर्वाङ्गिरसः सोमस्य कुल्या यद्ब्राह्मणानि कल्पान्गाथा नाराशंसीरितिहासपुराणानीत्यमृतस्य कुल्याः ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/03/03_yadRcho-dhIte_payasaH_kulyA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. In that he recites the Ṛcas, rivers of milk flow, as a funeral oblation, to his Fathers. In that (he recites) the Yajus, rivers of ghee - the Sāmans, rivers of honey - the Atharvan and Aṅgiras hymns, rivers of Soma - the Brāhmaṇas, Kalpas, Gāthās, Nārāśaṃsīs, Itihāsas and Purāṇas, rivers of ambrosia.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/03/03_yadRcho-dhIte_payasaH_kulyA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यदृचोऽधीते पयसः कुल्यास्य पितॄन्त्स्वधा उपक्षरन्ति यद्यजूंषि घृतस्य कुल्या यत्सामानि मध्वः कुल्या यदथर्वाङ्गिरसः सोमस्य कुल्या यद्ब्राह्मणानि कल्पान्गाथा नाराशंसीरितिहासपुराणानीत्यमृतस्य कुल्याः ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/03/04_sa_yAvanmanyeta_tAvadadhIty.md">
-<details open><summary><h3>04 स यावन्मन्येत तावदधीत्यैतया ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स यावन्मन्येत तावदधीत्यैतया परिदधाति नमो ब्रह्मणे नमोऽस्त्वग्नये नमः पृथिव्यै नम ओषधीभ्यः । नमो वाचे नमो वाचस्पतये नमो विष्णवे महते करोमीति ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/03/04_sa_yAvanmanyeta_tAvadadhIty.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. After he has recited (those texts) as far as he thinks fit, he should finish with the following (verse),
 
 'Adoration to Brahman! Adoration be to Agni! Adoration to the Earth! Adoration to the Herbs! Adoration to the Voice! Adoration to the Lord of the Voice! Adoration I bring to great Viṣṇu!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/03/04_sa_yAvanmanyeta_tAvadadhIty.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 स यावन्मन्येत तावदधीत्यैतया परिदधाति नमो ब्रह्मणे नमोऽस्त्वग्नये नमः पृथिव्यै नम ओषधीभ्यः । नमो वाचे नमो वाचस्पतये नमो विष्णवे महते करोमीति ४
 </details>
-</div>
+
