--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/09.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/3/09.md
@@ -3,15 +3,13 @@ title = "०९"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/09/01_smRtannindA_cha_vidyA.md">
-<details open><summary><h3>01 स्मृतन्निन्दा च विद्या ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्मृतन्निन्दा च विद्या च श्रद्धा प्रज्ञा च पञ्चमी ।
 इष्टन्दत्तमधीतञ्च कृतं सत्यं श्रुतं व्रतम् । यदग्ने सेन्द्रस्य सप्रजापतिकस्य सऋषिकस्य सऋषिराजन्यस्य सपितृकस्य सपितृराजन्यस्य समनुष्यस्य समनुष्यराजन्यस्य साकाशस्य सातीकाशस्य सानुकाशस्य सप्रतीकाशस्य सदेवमनुष्यस्य सगन्धर्वाप्सरस्कस्य सहारण्यैश्च पशुभिर्ग्राम्यैश्च यन्म आत्मन आत्मनि व्रतन्तन्मे सर्वव्रतमिदमहमग्ने सर्वव्रतो भवामि स्वाहेति १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/09/01_smRtannindA_cha_vidyA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . (He says), 'Memory and reproach and knowledge, faith, and wisdom as the fifth, what is sacrificed, and what is given, and what is studied, and what is done, truth, learning, vow - 
 
@@ -20,105 +18,90 @@ title = "०९"
 'The vow which belongs to Agni together with Indra, with Prajāpati, with the Ṛṣis, with the royal ones among the Ṛṣis, with the Fathers, with the royal ones among the Fathers, with the human beings, with the royal ones among the human beings, with shine, over-shine, after-shine, counter-shine, with gods and men, with Gandharvas and Apsaras, with wild animals and domestic animals, - the vow, belonging to my own self, dwelling in my own self, that is my universal vow. Hereby, O Agni, I become addicted to the universal vow. Svāhā!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/09/01_smRtannindA_cha_vidyA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 स्मृतन्निन्दा च विद्या च श्रद्धा प्रज्ञा च पञ्चमी ।
 इष्टन्दत्तमधीतञ्च कृतं सत्यं श्रुतं व्रतम् । यदग्ने सेन्द्रस्य सप्रजापतिकस्य सऋषिकस्य सऋषिराजन्यस्य सपितृकस्य सपितृराजन्यस्य समनुष्यस्य समनुष्यराजन्यस्य साकाशस्य सातीकाशस्य सानुकाशस्य सप्रतीकाशस्य सदेवमनुष्यस्य सगन्धर्वाप्सरस्कस्य सहारण्यैश्च पशुभिर्ग्राम्यैश्च यन्म आत्मन आत्मनि व्रतन्तन्मे सर्वव्रतमिदमहमग्ने सर्वव्रतो भवामि स्वाहेति १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/09/02_mamAgne_varcha_iti.md">
-<details open><summary><h3>02 ममाग्ने वर्च इति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ममाग्ने वर्च इति प्रत्यृचं समिधोऽभ्यादध्यात् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/09/02_mamAgne_varcha_iti.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . With (the hymn), 'Mine, Agni, be vigour' (Rig-veda X, 128, 1), verse by verse, he should put pieces of wood (on the fire).
 
 [^2]:  According to Nārāyaṇa the hymn should be recited including the Khila, so that ten pieces of wood are offered. Now the hymn consists of nine verses; there can be, consequently, only one Khailika verse, which is, I suppose, the first verse of the Khila quoted above, p. 228.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/09/02_mamAgne_varcha_iti.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 ममाग्ने वर्च इति प्रत्यृचं समिधोऽभ्यादध्यात् २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/09/03_yatrainam_pUjayiShyanto_bha.md">
-<details open><summary><h3>03 यत्रैनम् पूजयिष्यन्तो भवन्ति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यत्रैनं पूजयिष्यन्तो भवन्ति तत्रैतां रात्रीं वसेत् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/09/03_yatrainam_pUjayiShyanto_bha.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3 [^3] . He should pass that night at a place where they will do honour to him.
 
 [^3]:  By a Madhuparka (Nārāyaṇa). Compare Śāṅkhāyana-Gṛhya III, 1, 14.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/09/03_yatrainam_pUjayiShyanto_bha.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 यत्रैनं पूजयिष्यन्तो भवन्ति तत्रैतां रात्रीं वसेत् ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/09/04_vidyAnte_gurumarthena_niman.md">
-<details open><summary><h3>04 विद्यान्ते गुरुमर्थेन निमन्त्र्यङ् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विद्यान्ते गुरुमर्थेन निमन्त्र्यं कृत्वानुज्ञातस्य वा स्नानम् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/09/04_vidyAnte_gurumarthena_niman.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4 [^4] . When, after having finished his (task of) learning, he has offered something to the teacher, or has received his permission, he should take a bath (which signifies the end of his studentship).
 
 [^4]:  Nārāyaṇa: He makes an offer to the teacher in the words, 'What is it that I can do for you?' - and what the teacher tells him, that he does.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/09/04_vidyAnte_gurumarthena_niman.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 विद्यान्ते गुरुमर्थेन निमन्त्र्यं कृत्वानुज्ञातस्य वा स्नानम् ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/09/05_tasyaitAni_vratAni_bhavanti.md">
-<details open><summary><h3>05 तस्यैतानि व्रतानि भवन्ति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्यैतानि व्रतानि भवन्ति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/09/05_tasyaitAni_vratAni_bhavanti.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. He (i.e. the Snātaka) has to keep the following observances:
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/09/05_tasyaitAni_vratAni_bhavanti.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तस्यैतानि व्रतानि भवन्ति ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/09/06_na_naktaM_snAyAt.md">
-<details open><summary><h3>06 न नक्तं स्नायात् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न नक्तं स्नायात् । न नग्नः स्नायात् ।
 न नग्नः शयीत । न नग्नां स्त्रियमीक्षेतान्यत्र मैथुनात् । वर्षति न धावेत् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/09/06_na_naktaM_snAyAt.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. He shall not bathe in the night-time;  
    he shall not bathe naked;  
@@ -126,22 +109,19 @@ title = "०९"
    he shall not look at a naked woman, except during sexual intercourse;  
    he shall not run during rain; 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/09/06_na_naktaM_snAyAt.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 न नक्तं स्नायात् । न नग्नः स्नायात् ।
 न नग्नः शयीत । न नग्नां स्त्रियमीक्षेतान्यत्र मैथुनात् । वर्षति न धावेत् ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/09/07_na_vRxamArohet_na.md">
-<details open><summary><h3>07 न वृक्षमारोहेत् न ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न वृक्षमारोहेत् । न कूपमवरोहेत् । न बाहुभ्यां नदीन्तरेत् । न संशयमभ्यापद्येत ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/09/07_na_vRxamArohet_na.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 he shall not climb up a tree;  
 he shall not descend into a well;  
@@ -149,28 +129,24 @@ he shall not swim with his arms across a river;
 he shall not expose himself to danger. 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/09/07_na_vRxamArohet_na.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 न वृक्षमारोहेत् । न कूपमवरोहेत् । न बाहुभ्यां नदीन्तरेत् । न संशयमभ्यापद्येत ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/3/09/08_mahadvai_bhUtaM_snAtako.md">
-<details open><summary><h3>08 महद्वै भूतं स्नातको ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 महद्वै भूतं स्नातको भवतीति विज्ञायते ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/3/09/08_mahadvai_bhUtaM_snAtako.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 'A great being indeed is a Snātaka' - thus it is understood (in the Śruti).
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/3/09/08_mahadvai_bhUtaM_snAtako.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 महद्वै भूतं स्नातको भवतीति विज्ञायते ८
 </details>
-</div>
+
