--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/4/05.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/4/05.md
@@ -3,35 +3,30 @@ title = "०५"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/05/01_sanchayanamUrdhvan_dashamyA.md">
-<details open><summary><h3>01 सञ्चयनमूर्ध्वन् दशम्याः कृष्णपक्षस्यायुजास्वेकनक्षत्रे ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सञ्चयनमूर्ध्वं दशम्याः कृष्णपक्षस्यायुजास्वेकनक्षत्रे १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/05/01_sanchayanamUrdhvan_dashamyA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . The gathering (of the bones is performed) after the tenth (Tithi from the death), (on a Tithi) with an odd number, of the dark fortnight, under a single Nakṣatra.
 
 [^1]:  5, 1. Nārāyaṇa (comp. the Āśvalāyana-Gṛhya-Pariśiṣṭa III, 7) understands this Sūtra in a different way. 'After the tenth Tithi of the dark fortnight, on a Tithi with an odd number, is e. on the eleventh, thirteenth, or fifteenth.' The single Nakṣatras are those the name of which does not denote two Nakṣatras (as, for instance, the two Aṣāḍhās). Comp. Kāty.-Śraut. XXV, 8, 1; Manu V, 59.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/05/01_sanchayanamUrdhvan_dashamyA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सञ्चयनमूर्ध्वं दशम्याः कृष्णपक्षस्यायुजास्वेकनक्षत्रे १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/05/02_alaxaNe_kumbhe_pumAMsamalax.md">
-<details open><summary><h3>02 अलक्षणे कुम्भे पुमांसमलक्षणायां ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अलक्षणे कुम्भे पुमांसमलक्षणायां स्त्रियमयुजोऽमिथुनाः प्रवयसः २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/05/02_alaxaNe_kumbhe_pumAMsamalax.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . A man into a male urn without special marks, a woman into a female one without special marks.
 
@@ -41,132 +36,113 @@ title = "०५"
 
 [^3]:  See chap. 2, 2.
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/05/02_alaxaNe_kumbhe_pumAMsamalax.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अलक्षणे कुम्भे पुमांसमलक्षणायां स्त्रियमयुजोऽमिथुनाः प्रवयसः २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/05/03_xIrodakena_shamIshAkhayA_tr.md">
-<details open><summary><h3>03 क्षीरोदकेन शमीशाखया त्रिःप्रसव्यमायतनम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्षीरोदकेन शमीशाखया त्रिःप्रसव्यमायतनं परिव्रजन्प्रोक्षति शीतिके शीतिकावतीति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/05/03_xIrodakena_shamIshAkhayA_tr.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4 [^4] . The performer of the ceremony walks three times round the spot with his left side turned towards it, and sprinkles on it with a Śamī branch milk mixed with water, with the verse, 'O cool one, O thou that art full of coolness' (Rig-veda X, 16, 14).
 
 [^4]:  Comp. chap. 2, 10.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/05/03_xIrodakena_shamIshAkhayA_tr.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 क्षीरोदकेन शमीशाखया त्रिःप्रसव्यमायतनं परिव्रजन्प्रोक्षति शीतिके शीतिकावतीति ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/05/04_anguShThopakaniShThikAbhyAm.md">
-<details open><summary><h3>04 अङ्गुष्ठोपकनिष्ठिकाभ्यामेकैकमस्थ्यसंह्रादयन्तोऽवदध्युः पादौ पूर्वं ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अङ्गुष्ठोपकनिष्ठिकाभ्यामेकैकमस्थ्यसंह्रादयन्तोऽवदध्युः पादौ पूर्वं शिर उत्तरम् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/05/04_anguShThopakaniShThikAbhyAm.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. With the thumb and the fourth finger they should put each single bone (into the, urn) without making a noise,
 
 6. The feet first, the head last.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/05/04_anguShThopakaniShThikAbhyAm.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अङ्गुष्ठोपकनिष्ठिकाभ्यामेकैकमस्थ्यसंह्रादयन्तोऽवदध्युः पादौ पूर्वं शिर उत्तरम् ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/05/05_susanchitaM_sanchitya_pavan.md">
-<details open><summary><h3>05 सुसञ्चितं सञ्चित्य पवनेन ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुसञ्चितं सञ्चित्य पवनेन सम्पूय यत्र सर्वत आपो नाभिस्यन्देरन्नन्या वर्षाभ्यस्तत्र गर्तेऽवदध्युरुपसर्प मातरं भूमिमेतामिति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/05/05_susanchitaM_sanchitya_pavan.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7 [^5] . Having well gathered them and purified them with a winnowing basket, they should put (the urn) into a pit, at a place where the waters from the different sides do not flow together, except rain water, with (the verse), 'Go to thy mother Earth there' (Rig-veda X, 18, 10).
 
 [^5]:  Nārāyaṇa explains pavana by śūrpa. He says that the 'performer' (kartṛ) repeats this and the following texts.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/05/05_susanchitaM_sanchitya_pavan.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 सुसञ्चितं सञ्चित्य पवनेन सम्पूय यत्र सर्वत आपो नाभिस्यन्देरन्नन्या वर्षाभ्यस्तत्र गर्तेऽवदध्युरुपसर्प मातरं भूमिमेतामिति ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/05/06_uttarayA_pAMsUnavakiret.md">
-<details open><summary><h3>06 उत्तरया पांसूनवकिरेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तरया पांसूनवकिरेत् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/05/06_uttarayA_pAMsUnavakiret.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. With the following (verse) he should throw earth (into the pit).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/05/06_uttarayA_pAMsUnavakiret.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उत्तरया पांसूनवकिरेत् ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/05/07_avakIryottarAm.md">
-<details open><summary><h3>07 अवकीर्योत्तराम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अवकीर्योत्तराम् ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/05/07_avakIryottarAm.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. After he has done so, (he should repeat) the following (verse).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/05/07_avakIryottarAm.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अवकीर्योत्तराम् ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/05/08_utte_stabhnAmIti_kapAlenApi.md">
-<details open><summary><h3>08 उत्ते स्तभ्नामीति कपालेनापिधायाथानवेक्षम् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्ते स्तभ्नामीति कपालेनापिधायाथानवेक्षं प्रत्याव्रज्याप उपस्पृश्य श्रद्धमस्मै दद्युः ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/05/08_utte_stabhnAmIti_kapAlenApi.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10 [^6] . Having covered (the urn) with a lid with (the verse), 'I fasten to thee' (Rig-veda X, 18, 13), they then should go away without looking back, should bathe in water, and perform a Śrāddha for the deceased.
 
 [^6]:  They should give a Śrāddha to the deceased exclusively, according to the Ekoddiṣṭa rite.' Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/05/08_utte_stabhnAmIti_kapAlenApi.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उत्ते स्तभ्नामीति कपालेनापिधायाथानवेक्षं प्रत्याव्रज्याप उपस्पृश्य श्रद्धमस्मै दद्युः ८
 </details>
-</div>
+
