--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/4/06.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/4/06.md
@@ -3,350 +3,297 @@ title = "०६"
 
 +++
 
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/01_guruNAbhimRtA_anyatovApaxIy.md">
-<details open><summary><h3>01 गुरुणाभिमृता अन्यतोवापक्षीयमाणा अमावास्यायां ...{Loading}...</h3></summary>
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गुरुणाभिमृता अन्यतोवापक्षीयमाणा अमावास्यायां शान्तिकर्म कुर्वीरन् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/01_guruNAbhimRtA_anyatovApaxIy.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. They who have lost a Guru by death, or are afflicted by other misfortune, should perform on the new-moon day an expiatory ceremony.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/01_guruNAbhimRtA_anyatovApaxIy.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 गुरुणाभिमृता अन्यतोवापक्षीयमाणा अमावास्यायां शान्तिकर्म कुर्वीरन् १
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/02_purodayAdagniM_sahabhasmAna.md">
-<details open><summary><h3>02 पुरोदयादग्निं सहभस्मानं सहायतनन् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुरोदयादग्निं सहभस्मानं सहायतनं दक्षिणा हरेयुः क्रव्यादमग्निं प्रहिणोमि दूरमित्यर्द्धर्चेन २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/02_purodayAdagniM_sahabhasmAna.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . Before sunrise they should carry their fire together with its ashes and with its receptacle to the south with the half-verse, 'I send far away the flesh-devouring Agni' (Rig-veda X, 16, 9).
 
 [^1]:  6, 2. According to Nārāyaṇa the fire means here not the sacred domestic fire, but a common kitchen fire. I doubt whether the p. 247 commentator is right. The ceremonies described in the following Sūtras seem to point rather to a renewal of the sacred Gṛhya fire, the old one having proved unlucky to the sacrificer. In the same way, in the Śrauta ritual, a sacrificer who, after having performed the Ādhāna, has bad luck, performs the Punarādheya.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/02_purodayAdagniM_sahabhasmAna.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 पुरोदयादग्निं सहभस्मानं सहायतनं दक्षिणा हरेयुः क्रव्यादमग्निं प्रहिणोमि दूरमित्यर्द्धर्चेन २
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/03_ta~n_chatuShpathe_nyupya.md">
-<details open><summary><h3>03 तञ् चतुष्पथे न्युप्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तं चतुष्पथे न्युप्य यत्र वा त्रिः प्रसव्यं परियन्ति सव्यैः पाणिभिः सव्यानूरूनाघ्नानाः ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/03_ta~n_chatuShpathe_nyupya.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 3 [^2] . Having thrown that (fire) down at a place where four roads meet or somewhere else, they walk round it three times, turning their left sides towards it, beating their left thighs with their left hands.
 
 [^2]:  Comp. Kātyāyana-Śrauta-sūtra V, 10, r5.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/03_ta~n_chatuShpathe_nyupya.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तं चतुष्पथे न्युप्य यत्र वा त्रिः प्रसव्यं परियन्ति सव्यैः पाणिभिः सव्यानूरूनाघ्नानाः ३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/04_athAnavexam_pratyAvrajyApa_.md">
-<details open><summary><h3>04 अथानवेक्षम् प्रत्याव्रज्याप उपस्पृश्य ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथानवेक्षं प्रत्याव्रज्याप उपस्पृश्य केशश्मश्रुलोमनखानि वापयित्वोपकल्पयीरन्नवान्मणिकान्कुम्भानाचमनीयांश्च शमीसुमनोमालिनः शमीमयमिध्मं शमीमय्यावरणी परिधींश्चानडुहङ्गोमयञ्चर्म च नवनीतमश्मानं च यावत्योयुवतयस्तावन्ति कुशपिञ्जूलानि ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/04_athAnavexam_pratyAvrajyApa_.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. They then should return home without looking back, bathe in water, have their hair, their beards the hair of their bodies, and their nails cut, and furnish themselves with new jars, pots, vessels for rinsing the mouth, wreathed with garlands of Śamī flowers, with fuel of Śamī wood, with two pieces of Śamī wood for kindling fire, and with branches to be laid round the fire, with bull's dung and a bull's hide, fresh butter, a stone, and as many bunches of Kuśa grass as there are young women (in the house).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/04_athAnavexam_pratyAvrajyApa_.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथानवेक्षं प्रत्याव्रज्याप उपस्पृश्य केशश्मश्रुलोमनखानि वापयित्वोपकल्पयीरन्नवान्मणिकान्कुम्भानाचमनीयांश्च शमीसुमनोमालिनः शमीमयमिध्मं शमीमय्यावरणी परिधींश्चानडुहङ्गोमयञ्चर्म च नवनीतमश्मानं च यावत्योयुवतयस्तावन्ति कुशपिञ्जूलानि ४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/05_agnivelAyAmagni~n_janayedih.md">
-<details open><summary><h3>05 अग्निवेलायामग्निञ् जनयेदिहैवायमितरो जातवेदा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्निवेलायामग्निं जनयेदिहैवायमितरो जातवेदा इत्यर्धर्चेन ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/05_agnivelAyAmagni~n_janayedih.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 5 [^3] . At the time of the Agni(-hotra) he should kindle fire with the hemistich, 'Here may this other Jātavedas' (Rig-veda X, 16, 9).
 
 [^3]:  The text has agnivelāyām, which Nārāyaṇa explains by agnihotraviharaṇakāle aparāhne. He states that the fire should be produced by attrition of two new kindling woods (araṇi), mentioned in Sūtra 4. The fire thus kindled is to be used, he says, as a kitchen-fire. Herein he seems to me to have misunderstood the meaning of the ceremony; see the note on Sūtra 2. The hemistich quoted in this Sūtra (which is the second half of the same verse of which the first half is prescribed in Sūtra 2) clearly points to the sacred quality of the fire in question; it runs thus, 'Here may this other Jātavedas carry the offerings to the gods, the knowing one.'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/05_agnivelAyAmagni~n_janayedih.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अग्निवेलायामग्निं जनयेदिहैवायमितरो जातवेदा इत्यर्धर्चेन ५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/06_tandIpayamAnA_Asata_A.md">
-<details open><summary><h3>06 तन्दीपयमाना आसत आ ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तन्दीपयमाना आसत आ शान्तरात्रादायुष्मतां कथाः कीर्तयन्तो माङ्गल्यानीतिहासपुराणानीत्याख्यापयमानाः ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/06_tandIpayamAnA_Asata_A.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. Keeping that (fire) burning, they sit till the silence of the night, repeating the tales of the aged, and getting stories of auspicious contents, Itihāsas and Purāṇas, told to them.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/06_tandIpayamAnA_Asata_A.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 तन्दीपयमाना आसत आ शान्तरात्रादायुष्मतां कथाः कीर्तयन्तो माङ्गल्यानीतिहासपुराणानीत्याख्यापयमानाः ६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/07_uparateShu_shabdeShu_sampra.md">
-<details open><summary><h3>07 उपरतेषु शब्देषु सम्प्रविष्टेषु ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उपरतेषु शब्देषु सम्प्रविष्टेषु वा गृहन्निवेशनं वा दक्षिणद्वारपक्षात्प्रक्रम्याविच्छिन्नामुदकधारां हरेत्तन्तुन्तन्वन्रजसोभानुमन्विहीत्युत्तरस्मात् ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/07_uparateShu_shabdeShu_sampra.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 7 [^4] . When all sounds have ceased, or when (the others) have gone to the house or the resting-place, (the performer of the ceremony) should pour out an uninterrupted stream of water, beginning at the south side of the door, with (the verse), 'Spinning the thread follow the light of the aerial space' (Rig-veda X, 53, 6), (going round the house), ending at the north side of the door.
 
 [^4]:  The person who pours out the water is, as Nārāyaṇa says, the kartṛ, i.e. the performer of the whole ceremony. The word cannot be translated, as Prof. Stenzler does, der Bestatter, no funeral ceremonies being here treated of.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/07_uparateShu_shabdeShu_sampra.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उपरतेषु शब्देषु सम्प्रविष्टेषु वा गृहन्निवेशनं वा दक्षिणद्वारपक्षात्प्रक्रम्याविच्छिन्नामुदकधारां हरेत्तन्तुन्तन्वन्रजसोभानुमन्विहीत्युत्तरस्मात् ७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/08_athAgnimupasamAdhAya_pashch.md">
-<details open><summary><h3>08 अथाग्निमुपसमाधाय पश्चादस्यानडुहञ्चर्मास्तीर्य प्राग्ग्रीवमुत्तरलोम ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथाग्निमुपसमाधाय पश्चादस्यानडुहञ्चर्मास्तीर्य प्राग्ग्रीवमुत्तरलोम तस्मिन्नमात्यानारोहयेदारोहतायुर्जरसं वृणाना इति ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/08_athAgnimupasamAdhAya_pashch.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 8 [^5] . Having then given its place to the fire, and having spread to the west of it a bull's hide with the neck to the east, with the hair outside, he should cause the people belonging to the house to step on that (hide) with (the verse), 'Arise to long life, choosing old age' (Rig-veda X, 18, 6).
 
 [^5]:  See above, I, 8, 9. Here Nārāyaṇa sees that the fire is the sacred one. He says, athaśabdoऽsmin kāleऽgnyantaram aupāsanam upasamādadhyād iti jñāpanārtham.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/08_athAgnimupasamAdhAya_pashch.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथाग्निमुपसमाधाय पश्चादस्यानडुहञ्चर्मास्तीर्य प्राग्ग्रीवमुत्तरलोम तस्मिन्नमात्यानारोहयेदारोहतायुर्जरसं वृणाना इति ८
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/09_ima~n_jIvebhyaH_paridhin.md">
-<details open><summary><h3>09 इमञ् जीवेभ्यः परिधिन् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इमं जीवेभ्यः परिधिं दधामीति परिधिं परिदध्यात् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/09_ima~n_jIvebhyaH_paridhin.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. With (the verse), 'This I lay round the living' (Rig-veda X, 18, 4), he should lay branches round (the fire).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/09_ima~n_jIvebhyaH_paridhin.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 इमं जीवेभ्यः परिधिं दधामीति परिधिं परिदध्यात् ९
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/10_antarmRtyundadhatAm_parvate.md">
-<details open><summary><h3>10 अन्तर्मृत्युन्दधताम् पर्वतेनेत्यश्मानमित्युत्तरतोऽग्नेः कृत्वा ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्तर्मृत्युन्दधतां पर्वतेनेत्यश्मानमित्युत्तरतोऽग्नेः कृत्वा परं मृत्यो अनु परेहि पन्थामिति चतसृभिः प्रत्यृचं हुत्वा यथाहान्यनुपूर्वं भवन्तीत्यमात्यानीक्षेत १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/10_antarmRtyundadhatAm_parvate.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 10 [^6] . After having with (the words), 'A mountain (i.e. a stone) they shall place between themselves and death,' placed a stone to the north of the fire, and having sacrificed with the four (verses), 'Go hence, O death, on another way' (Rig-veda X, 18, 1-4), verse by verse, he should look at his people with (the verse), 'As the days follow each other' (ibid. 5).
 
 [^6]:  The words, 'A mountain,' &c., stand at the end of the verse quoted in Sūtra 9.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/10_antarmRtyundadhatAm_parvate.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अन्तर्मृत्युन्दधतां पर्वतेनेत्यश्मानमित्युत्तरतोऽग्नेः कृत्वा परं मृत्यो अनु परेहि पन्थामिति चतसृभिः प्रत्यृचं हुत्वा यथाहान्यनुपूर्वं भवन्तीत्यमात्यानीक्षेत १०
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/11_yuvatayaH_pRthakpANibhyAn_d.md">
-<details open><summary><h3>11 युवतयः पृथक्पाणिभ्यान् दर्भतरुणकैर्नवनीतेनाङ्गुष्ठोपकनिष्ठिकाभ्यामक्षिणी ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 युवतयः पृथक्पाणिभ्यां दर्भतरुणकैर्नवनीतेनाङ्गुष्ठोपकनिष्ठिकाभ्यामक्षिणी आज्य पराच्यो विसृजेयुः ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/11_yuvatayaH_pRthakpANibhyAn_d.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 11. The young women (belonging to the house) should, with each hand separately, with their thumbs and fourth fingers, with young Darbha blades, salve their eyes with fresh butter, and throw (the Darbha blades) away, turning their faces away.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/11_yuvatayaH_pRthakpANibhyAn_d.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 युवतयः पृथक्पाणिभ्यां दर्भतरुणकैर्नवनीतेनाङ्गुष्ठोपकनिष्ठिकाभ्यामक्षिणी आज्य पराच्यो विसृजेयुः ११
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/12_imA_nArIravidhavAH_supatnIr.md">
-<details open><summary><h3>12 इमा नारीरविधवाः सुपत्नीरित्यञ्जाना ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इमा नारीरविधवाः सुपत्नीरित्यञ्जाना ईक्षेत १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/12_imA_nArIravidhavAH_supatnIr.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 12. (The performer of the ceremony) should look at them, while they are salving themselves, with (the verse), 'These women, being no widows, having noble husbands' (Rig-veda X, 18, 7).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/12_imA_nArIravidhavAH_supatnIr.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 इमा नारीरविधवाः सुपत्नीरित्यञ्जाना ईक्षेत १२
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/13_ashmanvatIrIyate_saMrabhadh.md">
-<details open><summary><h3>13 अश्मन्वतीरीयते संरभध्वमित्यश्मानङ्कर्ता प्रथमोऽभिमृशेत् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अश्मन्वतीरीयते संरभध्वमित्यश्मानङ्कर्ता प्रथमोऽभिमृशेत् १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/13_ashmanvatIrIyate_saMrabhadh.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 13. With (the verse), 'Carrying stones, (the river) streams forward; take hold of each other' (Rig-veda X, 53, 8) - the performer (of the ceremony) first should touch the stone.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/13_ashmanvatIrIyate_saMrabhadh.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अश्मन्वतीरीयते संरभध्वमित्यश्मानङ्कर्ता प्रथमोऽभिमृशेत् १३
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/14_athAparAjitAyAndishyavasthA.md">
-<details open><summary><h3>14 अथापराजितायान्दिश्यवस्थायाग्निनानडुहेन गोमयेन चाविच्छिन्नया ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथापराजितायान्दिश्यवस्थायाग्निनानडुहेन गोमयेन चाविच्छिन्नया चोदकधारयापो हि ष्ठा मयोभुव इति तृचेन परीमे गामनेषतेति परिक्रामत्सु जपेत् १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/14_athAparAjitAyAndishyavasthA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 14. After that, stationing himself to the northeast, while (the others) go round with the fire, with bull's dung, and with an uninterrupted stream of water, repeating the three verses, 'O waters, ye are wholesome' (Rig-veda X, 9, i seqq.), he should murmur the verse, 'These have led round the cow' (Rig-veda X, 155, 5).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/14_athAparAjitAyAndishyavasthA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथापराजितायान्दिश्यवस्थायाग्निनानडुहेन गोमयेन चाविच्छिन्नया चोदकधारयापो हि ष्ठा मयोभुव इति तृचेन परीमे गामनेषतेति परिक्रामत्सु जपेत् १४
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/15_pingalo-naDvAnpariNeyaH_syA.md">
-<details open><summary><h3>15 पिङ्गलोऽनड्वान्परिणेयः स्यादित्युदाहरन्ति ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पिङ्गलोऽनड्वान्परिणेयः स्यादित्युदाहरन्ति १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/15_pingalo-naDvAnpariNeyaH_syA.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 15. A tawny-coloured bull should he lead round - thus they say.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/15_pingalo-naDvAnpariNeyaH_syA.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 पिङ्गलोऽनड्वान्परिणेयः स्यादित्युदाहरन्ति १५
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/16_athopavishanti_yatrAbhiraMs.md">
-<details open><summary><h3>16 अथोपविशन्ति यत्राभिरंस्यमाना भवत्यहतेन ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथोपविशन्ति यत्राभिरंस्यमाना भवत्यहतेन वाससा प्रच्छाद्य १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/16_athopavishanti_yatrAbhiraMs.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 16. They then sit down at a place where they intend to tarry, having put on garments that have not yet been washed.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/16_athopavishanti_yatrAbhiraMs.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 अथोपविशन्ति यत्राभिरंस्यमाना भवत्यहतेन वाससा प्रच्छाद्य १६
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/17_Asate-svapanta_odayAt.md">
-<details open><summary><h3>17 आसतेऽस्वपन्त ओदयात् ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आसतेऽस्वपन्त ओदयात् १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/17_Asate-svapanta_odayAt.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 17. (There) they sit, avoiding to sleep, till sunrise.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/17_Asate-svapanta_odayAt.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 आसतेऽस्वपन्त ओदयात् १७
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/06/18_udita_Aditye_sauryANi.md">
-<details open><summary><h3>18 उदित आदित्ये सौर्याणि ...{Loading}...</h3></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उदित आदित्ये सौर्याणि स्वस्त्ययनानि च जपित्वान्नं संस्कृत्याप नः शोशुचदघमिति प्रत्यृचं हुत्वा  
 ब्राह्मणान्भोजयित्वा स्वस्त्ययनं वाचयीत गौः कंसोऽहतं वासश्च दक्षिणा १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/06/18_udita_Aditye_sauryANi.md">
-<details><summary><h4>Oldenberg ...{Loading}...</h4></summary>
+
+<details><summary>Oldenberg</summary>
 
 18 [^7] . After sunrise, having murmured the hymns sacred to the sun and the auspicious hymns, having prepared food, having made oblations with (the hymn), 'May he drive evil away from us with his shine' (Rig-veda I, 97), verse by verse, having given to the Brāhmaṇas to eat, he should cause (them) to pronounce auspicious words.
 
@@ -355,11 +302,10 @@ title = "०६"
 19. A cow, a cup of metal, and a garment that has not yet been washed, constitute the sacrificial fee.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/06/18_udita_Aditye_sauryANi.md">
-<details><summary><h4>मूलम् ...{Loading}...</h4></summary>
+
+<details><summary>मूलम्</summary>
 
 उदित आदित्ये सौर्याणि स्वस्त्ययनानि च जपित्वान्नं संस्कृत्याप नः शोशुचदघमिति प्रत्यृचं हुत्वा  
 ब्राह्मणान्भोजयित्वा स्वस्त्ययनं वाचयीत गौः कंसोऽहतं वासश्च दक्षिणा १८
 </details>
-</div>
+
